Converted to bilingual format.

--- a/01_agama/ekottarika/13/EA_13_03.md
+++ b/01_agama/ekottarika/13/EA_13_03.md
@@ -1,194 +1,268 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 13. Profit | 3. Nāḷijaṅgha'
+title: 'The Numerical Discourses | Chapter 13: Profit | 3. Nāḷijaṅgha'
 type: kramdown
 base: ../../../
 previous: EA_13_02.html
 next: EA_13_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 13: Profit
-### 3. Nāḷijaṅgha
-
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
-
-2\. It was then that there was a prominent man in the city of Śrāvastī who’s son had recently died. He had been loving and devoted, and they had never been apart before. When he saw his son dead, he became distraught as a result. He went in circles, came and went, and didn’t stay in one place. When he saw someone, he would ask them, “Have you seen my child?”
-{:#p2}
-
-3\. That man eventually made his way to Anāthapiṇḍada’s Park in Jeta’s Grove. He went to the Bhagavān and stood to one side. That man then asked the Bhagavān, “Ascetic Gautama, have you seen my child?”
-{:#p3}
-
-4\. The Bhagavān asked that prominent man, “Why do you look so unhappy and disturbed?”
-{:#p4}
-
-5\. The man replied, “Gautama, I couldn’t be otherwise. Why is that? Now, I had an only son who left me due to impermanence. He was loving and devoted, and he had never been out my sight before. I feel so much pity for my son, so much that I’ve gone mad. Now, I ask you, ascetic, ‘Have you seen my child?’”
-{:#p5}
-
-6\. The Bhagavān told him, “So it is, prominent man. As you’ve asked, birth, old age, illness, and death are the constant principles of the world. It’s painful to be separated from loved ones and painful to associate with enemies. Your son left you due to impermanence, so how could you not think of him?”
-{:#p6}
-
-7\. That man heard what the Bhagavān taught, but it didn’t enter his heart, so he disregarded it and left. He saw someone in front of him as he was walking and said to them, “The ascetic Gautama told me, ‘Separation from love ones is delightful.’ How could that ascetic be teaching the actual fact of the matter?”
-{:#p7}
-
-That person in front of him replied, “What happiness is there in being separated from loved ones?”
-
-
-8\. At some point later, he left the city of Śrāvastī. Not far away, there was a group of people who were playing a gambling game. The man thought, “These men are intelligent and wise. There’s nothing they don’t know. I’ll ask them about this matter.”
-{:#p8}
-
-9\. He went to those gamblers and asked them, “The ascetic Gautama told me, ‘It’s painful to be separated from loved ones and painful to associate with enemies. These things are delightful.’ What do you men think about that?”
-{:#p9}
-
-Those gamblers then replied to him, “What happiness is there in being separated from loved ones?! Calling that delightful makes no sense.”
-
-10\. That man then thought, “It’s a fact that the Tathāgata’s words are never false, but what happiness would there be in being separated from loved ones? It makes no sense.”
-{:#p10}
-
-11\. That man then went into Śrāvastī and stood at the palace gate. From outside, he called, “The ascetic Gautama has taught this: ‘Separation from loved ones and association with enemies are both delightful!’” Everyone in Śrāvastī and inside the palace told each other what he said. There wasn’t anyone who didn’t hear about it.
-{:#p11}
-
-12\. At some point later, Great King Prasenajit and Queen Mālikā were up in their high tower entertaining each other. King Prasenajit said to Queen Mālikā, “The ascetic Gautama has in fact said this: ‘Separation from loved ones and association with enemies are both delightful.’”
-{:#p12}
-
-The Queen replied, “I haven’t heard the Tathāgata teach this. If the Tathāgata did teach this, then it must not be false.”
-
-13\. King Prasenajit told her, “The teacher instructs his disciple, ‘Do this, abandon that.’ The disciple replies, ‘Yes, great teacher!’ You’re like that, Mālikā. Although the ascetic Gautama said that, your response is to say, ‘Yes, it’s not otherwise. There’s nothing false about it.’ You can go now. I have no need of you in my presence.”
-{:#p13}
-
-14\. Queen Mālikā then said to the priest Nāḷijaṅgha,[\[2\]](#n2){:#ref2} “Go now to visit Anāthapiṇḍada’s Park in Jeta’s Grove. Go to the Tathāgata in my name and kneel at the Tathāgata’s feet. Then tell the Bhagavān all about this matter: ‘Everyone in Śrāvastī and inside the palace are talking about this: “The ascetic Gautama has taught: ‘Separation from loves ones and association with enemies are both delightful.’ Is it a fact that the Bhagavān has taught this?”’ If the Bhagavān has anything to say, make sure to remember it well and then come back and tell me.”
-{:#p14}
-
-15\. The priest Nāḷijaṅgha accepted the queen’s instructions and went immediately to Anāthapiṇḍada’s Park. When he reached the Bhagavān, he exchanged greetings with him. After they had exchanged greetings, he sat to one side.
-{:#p15}
-
-16\. The priest then said to the Bhagavān, “Queen Mālikā bows to the Bhagavān’s feet and sends her polite inquiries: ‘Are you getting around easily? Have your travels been difficult? Is your eyesight going dark? Are you without troubles?’ She also said this: ‘Everyone in the city of Śrāvastī and the palace have been telling each other this, “The ascetic Gautama said: ‘Separation from loved ones and association with enemies are both delightful’!” Is it inaccurate to say that the Bhagavān taught this?’”
-{:#p16}
-
-17\. The Bhagavān then told the priest Nāḷijaṅgha, “There’s a prominent man here in Śrāvastī whose only son has died. He became distraught thinking about his son, and he lost his composure. He rushed east and west, asking anyone whom he met, ‘Has anyone seen my son?’ Indeed, priest, it’s painful to be separated from loved ones and painful to associate with enemies. There’s no joy in either of these things.
-{:#p17}
-
-18\. “There was once a day when the impermanence of an elderly mother also made a person so distraught they didn’t know east from west. It’s the same with the impermanence of an elderly father and the impermanence of brothers and sisters. Seeing these impermanent changes, people become distraught and lose their composure, not knowing east from west.
-{:#p18}
-
-19\. “Priest, there was once a newly married man in Śrāvastī whose handsomeness was unmatched. It wasn’t long before that man became impoverished. His wife’s parents saw this man’s impoverishment and thought, ‘We ought to take our daughter back and marry her to another man!’ That man heard this from his wife’s family. ‘Her parents want to take her back and give her to another family!’
-{:#p19}
-
-20\. “That man then hid a sharp knife in his clothes and went to his wife’s family. On that occasion, his wife was outside of the house spinning thread. The man went to his wife’s parents and asked, ‘Where is my wife?’
-{:#p20}
-
-“His mother-in-law replied, ‘Your wife is outside in the shade spinning thread.’
-
-21\. “That man then went to his wife. Reaching her, he asked his wife, ‘How can your parents take you back and marry you to someone else?’
-{:#p21}
-
-“His wife replied, ‘I believe they did say that, but I’m not happy to hear them say it.’
-
-
-22\. “That man then drew his sharp sword, grabbed his wife, and stabbed her to death. He also ran that sword through his own belly. As he did, he said, ‘I choose for both of us to die!’
-{:#p22}
-
-23\. “Priest, you should know in this way that it’s painful to be separated from loved ones and to associate with enemies. These are sorrows that truly can’t be described.”
-{:#p23}
-
-24\. The priest Nāḷijaṅgha then said to the Bhagavān, “So it is, Bhagavān. These torments are truly painful and unpleasant. Why is that? I once had a son who left me due to impermanence. I couldn’t stop thinking about him, day and night. He hasn’t left my heart. When I thought of that child, my mind was maddened. I rushed east and west and asked people I saw, ‘Has anyone seen my child?’ What the ascetic Gautama has said here is an honest statement. Now, I must get back to the many duties and problems of state.”
-{:#p24}
-
-The Bhagavān told him, “Now is a good time to do that.”
-
-25\. The priest Nāḷijaṅgha then rose from his seat, circled the Buddha three times, and departed. He went to Queen Mālikā and related to her what had transpired.
-{:#p25}
-
-26\. Queen Mālikā then went back to King Prasenajit. Arriving, she said to the Great King, “Now, I want to ask you a question. Please, Great King, respond according to what your own experience has been. How is it, Great King? Do you think about Prince \*Vaiḍūrya?”[\[3\]](#n3){:#ref3}
-{:#p26}
-
-The King replied, “How I do think of him! My love for him never leaves my heart.”
-
-27\. The Queen asked, “Suppose that something were to happen to the Prince. Great King, would it make you sad?”
-{:#p27}
-
-The King again replied, “Yes, Queen, it’s as you say.”
-
-28\. The Queen said, “Great King, you should know that notions of grief arise from being separated from loved ones. How is it, Great King? Do you think about Prince Ela?”[\[4\]](#n4){:#ref4}
-{:#p28}
-
-The King replied, “I love and respect him very much.”
-
-29\. The Queen said, “Suppose that something were to happen to the Prince. Great King, would it make you sad?”
-{:#p29}
-
-The King again replied, “It would be very sad.”
-
-30\. The Queen replied, “You should know in this way that there’s no joy in being separated from loved ones. How is it, Great King? Do you think about \*Śaradā[\[5\]](#n5){:#ref5} of the warrior tribe?”
-{:#p30}
-
-The King replied, “I think lovingly and respectfully of her.”
-
-31\. The Queen said, “How is it, Great King? If something were to happen to Queen Śaradā, would it make the Great King sad?”
-{:#p31}
-
-The King replied, “I would be saddened by that.”
-
-32\. The Queen said, “Great King, you should know that these are all pains of being separated from loved ones.”
-{:#p32}
-
-33\. The Queen said, “Does the King think about me?”
-{:#p33}
-
-The King said, “I think lovingly of you.”
-
-34\. The Queen said, “Suppose that something were to happen to me. Would it make the Great King sad?”
-{:#p34}
-
-The King said, “If something were to happen to you, I would be saddened by that.”
-
-35\. “Great King, you should know from this that there’s no joy in being separated from loved ones or associating with enemies.”
-{:#p35}
-
-36\. The Queen said, “How is it, Great King? Do you think about the people of Kāśī and Kośala?”
-{:#p36}
-
-The King said, “I think lovingly about the people of Kāśī and Kośala.”
-
-37\. The Queen said, “Suppose something were to happen to the people of Kāśī and Kośala. Would that make the Great King sad?”
-{:#p37}
-
-38\. The King said, “If something were to happen to the people of Kāśī and Kośala, I wouldn’t be able to continue living, to say nothing of becoming sad. Why is that? I’m sustained by the strength of the Kāśī and Kośala people, so I know from this that I wouldn’t survive it. How could I not be sad?”
-{:#p38}
-
-39\. The Queen said, “We know in these ways that there’s no joy in these pains of being separated from loved ones.”
-{:#p39}
-
-40\. King Prasenajit then knelt down on his right knee, pressed his palms together, and faced towards the Bhagavān. He said, “Amazing! It’s amazing that the Bhagavān teaches such a principle. If that ascetic Gautama were to come here, then I would like to have a conversation with him!” He also said to the Queen, “From this day on, I will consult with you every day, and you’ll wear the same clothes and ornaments as I do!”
-{:#p40}
-
-41\. The Bhagavān heard that conversation between Queen Mālikā and the Great King. He told the monks, “Queen Mālikā is really quite intelligent. If King Prasenajit were to ask me about this saying, I would also teach this meaning to the King. I would do it in the same way as the Queen, without any difference.”
-{:#p41}
-
-42\. He also told the monks, “The best realized laywoman among my disciples who is devoted and steadfast is that Queen Mālikā.”
-{:#p42}
-
-43\. When the monks heard what the Buddha taught, they rejoiced and approved of it.
-{:#p43}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a parallel to <a href="https://suttacentral.net/mn87" target="_blank">MN 87</a>, MĀ 216, T91, and T154.15. It would appear to have originated as an <em>avadāna</em> story that belongs to a genre about lay Buddhists dealing with doubters and situations that test their belief. This was a common theme in <em>avadāna</em> collections like the <em>Mahāsūtrālaṃkāra</em> by Aśvaghoṣa (trans. Kumārajīva, T201). Here, the primary story is of Queen Mālikā dealing with misrepresentations of the Buddha that caused her husband to dismiss her faith.<br/>
-This <em>sūtra</em> is titled Nāḷijaṅgha (竹膞, lit. “bamboo shank”) in the summary verse at the end of the Chapter 13. This is the name of a priest whom Mālikā sends to investigate a false rumor. Both MN 87 and MĀ 216 name the <em>sūtra</em> “Born from Love” (Piyajātika and 愛生, respectively), which references the background story of how the rumor started. The version found in a C. Jātaka collection (T154, No. 15) also names it after this background story, but there it’s titled “The Death of a Son” (子命過). Anshigao’s translation (T91) is titled similarly as “A Loving Priest Loses His Son and Can’t Part with Him” (婆羅門子命終愛念不離).<br/>
-The most interesting difference between these versions is that the Jātaka story makes no mention of a false rumor or the argument between Prasenajit and Queen Mālikā. This suggests that perhaps the canonical <em>sūtra</em> version has been greatly expanded. Given this, we can see why some versions were titled after the initial story, for it was the original name of a text that was built up. The tradition represented by EĀ perhaps put more emphasis on the teaching the Buddha gives to Nāḷijaṅgha at the midpoint of the narrative and titled the <em>sūtra</em> accordingly. [\[back\]](#ref1)
-2. {:#n2} <em>Nāḷijaṅgha</em>. C. 竹膊. The Taisho reading here translates the priest’s name to C. 竹膊, which lit. means “bamboo shoulder.” 竹 generally agrees with the P. <em>nāḷi</em>, which means a “tube.” Bamboo stalks are hollow tubes. However, there was some confusion between 膊 (“shoulder”) and 膞 (“shank”), where 膊 appears in the <em>sūtra</em> text and 膞 in the summary verse. Given that 膞 agrees with P. and S. <em>jaṅgha</em> and how easily the two characters could be mistaken for each other, I’m assuming that 膊 was a copyist error. [\[back\]](#ref2)
-3. {:#n3} <em>Vaiḍūrya</em>. C. 琉璃. The C. here (lit. “beryl” or “emerald”) typically translates S. <em>vaiḍūrya</em> (G. <em>veḍuriya</em>). This may refer to the same prince that P. names <em>viḍūḍabha</em> or <em>viṭaṭūbha</em>, given the instability of personal names we sometimes see in Buddhist texts. There is also a C. alt. reading as 流離 (EMC. lɪəu-lɪĕ, meaning lit. “stream let go”), but it doesn’t suggest an Indic name that I recognize. I’ve adopted the straightforward S. equivalent of the C. for the time being. [\[back\]](#ref3)
-4. {:#n4} <em>Ela</em>. C. 伊羅 (EMC. ɪi-la = G. <em>ela</em>?). This name is unknown to me as a prince of Prasenajit. The C. translit. could represent Indic sounds like G. <em>ela</em> (“water”), <em>era</em>, <em>ira</em> (a Babylonian month), or <em>ila</em>. The ending of the name has likely been truncated, but it’s difficult to guess what it was. [\[back\]](#ref4)
-5. {:#n5} <em>Śaradā</em>. C. 薩羅陀 (EMC. sat-la-da = G. <em>sarada</em>?). 翻梵語 (T2130.54.1019c23) says that the translit. should be 賖羅陀 (EMC. ʃɪă-la-da = G. <em>śarada</em>, lit. “autumn”) and claims that the word means “clear and bright” (perhaps referring to the autumn moon). P. has instead Vāsabhā for this name. It also indicates that this is a warrior woman. The C. gives no indication of gender here, but shortly she’ll be referred to as one of Prasenajit’s wives. [\[back\]](#ref5)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 23 July 2023
-{: .revised}
-
----
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 13: Profit</h2>
+
+<table class="trans">
+  <th class='ch'>(三) 竹膊</th>
+  <th class='en'>3. Nāḷijaṅgha</th>
+  <tr>
+    <td class='ch' title='T125.2.571b28'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571b29'>爾時，於舍衞城内，有一長者適喪一子。 甚愛敬念，未曾能捨。 彼見子死，便生狂惑。 周旋，往來，不停一處。 若見人時，便作是語： 「頗有見我兒乎？」</td>
+    <td id='p2'>2. It was then that there was a prominent man in the city of Śrāvastī who’s son had recently died. He had been loving and devoted, and they had never been apart before. When he saw his son dead, he became distraught as a result. He went in circles, came and went, and didn’t stay in one place. When he saw someone, he would ask them, “Have you seen my child?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c3'>爾時，彼人漸漸往至祇洹、精舍。 到世尊所，在一面住。 爾時，彼人白世尊曰： 「瞿曇沙門，頗見我兒乎？」</td>
+    <td id='p3'>3. That man eventually made his way to Anāthapiṇḍada’s Park in Jeta’s Grove. He went to the Bhagavān and stood to one side. That man then asked the Bhagavān, “Ascetic Gautama, have you seen my child?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c5'>世尊告長者曰： 「何故顏貎不悦，諸根錯亂？」</td>
+    <td id='p4'>4. The Bhagavān asked that prominent man, “Why do you look so unhappy and disturbed?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c6'>爾時，長者報瞿曇曰： 「焉得不爾。 所以然者？ 我今唯有一子，捨我無常。 甚愛、敬念，未曾離目前。 哀愍彼子故，令我生狂。 我今問沙門： 『見我兒耶？』」</td>
+    <td id='p5'>5. The man replied, “Gautama, I couldn’t be otherwise. Why is that? Now, I had an only son who left me due to impermanence. He was loving and devoted, and he had never been out my sight before. I feel so much pity for my son, so much that I’ve gone mad. Now, I ask you, ascetic, ‘Have you seen my child?’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c10'>世尊告曰： 「如是長者。 如汝所問，生、老、病、死世之常法。 恩愛離苦，怨憎會苦。 子捨汝無常，豈得不念乎？」</td>
+    <td id='p6'>6. The Bhagavān told him, “So it is, prominent man. As you’ve asked, birth, old age, illness, and death are the constant principles of the world. It’s painful to be separated from loved ones and painful to associate with enemies. Your son left you due to impermanence, so how could you not think of him?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c12'>爾時，彼人聞世尊所説，不入其懷，便捨而退去。 前行見人，復作是語： 「沙門瞿曇説言曰： 『恩愛分別，便有快樂。』 如沙門所説，為審爾不？」</td>
+    <td id='p7'>7. That man heard what the Bhagavān taught, but it didn’t enter his heart, so he disregarded it and left. He saw someone in front of him as he was walking and said to them, “The ascetic Gautama told me, ‘Separation from loved ones is delightful.’ How could that ascetic be teaching the actual fact of the matter?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c15'>前人對曰： 「恩愛別離有何樂哉？」</td>
+    <td>That person in front of him replied, “What happiness is there in being separated from loved ones?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c16'>當於爾時，去舍衞城。 不遠，有眾多人而共博戲。 爾時，彼人便作是念： 「此諸男子聰明、智慧。 無事不知。 我今當以此義問彼諸人。」</td>
+    <td id='p8'>8. At some point later, he left the city of Śrāvastī. Not far away, there was a group of people who were playing a gambling game. The man thought, “These men are intelligent and wise. There’s nothing they don’t know. I’ll ask them about this matter.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c19'>爾時，即詣博戯所，問眾人曰： 「沙門瞿曇向我説曰： 『恩愛別離苦，怨憎會苦。 此者快樂。』 諸人等今於意云何。」</td>
+    <td id='p9'>9. He went to those gamblers and asked them, “The ascetic Gautama told me, ‘It’s painful to be separated from loved ones and painful to associate with enemies. These things are delightful.’ What do you men think about that?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c21'>是時，諸博戲者報斯人曰： 「恩愛別離有何樂哉？！ 言快樂者，此義不然。」</td>
+    <td>Those gamblers then replied to him, “What happiness is there in being separated from loved ones?! Calling that delightful makes no sense.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c23'>是時，彼人便作是念： 「審如來言終不虚妄，云何恩愛別離當有樂耶？ 此義不然。」</td>
+    <td id='p10'>10. That man then thought, “It’s a fact that the Tathāgata’s words are never false, but what happiness would there be in being separated from loved ones? It makes no sense.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c25'>爾時，彼人入舍衞城，至宮門。 外稱： 「沙門瞿曇而作是教： 『恩愛別離，怨憎之會，此者快樂。』」 舍衞城及中宮内普傳此語。 靡不周遍。</td>
+    <td id='p11'>11. That man then went into Śrāvastī and stood at the palace gate. From outside, he called, “The ascetic Gautama has taught this: ‘Separation from loved ones and association with enemies are both delightful!’” Everyone in Śrāvastī and inside the palace told each other what he said. There wasn’t anyone who didn’t hear about it.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571c28'>當於爾時，大王波斯匿及摩利夫人共在高樓之上，相娯樂戲。 爾時，王波斯匿告摩利夫人曰： 「沙門瞿曇審有斯語： 『恩愛離別，怨憎之會，此皆快樂。』」</td>
+    <td id='p12'>12. At some point later, Great King Prasenajit and Queen Mālikā were up in their high tower entertaining each other. King Prasenajit said to Queen Mālikā, “The ascetic Gautama has in fact said this: ‘Separation from loved ones and association with enemies are both delightful.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a2'>夫人報曰： 「吾不從如來聞此言教。 設當如來有此教者，事亦不虚。」</td>
+    <td>The Queen replied, “I haven’t heard the Tathāgata teach this. If the Tathāgata did teach this, then it must not be false.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a4'>王波斯匿告曰： 「猶如師教弟子： 『為是，捨是。』 弟子報言： 『如是，大師。』 汝今摩利亦復如是。 彼瞿曇沙門雖作是説，汝應作是言： 『如是，不異。無有虚妄。』 然，卿速去。 不須在吾前立。」</td>
+    <td id='p13'>13. King Prasenajit told her, “The teacher instructs his disciple, ‘Do this, abandon that.’ The disciple replies, ‘Yes, great teacher!’ You’re like that, Mālikā. Although the ascetic Gautama said that, your response is to say, ‘Yes, it’s not otherwise. There’s nothing false about it.’ You can go now. I have no need of you in my presence.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a8'>爾時，摩利夫人語竹膊婆羅門曰： 「汝今往詣祇洹、精舍。 到如來所，持我名字，跪如來足。 復以此義具白世尊云： 『舍衞城内及中宮人有此言論： 「沙門瞿曇言： 『恩愛別離，怨憎合會，此皆快樂。』」 不審世尊，有此教耶？』 若世尊所有説者，汝善承受，還向我説。」</td>
+    <td id='p14'>14. Queen Mālikā then said to the priest Nāḷijaṅgha,<sup id="ref2"><a href="#n2">2</a></sup> “Go now to visit Anāthapiṇḍada’s Park in Jeta’s Grove. Go to the Tathāgata in my name and kneel at the Tathāgata’s feet. Then tell the Bhagavān all about this matter: ‘Everyone in Śrāvastī and inside the palace are talking about this: “The ascetic Gautama has taught: ‘Separation from loves ones and association with enemies are both delightful.’ Is it a fact that the Bhagavān has taught this?”’ If the Bhagavān has anything to say, make sure to remember it well and then come back and tell me.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a14'>是時，竹膊婆羅門受夫人教勅，尋往至祇洹、精舍。 到世尊所，共相問訊。 共相問訊已，在一面坐。</td>
+    <td id='p15'>15. The priest Nāḷijaṅgha accepted the queen’s instructions and went immediately to Anāthapiṇḍada’s Park. When he reached the Bhagavān, he exchanged greetings with him. After they had exchanged greetings, he sat to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a16'>時，彼梵志白世尊曰： 「摩利夫人禮世尊足，問訊： 『如來興居輕利？ 遊歩康強乎？ 訓化盲冥？ 得無勞耶？』 復作是語： 『此舍衞城内普傳此言： 「沙門瞿曇而作是教：『恩愛別離，怨憎之會，此樂快』哉！」 不審世尊有是言教耶？』」</td>
+    <td id='p16'>16. The priest then said to the Bhagavān, “Queen Mālikā bows to the Bhagavān’s feet and sends her polite inquiries: ‘Are you getting around easily? Have your travels been difficult? Is your eyesight going dark? Are you without troubles?’ She also said this: ‘Everyone in the city of Śrāvastī and the palace have been telling each other this, “The ascetic Gautama said: ‘Separation from loved ones and association with enemies are both delightful’!” Is it inaccurate to say that the Bhagavān taught this?’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a21'>爾時，世尊告竹膊婆羅門曰： 「於此，舍衞城内，有一長者喪失一子。 彼念此子狂惑，失性。 東西馳走，見人便問： 『誰見我子？』 然，婆羅門，恩愛別離苦，怨憎會苦。 此皆無有歡樂。</td>
+    <td id='p17'>17. The Bhagavān then told the priest Nāḷijaṅgha, “There’s a prominent man here in Śrāvastī whose only son has died. He became distraught thinking about his son, and he lost his composure. He rushed east and west, asking anyone whom he met, ‘Has anyone seen my son?’ Indeed, priest, it’s painful to be separated from loved ones and painful to associate with enemies. There’s no joy in either of these things.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a25'>「昔日，此舍衞城中，復有一老母無常，亦復狂惑，不識東西。 復有一老父無常，亦復有兄弟、姊妹皆悉無常。 彼見此無常之變，生狂，失性，不識東西。</td>
+    <td id='p18'>18. “There was once a day when the impermanence of an elderly mother also made a person so distraught they didn’t know east from west. It’s the same with the impermanence of an elderly father and the impermanence of brothers and sisters. Seeing these impermanent changes, people become distraught and lose their composure, not knowing east from west.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572a28'>「婆羅門，昔日此舍衞城中，有一人新迎婦，端正無雙。 爾時，彼人未經幾時，便自貧窮。 時，彼婦父母見此人貧，便生此念： 『吾當奪女，更嫁與餘人。』 彼人竊聞婦家。 『父母欲奪吾婦，更嫁與餘家。』</td>
+    <td id='p19'>19. “Priest, there was once a newly married man in Śrāvastī whose handsomeness was unmatched. It wasn’t long before that man became impoverished. His wife’s parents saw this man’s impoverishment and thought, ‘We ought to take our daughter back and marry her to another man!’ That man heard this from his wife’s family. ‘Her parents want to take her back and give her to another family!’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b4'>「爾時，彼人衣裏帶利刀，便往至婦家。 當於爾時，彼婦在牆外紡作。 是時，彼人往至婦父母家，問： 『我婦今為所在？』</td>
+    <td id='p20'>20. “That man then hid a sharp knife in his clothes and went to his wife’s family. On that occasion, his wife was outside of the house spinning thread. The man went to his wife’s parents and asked, ‘Where is my wife?’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b6'>「婦母報言： 『卿婦在牆外陰中紡作。』</td>
+    <td>“His mother-in-law replied, ‘Your wife is outside in the shade spinning thread.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b7'>「爾時，彼人便往至婦所。 到已，問婦曰： 『云卿父母欲奪汝，更餘嫁耶？』</td>
+    <td id='p21'>21. “That man then went to his wife. Reaching her, he asked his wife, ‘How can your parents take you back and marry you to someone else?’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b9'>「婦報言： 『信有此語，然我不樂聞此言耶？』</td>
+    <td>“His wife replied, ‘I believe they did say that, but I’m not happy to hear them say it.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b10'>「爾時，彼人即拔利劍，取婦，刺殺。 復，取利劍，自刺其腹。 並復，作是語： 『我二人倶取死。』</td>
+    <td id='p22'>22. “That man then drew his sharp sword, grabbed his wife, and stabbed her to death. He also ran that sword through his own belly. As he did, he said, ‘I choose for both of us to die!’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b12'>「婆羅門，當以此方便，知恩愛別離，怨憎會苦。 此皆愁憂實不可言。</td>
+    <td id='p23'>23. “Priest, you should know in this way that it’s painful to be separated from loved ones and to associate with enemies. These are sorrows that truly can’t be described.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b13'>爾時，竹膊婆羅門白世尊曰： 「如是，世尊。 有此諸惱，實苦、不樂。 所以然者？ 昔，我有一子，捨我，無常。 晝夜追憶。 不離心懷。 時，我念兒心意狂惑。 馳走東西，見人便問： 『誰見我兒？』 沙門瞿曇今所説者，誠如所言。 國事煩多欲還所止。」</td>
+    <td id='p24'>24. The priest Nāḷijaṅgha then said to the Bhagavān, “So it is, Bhagavān. These torments are truly painful and unpleasant. Why is that? I once had a son who left me due to impermanence. I couldn’t stop thinking about him, day and night. He hasn’t left my heart. When I thought of that child, my mind was maddened. I rushed east and west and asked people I saw, ‘Has anyone seen my child?’ What the ascetic Gautama has said here is an honest statement. Now, I must get back to the many duties and problems of state.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b18'>世尊告曰： 「今正是時。」</td>
+    <td>The Bhagavān told him, “Now is a good time to do that.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b19'>竹膊婆羅門即從坐起，遶佛三匝，而去。 往來至摩利夫人所，以此因縁具白夫人。</td>
+    <td id='p25'>25. The priest Nāḷijaṅgha then rose from his seat, circled the Buddha three times, and departed. He went to Queen Mālikā and related to her what had transpired.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b21'>時，摩利夫人復至波斯匿王所。 到已，白大王曰： 「今，欲有所問。 唯願，大王，事事見報。 云何大王？ 為念琉璃王子，不？」</td>
+    <td id='p26'>26. Queen Mālikā then went back to King Prasenajit. Arriving, she said to the Great King, “Now, I want to ask you a question. Please, Great King, respond according to what your own experience has been. How is it, Great King? Do you think about Prince *Vaiḍūrya?”<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b24'>王報言： 「甚念！ 愛愍不去心首。」</td>
+    <td>The King replied, “How I do think of him! My love for him never leaves my heart.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b24'>夫人問曰： 「若當王子有遷變者。 大王，為有憂也。」</td>
+    <td id='p27'>27. The Queen asked, “Suppose that something were to happen to the Prince. Great King, would it make you sad?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b25'>王復報言： 「如是，夫人，如汝所言。」</td>
+    <td>The King again replied, “Yes, Queen, it’s as you say.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b26'>夫人問曰： 「大王，當知恩愛別離，皆興愁想。 云何大王？ 為念伊羅王子乎？」</td>
+    <td id='p28'>28. The Queen said, “Great King, you should know that notions of grief arise from being separated from loved ones. How is it, Great King? Do you think about Prince Ela?”<sup id="ref4"><a href="#n4">4</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b28'>王報言： 「我甚愛敬。」</td>
+    <td>The King replied, “I love and respect him very much.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572b28'>夫人問曰： 「大王，若當王子有遷變者。 有愁憂耶？」</td>
+    <td id='p29'>29. The Queen said, “Suppose that something were to happen to the Prince. Great King, would it make you sad?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c1'>王報言： 「甚有愁憂。」</td>
+    <td>The King again replied, “It would be very sad.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c1'>夫人報言： 「當以此方便，知恩愛別離無有歡樂。 云何大王？ 念薩羅陀刹利種，不？」</td>
+    <td id='p30'>30. The Queen replied, “You should know in this way that there’s no joy in being separated from loved ones. How is it, Great King? Do you think about *Śaradā<sup id="ref5"><a href="#n5">5</a></sup> of the warrior tribe?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c3'>王報言： 「甚愛敬念。」</td>
+    <td>The King replied, “I think lovingly and respectfully of her.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c3'>夫人言： 「云何大王？ 若使薩羅陀夫人有變易者，大王為有憂耶？」</td>
+    <td id='p31'>31. The Queen said, “How is it, Great King? If something were to happen to Queen Śaradā, would it make the Great King sad?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c5'>王報言： 「吾有愁憂。」</td>
+    <td>The King replied, “I would be saddened by that.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c5'>夫人言： 「大王，當知恩愛別離此皆是苦。」</td>
+    <td id='p32'>32. The Queen said, “Great King, you should know that these are all pains of being separated from loved ones.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c6'>夫人言： 「王念我，不？」</td>
+    <td id='p33'>33. The Queen said, “Does the King think about me?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c7'>王言： 「我愛念汝。」</td>
+    <td>The King said, “I think lovingly of you.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c7'>夫人言： 「設當我身有變易者。 大王，有愁憂乎？」</td>
+    <td id='p34'>34. The Queen said, “Suppose that something were to happen to me. Would it make the Great King sad?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c8'>王言： 「設汝身有變易，便有愁憂。」</td>
+    <td>The King said, “If something were to happen to you, I would be saddened by that.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c9'>「大王，當以此方便，知恩愛別離、怨憎合會，無歡樂心。」</td>
+    <td id='p35'>35. “Great King, you should know from this that there’s no joy in being separated from loved ones or associating with enemies.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c10'>夫人言： 「云何，大王？ 念迦尸、拘薩羅人民乎？」</td>
+    <td id='p36'>36. The Queen said, “How is it, Great King? Do you think about the people of Kāśī and Kośala?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c11'>王言： 「我甚愛念迦尸、拘薩羅人民。」</td>
+    <td>The King said, “I think lovingly about the people of Kāśī and Kośala.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c12'>夫人言： 「迦尸、拘薩羅人民設當變易者。 大王，有愁憂乎？」</td>
+    <td id='p37'>37. The Queen said, “Suppose something were to happen to the people of Kāśī and Kośala. Would that make the Great King sad?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c13'>王言： 「迦尸、拘薩羅人民當有變易者，我命不存，況言愁憂乎。 所以然者？ 我因迦尸拘薩羅國人民力當得自存，以此方便知命尚不存。 何況不生愁憂乎？」</td>
+    <td id='p38'>38. The King said, “If something were to happen to the people of Kāśī and Kośala, I wouldn’t be able to continue living, to say nothing of becoming sad. Why is that? I’m sustained by the strength of the Kāśī and Kośala people, so I know from this that I wouldn’t survive it. How could I not be sad?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c17'>夫人言： 「以此知之，恩愛別離皆有此苦，無有歡樂。」</td>
+    <td id='p39'>39. The Queen said, “We know in these ways that there’s no joy in these pains of being separated from loved ones.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c18'>爾時，王波斯匿右膝著地，叉手合掌，而向世尊。 作是説： 「甚奇！甚奇！彼世尊而説此法。 若當彼沙門瞿曇來者，爾乃可得共言論。」 復語夫人： 「自今以後，當更看汝勝於常日，所著服飾，與吾無異。」</td>
+    <td id='p40'>40. King Prasenajit then knelt down on his right knee, pressed his palms together, and faced towards the Bhagavān. He said, “Amazing! It’s amazing that the Bhagavān teaches such a principle. If that ascetic Gautama were to come here, then I would like to have a conversation with him!” He also said to the Queen, “From this day on, I will consult with you every day, and you’ll wear the same clothes and ornaments as I do!”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c23'>爾時，世尊聞摩利夫人與大王立此論本。 告諸比丘： 「摩利夫人甚大聰明。 設當王波斯匿問我此語者，我亦當以此義向彼王説之。 如夫人向王所説而無有異。」</td>
+    <td id='p41'>41. The Bhagavān heard that conversation between Queen Mālikā and the Great King. He told the monks, “Queen Mālikā is really quite intelligent. If King Prasenajit were to ask me about this saying, I would also teach this meaning to the King. I would do it in the same way as the Queen, without any difference.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c26'>又，告諸比丘： 「我聲聞中，第一得證優婆斯篤信、牢固，所謂摩利夫人是。」</td>
+    <td id='p42'>42. He also told the monks, “The best realized laywoman among my disciples who is devoted and steadfast is that Queen Mālikā.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.572c28'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p43'>43. When the monks heard what the Buddha taught, they rejoiced and approved of it.</td>
+  </tr>
+</table>
+
+<hr/>
+
+<h3 id="notes">Notes</h3>
+
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0571b28" target="_blank">T125.2.571b28-2c29</a>. This <em>sūtra</em> is a parallel to <a href="https://suttacentral.net/mn87" target="_blank">MN 87</a>, MĀ 216, T91, and T154.15. It would appear to have originated as an <em>avadāna</em> story that belongs to a genre about lay Buddhists dealing with doubters and situations that test their belief. This was a common theme in <em>avadāna</em> collections like the <em>Mahāsūtrālaṃkāra</em> by Aśvaghoṣa (trans. Kumārajīva, T201). Here, the primary story is of Queen Mālikā dealing with misrepresentations of the Buddha that caused her husband to dismiss her faith.</p>
+<p>This <em>sūtra</em> is titled Nāḷijaṅgha (竹膞, lit. “bamboo shank”) in the summary verse at the end of the Chapter 13. This is the name of a priest whom Mālikā sends to investigate a false rumor. Both MN 87 and MĀ 216 name the <em>sūtra</em> “Born from Love” (Piyajātika and 愛生, respectively), which references the background story of how the rumor started. The version found in a C. Jātaka collection (T154, No. 15) also names it after this background story, but there it’s titled “The Death of a Son” (子命過). Anshigao’s translation (T91) is titled similarly as “A Loving Priest Loses His Son and Can’t Part with Him” (婆羅門子命終愛念不離).</p>
+<p>The most interesting difference between these versions is that the Jātaka story makes no mention of a false rumor or the argument between Prasenajit and Queen Mālikā. This suggests that perhaps the canonical <em>sūtra</em> version has been greatly expanded. Given this, we can see why some versions were titled after the initial story, for it was the original name of a text that was built up. The tradition represented by EĀ perhaps put more emphasis on the teaching the Buddha gives to Nāḷijaṅgha at the midpoint of the narrative and titled the <em>sūtra</em> accordingly. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Nāḷijaṅgha</em>. C. 竹膊. The Taisho reading here translates the priest’s name to C. 竹膊, which lit. means “bamboo shoulder.” 竹 generally agrees with the P. <em>nāḷi</em>, which means a “tube.” Bamboo stalks are hollow tubes. However, there was some confusion between 膊 (“shoulder”) and 膞 (“shank”), where 膊 appears in the <em>sūtra</em> text and 膞 in the summary verse. Given that 膞 agrees with P. and S. <em>jaṅgha</em> and how easily the two characters could be mistaken for each other, I’m assuming that 膊 was a copyist error. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Vaiḍūrya</em>. C. 琉璃. The C. here (lit. “beryl” or “emerald”) typically translates S. <em>vaiḍūrya</em> (G. <em>veḍuriya</em>). This may refer to the same prince that P. names <em>viḍūḍabha</em> or <em>viṭaṭūbha</em>, given the instability of personal names we sometimes see in Buddhist texts. There is also a C. alt. reading as 流離 (EMC. lɪəu-lɪĕ, meaning lit. “stream let go”), but it doesn’t suggest an Indic name that I recognize. I’ve adopted the straightforward S. equivalent of the C. for the time being. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>Ela</em>. C. 伊羅 (EMC. ɪi-la = G. <em>ela</em>?). This name is unknown to me as a prince of Prasenajit. The C. translit. could represent Indic sounds like G. <em>ela</em> (“water”), <em>era</em>, <em>ira</em> (a Babylonian month), or <em>ila</em>. The ending of the name has likely been truncated, but it’s difficult to guess what it was. [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>Śaradā</em>. C. 薩羅陀 (EMC. sat-la-da = G. <em>sarada</em>?). 翻梵語 (T2130.54.1019c23) says that the translit. should be 賖羅陀 (EMC. ʃɪă-la-da = G. <em>śarada</em>, lit. “autumn”) and claims that the word means “clear and bright” (perhaps referring to the autumn moon). P. has instead Vāsabhā for this name. It also indicates that this is a warrior woman. The C. gives no indication of gender here, but shortly she’ll be referred to as one of Prasenajit’s wives. [<a href="#ref5">back</a>]</p></li>
+</ol>
+<hr/>
+
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 12 July 2023</p>
+
+<hr/>
