--- a/01_agama/ekottarika/13/EA_13_04.md
+++ b/01_agama/ekottarika/13/EA_13_04.md
@@ -1,95 +1,119 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 13. Profit | 4. Nakula'
+title: 'The Numerical Discourses | Chapter 13: Profit | 4. Nakula'
 type: kramdown
 base: ../../../
 previous: EA_13_03.html
 next: EA_13_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 13: Profit
-### 4. Nakula
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 13: Profit</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Deer Park of the Yakṣiṇī’s Grove at Śiśumāragiri in the country of Bharga.[\[2\]](#n2){:#ref2}
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 那憂羅</th>
+  <th class='en'>4. Nakula</th>
+  <tr>
+    <td class='ch' title='T125.2.573a1'>聞如是：一時，佛在拔祇國、尸牧摩羅山、鬼林、鹿園中。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying in the Deer Park of the Yakṣiṇī’s Grove at Śiśumāragiri in the country of Bharga.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573a2'>爾時，4那憂羅公長者往至世尊所，頭面禮足，在一面坐。 須臾退坐，白世尊曰： 「我今年朽，加復抱病。 多諸憂惱。 唯願，世尊，隨時教訓，使眾生類長夜獲安隱。」</td>
+    <td id='p2'>2. It was then that the wealthy man Grandfather Nakula<sup id="ref3"><a href="#n3">3</a></sup> came to the Bhagavān, bowed at his feet, and sat to one side. Immediately upon withdrawing to his seat, he said to the Bhagavān, “I’m old and weak and wrapped in illness on top of that. My miseries are many. Please, Bhagavān, give instruction on this occasion so that sentient beings will obtain their safety for the long night.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573a5'>爾時，世尊告長者曰： 「如汝所言，身多畏痛何可恃怙。 但以薄皮而覆其上。 長者，當知其有依憑此身者，正可須臾之樂，此是愚心，非智慧者所貴。</td>
+    <td id='p3'>3. The Bhagavān then said to that wealthy man, “As you say, how can one depend upon a body with its many infirmities? It has just this thin skin covering it. Wealthy man, you should know that, even when happy momentarily, relying on this body is a foolish idea not valued by the wise.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a9'>「是故，長者，雖心有病，令心無病。 如是，長者，當作是學。」</td>
+    <td id='p4'>4. “Therefore, wealthy man, although the body has its illness, make your heart healthy. Thus, wealthy man, you should train yourself.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573a10'>爾時，長者聞説斯言，從坐起，禮世尊足，便退而去。 爾時，長者復作是念： 「我今可往至尊者舍利弗所，問斯義。」 舍利弗去彼，不遠在樹下坐。 是時，那優羅公往至舍利弗所，頭面禮足，在一面坐。</td>
+    <td id='p5'>5. Upon hearing these words, that wealthy man then rose from his seat, bowed at the Bhagavān’s feet, withdrew, and departed. That wealthy man then thought, “Now, I could go over to Venerable Śāriputra and ask him the meaning of this.” Śāriputra had departed, but he was sitting not far away under a tree. Grandfather Nakula went to Śāriputra, bowed his head at his feet, and then sat to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a15'>是時，舍利弗問長者： 「顏貎和悦。 諸根寂靜必有所因。 長者，故當從佛聞法耶？」</td>
+    <td id='p6'>6. Śāriputra then asked the wealthy man, “You are looking cheerful today. What’s caused your faculties to be so peaceful? Could it be, wealthy man, that you’ve heard Dharma from the Buddha?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a17'>時，長者白舍利弗言： 「云何，尊者舍利弗？ 顏貎焉得不和悦乎？ 所以然者？ 向者世尊以甘露之法漑灌胸懷。」</td>
+    <td>The wealthy man then said to Śāriputra, “How is it, Venerable Śāriputra? Has my appearance become cheerful? Why would that be? A while ago, the Bhagavān watered my heart with the Dharma of ambrosia.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a19'>舍利弗言： 「云何長者以甘露之法漑灌胸懷？」</td>
+    <td id='p7'>7. Śāriputra asked, “How does a wealthy man’s heart get watered with the Dharma of ambrosia?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573a20'>長者報言： 「於是，舍利弗，我至世尊所，頭面禮足，在一面坐。 爾時，我白世尊曰： 『年朽長大，恒抱疾病。 多諸苦痛不可稱計。 唯願，世尊，分別此身，普使眾生獲此安隱。』</td>
+    <td id='p8'>8. The wealthy man replied, “Here, Śāriputra, I went to the Bhagavān, bowed my head at his feet, and sat to one side. Then, I said to him, ‘I’ve grown old and weak, and I’m always wrapped in illness. My many pains are indescribable. Please, Bhagavān, discern this body so that sentient beings everywhere will obtain their safety.’<sup id="ref4"><a href="#n4">4</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573a24'>「爾時，世尊便告我言： 『如是，長者。 此身多諸衰苦，但以薄皮而覆其上。 長者，當知其有恃怙此身者，正可有斯須之樂，不知長夜受苦無量。 是故，長者，此身雖有患，當使心無患。 如是，長者，當作是學。』 世尊以此甘露之法而見漑灌。」</td>
+    <td id='p9'>9. “The Bhagavān then told me, ‘So it is, wealthy man. This body has many infirmities, and it has just this thin skin covering it. Wealthy man, you should know that, even when momentarily happy, one who relies on this body doesn’t know the long night of suffering they’ve experienced, which is measureless. Therefore, wealthy man, though this body has its troubles, you should make your heart untroubled. Thus, wealthy man, you should train yourself.’ That was how the Bhagavān watered me with the Dharma of ambrosia.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b1'>舍利弗言： 「云何，長者？ 更不重問如來此義乎？ 『云何身有患心無患？ 云何身有病心無病？』」</td>
+    <td id='p10'>10. Śāriputra said, “How is it, wealthy man? Did you not ask more questions of the Tathāgata about what he meant? ‘How can the body have its troubles but the mind not be troubled? How can the body have its illness but the mind be healthy?’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b3'>長者白舍利弗言： 「實無此辯重問世尊，身有患心有患，身有患心無患。 尊者舍利弗必有此辯。 願具分別。」</td>
+    <td id='p11'>11. The wealthy man said to Śāriputra, “It’s true that I didn’t ask the Bhagavān questions about the body having its troubles and the mind being troubled, or about the body having its troubles but the mind being untroubled. But Venerable Śāriputra surely has an explanation. I would like a complete analysis of this.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b5'>舍利弗言： 「諦聽，諦聽，善思念之。 吾當與汝廣演其義。」</td>
+    <td id='p12'>12. Śāriputra said, “Listen closely! Listen closely, and consider it well. I will give you a detailed explanation of what he meant.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b6'>對曰： 「如是，舍利弗」，從彼受教。</td>
+    <td>He replied, “Yes, Śāriputra,” and accepted a teaching from him.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b7'>舍利弗告長者曰： 「於是，長者，凡夫之人不見聖人。 不受聖教，不順其訓。 亦不見善知識，不與善知識。 從事，彼計色為我，色是我所，我是色所，色中有我，我中有色。 彼色、我色合會一處，彼色、我色以集一處。 色便敗壞，遷移，不停。 於中復起愁憂苦惱。</td>
+    <td id='p13'>13. Śāriputra told the wealthy man, “Here, wealthy man, there’s an ordinary person who doesn’t meet a noble person. They don’t receive the noble teaching or follow its instruction. They don’t meet good friends or accompany good friends. As a result of this, they imagine that form is self, that form belongs to self, that self belongs to form, that self is in form, or that form is in self. [They imagine that] other form and self form combine in one place, or that other form and self form collect in one place. Form then deteriorates, changes, and doesn’t remain. Sorrow, lamentation, pain, and trouble arise from that.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b13'>「痛⋯想⋯行⋯識皆觀我有識⋯識中有我，我中有識。 彼識我識合會一處，彼識我識以會一處。 識便敗壞，遷移，不停。 於中，復起愁、憂、苦、惱。 如是，長者，身亦有患，心亦有患。」</td>
+    <td id='p14'>14. “Regarding feeling … conception … volition … consciousness, they observe that self possesses consciousness … that self is in consciousness, or that consciousness is in self. [They observe] that other consciousness and self consciousness combine in one place or that other consciousness and self consciousness collect in one place. Consciousness deteriorates, changes, and doesn’t remain. Sorrow, lamentation, pain, and trouble arise from that. In this way, wealthy man, the body has its troubles, and the mind is also troubled.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b17'>長者問舍利弗曰： 「云何身有患，心無患耶？」</td>
+    <td id='p15'>15. The wealthy man asked Śāriputra, “How does the body have its trouble but the mind is untroubled?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b18'>舍利弗言： 「於是，長者，賢聖弟子承事聖賢，修行禁法，與善知識。 從事，親近善知識。 彼亦不觀我有色，不見色中有我，我中有色。 不見色是我所，我是色所。 彼色遷轉，不住。 彼色以移易，不生愁、憂、苦、惱、憂色之患。</td>
+    <td id='p16'>16. Śāriputra said, “Here, wealthy man, a noble disciple serves a noble, cultivates the discipline, and accompanies good friends. From this, they are close to good friends. They don’t observe self as possessing form, and they don’t view self as being in form or that form is in self. They don’t view form as belonging to self or that self belongs to form. That form [deteriorates,] changes, and doesn’t remain. The changing of that form doesn’t give rise to the suffering of sorrow, lamentation, pain, and trouble.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b23'>「亦復不見痛⋯想⋯行⋯識，不見識中有我，我中有識。 亦不見識我所，亦不見我所識。 彼識、我識以會一處⋯ 識便敗壞⋯ 於中，不起愁、憂、苦、惱。 如是，長者，身有患而心無患。</td>
+    <td id='p17'>17. “They don’t view feeling … conception … volition … consciousness [as self], and they don’t view that self as being in consciousness or that consciousness is in self. They don’t view consciousness as belonging to self or that self belongs to consciousness. [They don’t view] other consciousness and self consciousness as combining in one place … Consciousness then deteriorates … This doesn’t give rise to sorrow, lamentation, pain, and trouble. In this way, wealthy man, the body has its troubles, but the mind is untroubled.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b27'>「是故，長者，當作是習： 遺身，去心，亦無染著。 長者，當作是學。」</td>
+    <td id='p18'>18. “Therefore, wealthy man, you should perform this training: Let go of the body, leave behind the mind, and have no attachments. Thus, wealthy man, you should train yourself.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573b28'>爾時，那憂羅公聞舍利弗所説歡喜，奉行。</td>
+    <td id='p19'>19. When Grandfather Nakula heard what Śāriputra had taught, he rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the wealthy man Grandfather Nakula[\[3\]](#n3){:#ref3} came to the Bhagavān, bowed at his feet, and sat to one side. Immediately upon withdrawing to his seat, he said to the Bhagavān, “I’m old and weak and wrapped in illness on top of that. My miseries are many. Please, Bhagavān, give instruction on this occasion so that sentient beings will obtain their safety for the long night.”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then said to that wealthy man, “As you say, how can one depend upon a body with its many infirmities? It has just this thin skin covering it. Wealthy man, you should know that, even when happy momentarily, relying on this body is a foolish idea not valued by the wise.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, wealthy man, although the body has its illness, make your heart healthy. Thus, wealthy man, you should train yourself.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0573a01" target="_blank">T125.2.573a1-b29</a>. This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.1" target="_blank">SN 22.1</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>the Yakṣiṇī’s Grove</em>. C. 鬼林, P. <em>bhesakaḷāvana</em>, S. <em>bhīsanikāvana</em>. In both the P. and S. tradition, this grove was named after a female <em>yakṣa</em> which was considered to be the forest’s guardian. 鬼 (“demon”) typically translated S. <em>yakṣa</em>, so I’ve chosen to translate the placename as the Yakṣiṇī’s Grove.</p>
+<p><em>Śiśumāragiri</em>. 尸牧摩羅山 (EMC. ʃɪi-mɪuk-mua-la + C. “mountain” = G. <em>śimukamara</em> = S. <em>śiśumāragiri</em>, “crocodile”), P. <em>susumāra</em>. This was the name of the capitol city of Bharga. It would seem that a corruption of the translit. has taken place, either in the original Pkt. or the C. text. The Taisho reading has <em>-muk-</em> where we would expect <em>-śu-</em>. The 翻梵語 (T2130.54.1043a2) tells us that 尸牧摩羅 means “child killer,” which is the lit. meaning of S. <em>śiśumāra</em> (<em>śiśu-</em> = child and <em>-māra</em> = killing). This confirms that it was the same placename (which idiomatically means “Mount Crocodile” in S.). Later C. editors corrected the translit. to 尸收摩羅 (EMC. ʃɪi-ʃɪəu-mua-la = G. <em>śiśumara</em>), indicating that they were aware of the S. pronunciation.</p>
+<p><em>the country of Bharga</em>. C. 拔祇國 (EMC. bʌt-giĕ + C. “country” = G. <em>*bhaga</em>), P. Bhagga, S. Bharga. I’ve adopted the S. attestation for the G., which lacks an attestation. Gandhari generally didn’t allow double consonants like S. <em>-rg-</em> and P. <em>-gg-</em>), so it likely would have been G. <em>bhaga</em>. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Grandfather Nakula</em>. C. 那憂羅公 (EMC. na-•ɪəu-la + C. “grandfather”? = G. <em>na’ulapida</em>? = S. <em>nakulapitā</em>, “Grandfather Nakula”?), P. <em>nakulapitā</em>. Another parallel is SĀ 1.175 (T99.107), where his name is translit. as 那拘羅 (EMC. na-kɪu-la = G. <em>nakula</em> = S. <em>nakula</em>), which lacks the addition of P. <em>pitā</em>. 公 means “grandfather” or an “official” rather than simply “father,” indicating that perhaps the addition of <em>pitā</em> was more a comment on Nakula’s advanced years than a relationship to someone else. However, in the Theravāda <em>sutta</em>s there is a pair of characters called P. Nakulapitā (“Nakula’s father”) and P. Nakulamātā (“Nakula’s mother”), so perhaps the stories surrounding them differed from one tradition to the next. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>There are a couple notable differences between this translation of Nakula’s request and the one at the start of the <em>sūtra</em>. My assumption is that this is a case of inconsistent translation or perhaps the result of later editing and/or textual corruption, which are problems that we often contend with throughout EĀ. This version, though, appears to be closer to the original, given that here Nakula directly asks the Buddha about the nature of the body and its infirmities. [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. Upon hearing these words, that wealthy man then rose from his seat, bowed at the Bhagavān’s feet, withdrew, and departed. That wealthy man then thought, “Now, I could go over to Venerable Śāriputra and ask him the meaning of this.” Śāriputra had departed, but he was sitting not far away under a tree. Grandfather Nakula went to Śāriputra, bowed his head at his feet, and then sat to one side.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 24 July 2023</p>
 
-6\. Śāriputra then asked the wealthy man, “You are looking cheerful today. What’s caused your faculties to be so peaceful? Could it be, wealthy man, that you’ve heard Dharma from the Buddha?”
-{:#p6}
-
-The wealthy man then said to Śāriputra, “How is it, Venerable Śāriputra? Has my appearance become cheerful? Why would that be? A while ago, the Bhagavān watered my heart with the Dharma of ambrosia.”
-
-
-7\. Śāriputra asked, “How does a wealthy man’s heart get watered with the Dharma of ambrosia?”
-{:#p7}
-
-8\. The wealthy man replied, “Here, Śāriputra, I went to the Bhagavān, bowed my head at his feet, and sat to one side. Then, I said to him, ‘I’ve grown old and weak, and I’m always wrapped in illness. My many pains are indescribable. Please, Bhagavān, discern this body so that sentient beings everywhere will obtain their safety.’[\[4\]](#n4){:#ref4}
-{:#p8}
-
-9\. “The Bhagavān then told me, ‘So it is, wealthy man. This body has many infirmities, and it has just this thin skin covering it. Wealthy man, you should know that, even when momentarily happy, one who relies on this body doesn’t know the long night of suffering they’ve experienced, which is measureless. Therefore, wealthy man, though this body has its troubles, you should make your heart untroubled. Thus, wealthy man, you should train yourself.’ That was how the Bhagavān watered me with the Dharma of ambrosia.”
-{:#p9}
-
-10\. Śāriputra said, “How is it, wealthy man? Did you not ask more questions of the Tathāgata about what he meant? ‘How can the body have its troubles but the mind not be troubled? How can the body have its illness but the mind be healthy?’”
-{:#p10}
-
-11\. The wealthy man said to Śāriputra, “It’s true that I didn’t ask the Bhagavān questions about the body having its troubles and the mind being troubled, or about the body having its troubles but the mind being untroubled. But Venerable Śāriputra surely has an explanation. I would like a complete analysis of this.”
-{:#p11}
-
-12\. Śāriputra said, “Listen closely! Listen closely, and consider it well. I will give you a detailed explanation of what he meant.”
-{:#p12}
-
-He replied, “Yes, Śāriputra,” and accepted a teaching from him.
-
-
-13\. Śāriputra told the wealthy man, “Here, wealthy man, there’s an ordinary person who doesn’t meet a noble person. They don’t receive the noble teaching or follow its instruction. They don’t meet good friends or accompany good friends. As a result of this, they imagine that form is self, that form belongs to self, that self belongs to form, that self is in form, or that form is in self. [They imagine that] other form and self form combine in one place, or that other form and self form collect in one place. Form then deteriorates, changes, and doesn’t remain. Sorrow, lamentation, pain, and trouble arise from that.
-{:#p13}
-
-14\. “Regarding feeling … conception … volition … consciousness, they observe that self possesses consciousness … that self is in consciousness, or that consciousness is in self. [They observe] that other consciousness and self consciousness combine in one place or that other consciousness and self consciousness collect in one place. Consciousness deteriorates, changes, and doesn’t remain. Sorrow, lamentation, pain, and trouble arise from that. In this way, wealthy man, the body has its troubles, and the mind is also troubled.”
-{:#p14}
-
-15\. The wealthy man asked Śāriputra, “How does the body have its trouble but the mind is untroubled?”
-{:#p15}
-
-16\. Śāriputra said, “Here, wealthy man, a noble disciple serves a noble, cultivates the discipline, and accompanies good friends. From this, they are close to good friends. They don’t observe self as possessing form, and they don’t view self as being in form or that form is in self. They don’t view form as belonging to self or that self belongs to form. That form [deteriorates,] changes, and doesn’t remain. The changing of that form doesn’t give rise to the suffering of sorrow, lamentation, pain, and trouble.
-{:#p16}
-
-17\. “They don’t view feeling … conception … volition … consciousness [as self], and they don’t view that self as being in consciousness or that consciousness is in self. They don’t view consciousness as belonging to self or that self belongs to consciousness. [They don’t view] other consciousness and self consciousness as combining in one place … Consciousness then deteriorates … This doesn’t give rise to sorrow, lamentation, pain, and trouble. In this way, wealthy man, the body has its troubles, but the mind is untroubled.
-{:#p17}
-
-18\. “Therefore, wealthy man, you should perform this training: Let go of the body, leave behind the mind, and have no attachments. Thus, wealthy man, you should train yourself.”
-{:#p18}
-
-19\. When Grandfather Nakula heard what Śāriputra had taught, he rejoiced and approved.
-{:#p19}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.1" target="_blank">SN 22.1</a>. [\[back\]](#ref1)
-2. {:#n2} <em>the Yakṣiṇī’s Grove</em>. C. 鬼林, P. <em>bhesakaḷāvana</em>, S. <em>bhīsanikāvana</em>. In both the P. and S. tradition, this grove was named after a female <em>yakṣa</em> which was considered to be the forest’s guardian. 鬼 (“demon”) typically translated S. <em>yakṣa</em>, so I’ve chosen to translate the placename as the Yakṣiṇī’s Grove.<br/>
-<em>Śiśumāragiri</em>. 尸牧摩羅山 (EMC. ʃɪi-mɪuk-mua-la + C. “mountain” = G. <em>śimukamara</em> = S. <em>śiśumāragiri</em>, “crocodile”), P. <em>susumāra</em>. This was the name of the capitol city of Bharga. It would seem that a corruption of the translit. has taken place, either in the original Pkt. or the C. text. The Taisho reading has <em>-muk-</em> where we would expect <em>-śu-</em>. The 翻梵語 (T2130.54.1043a2) tells us that 尸牧摩羅 means “child killer,” which is the lit. meaning of S. <em>śiśumāra</em> (<em>śiśu-</em> = child and <em>-māra</em> = killing). This confirms that it was the same placename (which idiomatically means “Mount Crocodile” in S.). Later C. editors corrected the translit. to 尸收摩羅 (EMC. ʃɪi-ʃɪəu-mua-la = G. <em>śiśumara</em>), indicating that they were aware of the S. pronunciation.<br/>
-<em>the country of Bharga</em>. C. 拔祇國 (EMC. bʌt-giĕ + C. “country” = G. <em>\*bhaga</em>), P. Bhagga, S. Bharga. I’ve adopted the S. attestation for the G., which lacks an attestation. Gandhari generally didn’t allow double consonants like S. <em>-rg-</em> and P. <em>-gg-</em>, so it likely would have been G. <em>bhaga</em>. [\[back\]](#ref2)
-3. {:#n3} <em>Grandfather Nakula</em>. C. 那憂羅公 (EMC. na-•ɪəu-la + C. “grandfather”? = G. <em>na’ulapida</em>? = S. <em>nakulapitā</em>, “Grandfather Nakula”?), P. <em>nakulapitā</em>. Another parallel is SĀ 1.175 (T99.107), where his name is translit. as 那拘羅 (EMC. na-kɪu-la = G. <em>nakula</em> = S. <em>nakula</em>), which lacks the addition of P. <em>pitā</em>. 公 means “grandfather” or an “official” rather than simply “father,” indicating that perhaps the addition of <em>pitā</em> was more a comment on Nakula’s advanced years than a relationship to someone else. However, in the Theravāda <em>sutta</em>s there is a pair of characters called P. Nakulapitā (“Nakula’s father”) and P. Nakulamātā (“Nakula’s mother”), so perhaps the stories surrounding them differed from one tradition to the next. [\[back\]](#ref3)
-4. {:#n4} There are a couple notable differences between this translation of Nakula’s request and the one at the start of the <em>sūtra</em>. My assumption is that this is a case of inconsistent translation or perhaps the result of later editing and/or textual corruption, which are problems that we often contend with throughout EĀ. This version, though, appears to be closer to the original, given that here Nakula directly asks the Buddha about the nature of the body and its infirmities. [\[back\]](#ref4)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 24 July 2023
-{: .revised}
-
----
+<hr/>
