--- a/01_agama/ekottarika/13/EA_13_05.md
+++ b/01_agama/ekottarika/13/EA_13_05.md
@@ -1,137 +1,211 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 13. Profit | 5. Sundarī'
+title: 'The Numerical Discourses | Chapter 13: Profit | 5. Sundarī'
 type: kramdown
 base: ../../../
 previous: EA_13_04.html
 next: EA_13_06.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 13: Profit
-### 5. Sundarī
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 13: Profit</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. At the time, he was teaching Dharma to an assembly numbering in the hundreds of thousands that surrounded him front and back.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五) 孫陀利</th>
+  <th class='en'>5. Sundarī</th>
+  <tr>
+    <td class='ch' title='T125.2.573c1'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。 爾時，世尊與數千萬眾前後圍遶，而為説法。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. At the time, he was teaching Dharma to an assembly numbering in the hundreds of thousands that surrounded him front and back.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573c3'>爾時，江側婆羅門，身負重擔，便至世尊所。 到已，捨擔一面，在世尊所，默然而住。 爾時，彼婆羅門作是思惟： 「今日，沙門瞿曇與數千萬眾前後圍遶，而為説法。 我今清淨與沙門瞿曇，等、無有異。 所以然者？ 沙門瞿曇食好粳糧，種種餚饌。 今，我食菓蓏以自濟命。」</td>
+    <td id='p2'>2. At the time, a priest on the bank of a river went to the Bhagavān while carrying a heavy load. When he arrived, he set his load down to one side and stood silently in front of the Bhagavān. That priest then had this thought, “Today, the ascetic Gautama is teaching Dharma to an assembly numbering in the hundreds of thousands that surrounds him front and back. Now, I’m equally as clean as that ascetic Gautama, without any difference. Why is that? The ascetic Gautama eats excellent rice and a variety of delicacies. I’m eating fruits and vegetables to sustain myself.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573c9'>爾時，世尊以知婆羅門心中所念，告諸比丘： 「其有眾生以二十一結染著心者。 當觀彼人必墮惡趣不生善處。 云何為二十一結？ 瞋心結，恚害心結，睡眠心結，調戲心結，疑是心結，怒為心結，忌為心結，惱為心結，疾為心結，憎為心結，無慚心結，無愧心結，幻為心結，姦為心結，僞為心結，諍為心結，憍為心結，慢為心結，妬為心結，増上慢為心結，貪為心結。</td>
+    <td id='p3'>3. Knowing the thought that was in that priest’s mind, the Bhagavān then addressed the monks, “The minds of some sentient beings are defiled by twenty-one bonds.<sup id="ref2"><a href="#n2">2</a></sup> One should observe those people as sure to fall into bad destinies and not be born in a good place. What are the twenty-one bonds? Anger is a mental bond, hatefulness is a mental bond, sleepiness is a mental bond, restlessness is a mental bond, doubt is a mental bond, wrath is a mental bond, jealousy is a mental bond, frustration is a mental bond, envy is a mental bond, dislike is a mental bond, shamelessness is a mental bond, lack of conscience is a mental bond, deception is a mental bond, fraud is a mental bond, dishonesty is a mental bond, enmity is a mental bond, haughtiness is a mental bond, pride is a mental bond, spitefulness is a mental bond, arrogance is a mental bond, and greed is a mental bond.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573c17'>「諸比丘，若有人有此二十一結染著心者，當觀其人必墮惡趣，不生善處。 猶如白㲲新衣。 久久朽故，多諸塵垢。 意欲染成其色，青、黄、赤、黒，終不得成。 何以故？ 以有塵垢故。</td>
+    <td id='p4'>4. “Monks, if someone’s mind is defiled by these twenty-one bonds, one should observe those people as sure to fall into bad destinies and not be be born in a good place. They’re like a new garment made of white cloth. As it gets older, it picks up many dirty stains. When someone decides to dye it a certain color, whether blue, yellow, red, or black, it can never be accomplished. Why is that? Because it’s been soiled.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573c21'>「如是，比丘，若有人以此二十一結染著心者，當觀其人必墮惡趣，不生善處。 設，復，有人無此二十一結染著心者，當知斯人必生天上，不墮地獄中。 猶如新淨白㲲，隨意欲作何色，青、黄、赤、黒。 必成其色，終不敗壞。 所以然者？ 以其淨故。 此亦如是：其有無此二十一結染著心者，當觀其人必生天上，不墮惡趣。</td>
+    <td id='p5'>5. “Thus, monks, if someone’s mind is defiled by these twenty-one bonds, one should observe that person as sure to fall into bad destinies and not be born in a good place. Supposing, again, that someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in Heaven and not fall to Hell. They’re like a fresh and clean white cloth that’ll accept any color one decides to give it, whether it be blue, yellow, red, or black. It’s sure to become that color, and it’ll never fade. Why is that? Because it’s clean. Likewise, when someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in Heaven and not fall to Hell.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.573c28'>「若彼賢聖弟子起瞋恚心結。 觀已，便能息之 ⋯起恚害心結⋯起睡眠心結⋯起調戲心結⋯起疑心結⋯起怒心結⋯起忌心結⋯起惱心結⋯起疾心結⋯起憎心結⋯起無慚心結⋯起無愧心結⋯起幻心結⋯起姦心結⋯起僞心結⋯起諍心結⋯起憍心結⋯起慢心結⋯起妬心結⋯起増上慢心結⋯起貪心結⋯</td>
+    <td id='p6'>6. “Suppose that noble disciple produces the mental bond of anger. Once they observe it, they can stop it … produces the mental bond of hatefulness … produces the mental bond of sleepiness … produces the mental bond of restlessness … produces the mental bond of doubt … produces the mental bond of wrath … produces the mental bond of jealousy … produces the mental bond of frustration … produces the mental bond of envy … produces the mental bond of dislike … produces the mental bond of shamelessnes … produces the mental bond of lacking conscience … produces the mental bond of deception … produces the mental bond of fraud … produces the mental bond of dishonesty … produces the mental bond of enmity … produces the mental bond of haughtiness … produces the mental bond of pride … produces the mental bond of spitefulness … produces the mental bond of arrogance … produces the mental the bond of greed …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574a6'>「若彼賢聖弟子無瞋、無恚、無有、愚惑，心意和悦。 以慈心普滿一方而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無限、無量、不可稱計。 心無恚怒，而自遊戲。 以此慈心遍滿其中，得歡喜已，心意便正。</td>
+    <td id='p7'>7. “If that noble disciple has no anger, no hate, and no delusions, his mind will become peaceful and cheerful. He completely fills one direction with kindness, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with kindness and becomes joyous, his mind is proper.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574a11'>「復，以悲心普滿一方，而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無量、無限、不可稱計。 心無恚怒，而自遊戲。 以此悲心遍滿其中，得歡喜已，心意便正。</td>
+    <td id='p8'>8. “Again, he completely fills one direction with compassion, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with compassion and becomes joyous, his mind is proper.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574a15'>「復，以喜心普滿一方，而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無量、無限、不可稱計。 心無恚怒，而自遊戲。 以此喜心遍滿其中，得歡喜已，心意便正。</td>
+    <td id='p9'>9. “Again, he completely fills one direction with joy, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with equanimity and becomes joyous, his mind is proper.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574a20'>「復，以護心普滿一方，而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無量、無限、不可稱計。 心無恚怒，而自遊戲。 以此護心遍滿其中，得歡喜已，心意便正。</td>
+    <td id='p10'>10. “Again, he completely fills one direction with equanimity, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with joy and becomes joyous, his mind is proper.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574a24'>「便於如來所成於信根。 根本不移䜿高顯幢，不可移動諸天、龍、神、阿須倫、沙門、婆羅門、或世人民。 於中得歡喜，心意便正。</td>
+    <td id='p11'>11. “He then achieves the faculty of faith in the Tathāgata. Having planted a sturdy and tall banner, he’s unmoved by gods, nāgas, spirits, asuras, ascetics, priests, or worldly people. Having attained that joy, his mind is proper.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574a27'>「『此是如來、至真、等正覺、明行足、為善逝、世間解、無上士、道法御、天人師，號佛、眾祐。』 於中得歡喜，心意便正。</td>
+    <td id='p12'>12. “‘This is the Tathāgata, Arhat, Completely Awakened One, Complete in Wisdom and Conduct, the Well Gone One, Understander of the World, the Unsurpassed Man, Trainer in the Path and Dharma, and Teacher of Gods and Humans, who is called a Buddha, a Bhagavān.’ Having attained that joy, his mind is proper.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574a29'>「亦復，成就於法： 『如來法者甚為清淨，不可移動，人所愛敬。』 如是智者當作是觀。 便於中而得歡喜⋯</td>
+    <td id='p13'>13. “He accomplishes this regarding the Dharma: ‘The Tathāgata’s Dharma is quite pure, unchanging, and loved and respected by people.’ The wise should observe it in this way. Having attained that joy, [his mind is proper.]</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574b3'>「亦復，成就於眾： 『如來聖眾甚為清淨。 性行純和。 法法成就，戒成就，三昧成就，智慧成就，解脫成就，解脫見慧成就。 聖眾者四雙八輩。 此是如來聖眾。可愛、可貴實、可承事。』 於中得歡喜，心意便正。</td>
+    <td id='p14'>14. “He also accomplishes this regarding the Saṅgha: ‘The Tathāgata’s Saṅgha is quite pure. In disposition and conduct, they are in harmony. They accomplish one thing and the next, accomplish the precepts, accomplish samādhi, accomplish wisdom, accomplish liberation, and accomplish seeing and knowing liberation. The Noble Saṅgha has four pairs and eight ranks. This is the Tathāgata’s noble Saṅgha that’s cherished, worthy of trust, and worthy of service.’ Attaining that joy, his mind is proper.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574b7'>「彼，復，以此三昧心清淨無瑕穢。 諸結便盡，亦無沾汚。 性行柔軟，逮於神通。 便得自識無量宿命事。 所從來處，靡不知之。 『若一生、二生、三生、四生、五生、十生、二十生、三十生、四十生、五十生、百生、千生、百千生、成敗劫、不成敗劫、成敗不成敗劫、無數成敗劫、無數不成敗劫，我曾在彼字某名某姓某。 如是生，如是食，受如是苦樂，受命長短。 從彼終，生彼間。 從彼終，生此間。』 如是，自識無數宿命事。</td>
+    <td id='p15'>15. “He, again, purifies his mind with this samādhi, and it has no pollution. The bonds are made to end, and he has no stains. His disposition and conduct are gentle, and he obtains spiritual knowledge. He then attains awareness of his own measureless past lives. From his present standpoint, there are no past lives he doesn’t know. ‘Whether it’s one birth, two births, three births, four births, five births, ten births, twenty births, thirty births, forty births, fifty births, a hundred births, a thousand births, a hundred thousand births, eons of formation and destruction, eons not of formation and destruction, eons both of formation and destruction and not of formation and destruction, countless eons of formation and destruction, or countless eons not of formation and destruction, I was there with such-and-such a name from such-and-such a family. Such was my birth, such my food, I experienced such pleasures and pains, and my life was long or short. I died there and was born elsewhere. I died there and was born here.’ In this way, he’s aware of the events of his own countless past lives.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574b16'>「復，以此三昧心清淨，無瑕穢。 知眾生心所念之事。 彼，復，以天眼觀眾生類。 有生者，有終者。 善色、醜色，善趣、惡趣。 若好、若醜，隨眾生行。 所作果報，皆悉知之。</td>
+    <td id='p16'>16. “Again, he purifies his mind with this samādhi, and it has no pollution. He knows the things that sentient beings think about. He also observes the classes of sentient beings with the heavenly eye. Some are being born, and some are dying. They have good and ugly forms and good and bad destinations. Whether they’re beautiful or disgusting depends upon to their conduct. He perceives all the rewards that they make for themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574b20'>「或有眾生身行惡、口行惡、心行惡。 誹謗賢聖，邪見，造邪見行。 身壞命終，生三惡道，趣泥㴝中。 或復有眾生身行善、口行善、意行善。 不誹謗賢聖，正見，無有邪見。 身壞命終，生天上，善處。 是謂清淨天眼觀眾生類。 有生者，有終者。 善色、醜色，善趣、惡趣。 若好、若醜，隨眾生行。 所作果報，皆悉知之。</td>
+    <td id='p17'>17. “Sometimes, there are sentient beings who behave badly with their bodies, badly with their speech, and badly with their thoughts. They slander noble people, have wrong views, and behave according to wrong views. When their bodies break up and their lives end, they’re born in the three bad destinies, headed for Hell. Sometimes, other sentient beings behave well with their bodies, well with their speech, and well with their thoughts. They don’t slander noble people, have right views, and have no wrong views. When their bodies break up and their lives end, they are born up in Heaven, in a good place. This is called observing the classes of sentient beings with the clear heavenly eye. Some are being born, and some are dying. They have good and ugly forms and good and bad destinations. Whether they’re beautiful or disgusting depends upon to their conduct. He perceives all the rewards that they make for themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574b27'>「彼，復，以此三昧心清淨，無瑕穢，無有結使。 心性柔軟，逮於神通。 復，以漏盡通，而自娯樂。 彼觀『此苦』如實知之。 復，觀『苦習』⋯ 復，觀『苦盡』⋯ 復，觀『苦出要』如實知之。 彼作是觀已，欲漏心得解脫⋯有漏心⋯無明漏心得解脫。 已得解脫，便得解脫智： 『生死已盡，梵行已立，所作已辦。 更不復受有，如實知之。』</td>
+    <td id='p18'>18. “Again, he purifies his mind with this samādhi, and it has no pollution or bonds. His mind becomes gentle in nature, and he obtains spiritual knowledge. He also understands that his contamination has ended, and he delights himself. He observes, ‘This is suffering,’ and he truly knows it. Again, he observes ‘This is the formation of suffering’ … Again, he observes, ‘This is the end of suffering,’ … Again, he observes, ‘This is the escape from suffering,’ and he truly knows it. Once he makes these observations, his mind attains its freedom from the contaminants of desire … from the contaminants of existence … and attains freedom from the contaminants of ignorance. Once he’s liberated, he obtains the knowledge that he’s been liberated: ‘Birth and death have been ended, the religious life has been established, and the task has been accomplished. I truly know that I’ll no longer be subject to existence.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574c5'>「如是，比丘，賢聖弟子心得解脫。 雖復食粳糧、善美種種餚饍摶若須彌，終無有罪。 所以然者？ 以無欲盡愛故，以無瞋盡恚故，以無愚癡盡愚癡故。 是謂比丘中比丘則内極沐浴已。」</td>
+    <td id='p19'>19. “In this way, monks, the noble disciple’s mind becomes liberated. Although he eats rice and delicious dishes, even as much as Sumeru, he never commits any sin. Why is that? It’s because he has no desire and has ended craving, because he has no anger and has ended hate, and because he has no delusion and has ended igornance. This is called a monk among monks who has been completely cleansed on the inside.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574c9'>爾時，江側婆羅門白世尊曰： 「瞿曇沙門，可往至孫陀羅江側沐浴？」</td>
+    <td id='p20'>20. That priest by the river then said to the Bhagavān, “Ascetic Gautama, might you go to the Sundara River and bathe on its shore?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574c10'>世尊告曰： 「云何，婆羅門，名之為孫陀羅江水？」</td>
+    <td id='p21'>21. The Bhagavān told him, “For what, priest, is the Sundara River named?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574c11'>婆羅門曰： 「孫陀羅江水是福之深淵、世之光明。 其有人物在彼河水浴者，一切諸惡皆悉除盡。」</td>
+    <td id='p22'>22. The priest said, “The Sundara River is both a blessed depth and a light of the world. When people bathe in that river, all their evils are completely removed by it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574c14'>爾時，世尊便説此偈：</td>
+    <td id='p23'>23. The Bhagavān then spoke these verses:</td>
+  </tr>
+<tr>
+  <td title='T125.2.574c15'><ul class='verse'>
+    <li class='ch'>「此身無數劫<br/>
+    經歴彼河浴，<br/>
+    及諸小陂池，<br/>
+    靡不悉周遍。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“This body for countless eons<br/>
+    Has been washed in that river,<br/>
+    As well as in smaller ponds and lakes,<br/>
+    But it was never thoroughgoing.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.574c17'><ul class='verse'>
+    <li class='ch'>愚者常樂彼，<br/>
+    闇行不清淨。<br/>
+    宿罪内充躯，<br/>
+    彼河焉能救。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>A fool often enjoys that,<br/>
+    While walking in darkness and impurity.<br/>
+    Once past misdeeds fill his insides,<br/>
+    That river cannot be of any help.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.574c19'><ul class='verse'>
+    <li class='ch'>淨者常快樂<br/>
+    禁戒清亦快。<br/>
+    清者作清行，<br/>
+    彼願必果成。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Pure people are always happy<br/>
+    And their pure discipline pleases them.<br/>
+    Clean people act cleanly,<br/>
+    Their hoped for rewards surely come.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.574c21'><ul class='verse'>
+    <li class='ch'>設護不與取，<br/>
+    行慈不殺生，<br/>
+    守誠不妄語，<br/>
+    心等無増減。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>If they don’t take what’s not given,<br/>
+    Have mercy and don’t kill beings,<br/>
+    Keep themselves honest and don’t speak falsely,<br/>
+    Their hearts don’t increase or decrease.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.574c23'><ul class='verse'>
+    <li class='ch'>汝今於此浴，<br/>
+    必獲安隱處。<br/>
+    彼河何所至？<br/>
+    猶盲投乎冥！」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Now, when you bathe in this way,<br/>
+    You’ll surely find a place of safety.<br/>
+    But where does that river lead?<br/>
+    It’s like a blind man thrown into darkness!”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.574c25'>爾時，婆羅門白世尊曰： 「止，止！瞿曇，猶如軁者得伸，闇者見明，迷者示道，於闇室然明，無目者為作眼目：如是沙門瞿曇。 無數方便説此妙法。 願聽為道。」</td>
+    <td id='p24'>24. The priest then said to the Bhagavān, “Stop, Gautama, stop! The ascetic Gautama is like a hunchback who’s straightened out, someone in darkness who sees light, someone confused shown the way, or someone blind who’s given eyes. Countless are the ways he teaches this sublime Dharma. I’d like to listen to that path.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.574c28'>爾時，江側婆羅門即得作道，受具足戒，所以族姓子。 出家學道，修無上梵行。 生死已盡，梵行已立，所作已辦。 更不復受有如實知之。 是時，尊者孫陀羅諦利即成阿羅漢。</td>
+    <td id='p25'>25. That priest on the river shore then was allowed to practice the path, accepted the full precepts, and thereby became a clansmen. He left home to train on the path and cultivated the unsurpassed religious life. He ended birth and death, established the religious life, and accomplished the task. He truly knew that he was no longer subject to existence. At that point, Venerable Sundarastrī became an arhat.<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575a3'>爾時，尊者孫陀羅諦利聞佛所説歡喜，奉行。</td>
+    <td id='p26'>26. When Venerable Sundarastrī heard what the Buddha taught, he rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. At the time, a priest on the bank of a river went to the Bhagavān while carrying a heavy load. When he arrived, he set his load down to one side and stood silently in front of the Bhagavān. That priest then had this thought, “Today, the ascetic Gautama is teaching Dharma to an assembly numbering in the hundreds of thousands that surrounds him front and back. Now, I’m equally as clean as that ascetic Gautama, without any difference. Why is that? The ascetic Gautama eats excellent rice and a variety of delicacies. I’m eating fruits and vegetables to sustain myself.”
-{:#p2}
+<hr/>
 
-3\. Knowing the thought that was in that priest’s mind, the Bhagavān then addressed the monks, “The minds of some sentient beings are defiled by twenty-one bonds.[\[2\]](#n2){:#ref2} One should observe those people as sure to fall into bad destinies and not be born in a good place. What are the twenty-one bonds? Anger is a mental bond, hatefulness is a mental bond, sleepiness is a mental bond, restlessness is a mental bond, doubt is a mental bond, wrath is a mental bond, jealousy is a mental bond, frustration is a mental bond, envy is a mental bond, dislike is a mental bond, shamelessness is a mental bond, lack of conscience is a mental bond, deception is a mental bond, fraud is a mental bond, dishonesty is a mental bond, enmity is a mental bond, haughtiness is a mental bond, pride is a mental bond, spitefulness is a mental bond, arrogance is a mental bond, and greed is a mental bond.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Monks, if someone’s mind is defiled by these twenty-one bonds, one should observe those people as sure to fall into bad destinies and not be be born in a good place. They’re like a new garment made of white cloth. As it gets older, it picks up many dirty stains. When someone decides to dye it a certain color, whether blue, yellow, red, or black, it can never be accomplished. Why is that? Because it’s been soiled.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0573c01" target="_blank">T125.2.573c1-5a4</a>. This <em>sūtra</em> is similar to <a href="https://suttacentral.net/mn7" target="_blank">MN 7</a> and a closer parallel to MĀ 93 and Taisho 51. SĀ 21.36 (T99.1185) and T100.100 refer to the priest who appears in them but otherwise aren’t parallels to the other three <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>twenty-one bonds</em>. This list occurs in different orders and with different translations in the three C. versions, and the terms used are often close synonyms. This makes precise translation difficult in a number of cases. It should be understood that this translation of the list is provisional, and it’s difficult to refine it further without detailed glosses to differentiate synonyms.</p>
+<p>It’s of interest to note how the list that appears here, in MĀ 93, and in Taisho 51 has twenty-one items, but MN 7’s list is not numbered and only consists of sixteen items. Also, MĀ 93’s list is of twenty-one defilements rather than bonds, which agrees with MN 7 but not the present <em>sūtra</em> or Taisho 51. These three versions (MN 7, MĀ 93, and EĀ 13.5/T51) appear to be disparate variations of some older text.</p>
+<p>This list of twenty-one bonds is also found in two other C. texts known to have been produced by the same translation team that produced EĀ. The first is a translation of an Abhidharma Vibhāṣa (T1547.28.424b6). It appears to reference a scriptural source similar to this <em>sūtra</em> or Taisho 51, though the quotation isn’t sufficient to identify it precisely. The second is a King Aśoka Avadāna text that contains a reference to the twenty-one bonds (T2045.50.172b29).</p>
+<p>The same translation team headed by Daoan was also said to have translated a version of MĀ that was later lost. T51 is one of a group of independent C. translations that parallel MĀ and EĀ <em>sūtra</em>s and that may actually be remnants of this lost MĀ.</p>
+<p>Thus, this particular list of twenty-one bonds might be an indication that these texts all belonged to a single branch of early Buddhism. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Sundarastrī</em>. C. 孫陀羅諦利 (EMC. suən-da-la-tei-lɪi = G. <em>suṃdarastri</em> = S. <em>sundarastrī</em>). This translit. seems straightforward as S. <em>sundara</em> + <em>strī</em>, lit. meaning “beautiful woman.” The 翻梵語 (T2130.54.1019c24) confirms this reading (“譯曰：陀羅者好，諦利者女”). In other sources, however, he is named after the Sundarikā River, which is a feminine noun in S. This makes me wonder what took place to arrive at this situation. Was the priest a woman in this particular telling of the story, or was this name the result of an overly literal translation of S. <em>sundarīka</em> when the text passed from one Prakrit to another?</p>
+<p>In MN 7, the priest is called instead P. <em>sundarikabhāradvāja</em>, and simply P. <em>bhāradvāja</em> after he becomes a monk. MĀ 93 has still another name for the priest, translated to C. as 妙好首 (“Chief in Beauty” or “Beautiful Head”). 妙好 could certainly translate S. <em>sundara</em>. 首 could be a translation of S. <em>śīrṣa</em>, <em>śiras</em>, or <em>śrī</em>, which are similar in pronunciation to S. <em>strī</em>. [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Thus, monks, if someone’s mind is defiled by these twenty-one bonds, one should observe that person as sure to fall into bad destinies and not be born in a good place. Supposing, again, that someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in Heaven and not fall to Hell. They’re like a fresh and clean white cloth that’ll accept any color one decides to give it, whether it be blue, yellow, red, or black. It’s sure to become that color, and it’ll never fade. Why is that? Because it’s clean. Likewise, when someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in Heaven and not fall to Hell.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 24 July 2023</p>
 
-6\. “Suppose that noble disciple produces the mental bond of anger. Once they observe it, they can stop it … produces the mental bond of hatefulness … produces the mental bond of sleepiness … produces the mental bond of restlessness … produces the mental bond of doubt … produces the mental bond of wrath … produces the mental bond of jealousy … produces the mental bond of frustration … produces the mental bond of envy … produces the mental bond of dislike … produces the mental bond of shamelessnes … produces the mental bond of lacking conscience … produces the mental bond of deception … produces the mental bond of fraud … produces the mental bond of dishonesty … produces the mental bond of enmity … produces the mental bond of haughtiness … produces the mental bond of pride … produces the mental bond of spitefulness … produces the mental bond of arrogance … produces the mental the bond of greed …
-{:#p6}
-
-7\. “If that noble disciple has no anger, no hate, and no delusions, his mind will become peaceful and cheerful. He completely fills one direction with kindness, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with kindness and becomes joyous, his mind is proper.
-{:#p7}
-
-8\. “Again, he completely fills one direction with compassion, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with compassion and becomes joyous, his mind is proper.
-{:#p8}
-
-9\. “Again, he completely fills one direction with joy, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with equanimity and becomes joyous, his mind is proper.
-{:#p9}
-
-10\. “Again, he completely fills one direction with equanimity, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with joy and becomes joyous, his mind is proper.
-{:#p10}
-
-11\. “He then achieves the faculty of faith in the Tathāgata. Having planted a sturdy and tall banner, he’s unmoved by gods, nāgas, spirits, asuras, ascetics, priests, or worldly people. Having attained that joy, his mind is proper.
-{:#p11}
-
-12\. “‘This is the Tathāgata, Arhat, Completely Awakened One, Complete in Wisdom and Conduct, the Well Gone One, Understander of the World, the Unsurpassed Man, Trainer in the Path and Dharma, and Teacher of Gods and Humans, who is called a Buddha, a Bhagavān.’ Having attained that joy, his mind is proper.
-{:#p12}
-
-13\. “He accomplishes this regarding the Dharma: ‘The Tathāgata’s Dharma is quite pure, unchanging, and loved and respected by people.’ The wise should observe it in this way. Having attained that joy, [his mind is proper.]
-{:#p13}
-
-14\. “He also accomplishes this regarding the Saṅgha: ‘The Tathāgata’s Saṅgha is quite pure. In disposition and conduct, they are in harmony. They accomplish one thing and the next, accomplish the precepts, accomplish samādhi, accomplish wisdom, accomplish liberation, and accomplish seeing and knowing liberation. The Noble Saṅgha has four pairs and eight ranks. This is the Tathāgata’s noble Saṅgha that’s cherished, worthy of trust, and worthy of service.’ Attaining that joy, his mind is proper.
-{:#p14}
-
-15\. “He, again, purifies his mind with this samādhi, and it has no pollution. The bonds are made to end, and he has no stains. His disposition and conduct are gentle, and he obtains spiritual knowledge. He then attains awareness of his own measureless past lives. From his present standpoint, there are no past lives he doesn’t know. ‘Whether it’s one birth, two births, three births, four births, five births, ten births, twenty births, thirty births, forty births, fifty births, a hundred births, a thousand births, a hundred thousand births, eons of formation and destruction, eons not of formation and destruction, eons both of formation and destruction and not of formation and destruction, countless eons of formation and destruction, or countless eons not of formation and destruction, I was there with such-and-such a name from such-and-such a family. Such was my birth, such my food, I experienced such pleasures and pains, and my life was long or short. I died there and was born elsewhere. I died there and was born here.’ In this way, he’s aware of the events of his own countless past lives.
-{:#p15}
-
-16\. “Again, he purifies his mind with this samādhi, and it has no pollution. He knows the things that sentient beings think about. He also observes the classes of sentient beings with the heavenly eye. Some are being born, and some are dying. They have good and ugly forms and good and bad destinations. Whether they’re beautiful or disgusting depends upon to their conduct. He perceives all the rewards that they make for themselves.
-{:#p16}
-
-17\. “Sometimes, there are sentient beings who behave badly with their bodies, badly with their speech, and badly with their thoughts. They slander noble people, have wrong views, and behave according to wrong views. When their bodies break up and their lives end, they’re born in the three bad destinies, headed for Hell. Sometimes, other sentient beings behave well with their bodies, well with their speech, and well with their thoughts. They don’t slander noble people, have right views, and have no wrong views. When their bodies break up and their lives end, they are born up in Heaven, in a good place. This is called observing the classes of sentient beings with the clear heavenly eye. Some are being born, and some are dying. They have good and ugly forms and good and bad destinations. Whether they’re beautiful or disgusting depends upon to their conduct. He perceives all the rewards that they make for themselves.
-{:#p17}
-
-18\. “Again, he purifies his mind with this samādhi, and it has no pollution or bonds. His mind becomes gentle in nature, and he obtains spiritual knowledge. He also understands that his contamination has ended, and he delights himself. He observes, ‘This is suffering,’ and he truly knows it. Again, he observes ‘This is the formation of suffering’ … Again, he observes, ‘This is the end of suffering,’ … Again, he observes, ‘This is the escape from suffering,’ and he truly knows it. Once he makes these observations, his mind attains its freedom from the contaminants of desire … from the contaminants of existence … and attains freedom from the contaminants of ignorance. Once he’s liberated, he obtains the knowledge that he’s been liberated: ‘Birth and death have been ended, the religious life has been established, and the task has been accomplished. I truly know that I’ll no longer be subject to existence.’
-{:#p18}
-
-19\. “In this way, monks, the noble disciple’s mind becomes liberated. Although he eats rice and delicious dishes, even as much as Sumeru, he never commits any sin. Why is that? It’s because he has no desire and has ended craving, because he has no anger and has ended hate, and because he has no delusion and has ended igornance. This is called a monk among monks who has been completely cleansed on the inside.”
-{:#p19}
-
-20\. That priest by the river then said to the Bhagavān, “Ascetic Gautama, might you go to the Sundara River and bathe on its shore?”
-{:#p20}
-
-21\. The Bhagavān told him, “For what, priest, is the Sundara River named?”
-{:#p21}
-
-22\. The priest said, “The Sundara River is both a blessed depth and a light of the world. When people bathe in that river, all their evils are completely removed by it.”
-{:#p22}
-
-23\. The Bhagavān then spoke these verses:
-{:#p23}
-
-* {:.verse}“This body for countless eons\\
-Has been washed in that river,\\
-As well as in smaller ponds and lakes,\\
-But it was never thoroughgoing.
-
-* {:.verse}A fool often enjoys that,\\
-While walking in darkness and impurity.\\
-Once past misdeeds fill his insides,\\
-That river cannot be of any help.
-
-* {:.verse}Pure people are always happy\\
-And their pure discipline pleases them.\\
-Clean people act cleanly,\\
-Their hoped for rewards surely come.
-
-* {:.verse}If they don’t take what’s not given,\\
-Have mercy and don’t kill beings,\\
-Keep themselves honest and don’t speak falsely,\\
-Their hearts don’t increase or decrease.
-
-* {:.verse}Now, when you bathe in this way,\\
-You’ll surely find a place of safety.\\
-But where does that river lead?\\
-It’s like a blind man thrown into darkness!”
-
-24\. The priest then said to the Bhagavān, “Stop, Gautama, stop! The ascetic Gautama is like a hunchback who’s straightened out, someone in darkness who sees light, someone confused shown the way, or someone blind who’s given eyes. Countless are the ways he teaches this sublime Dharma. I’d like to listen to that path.”
-{:#p24}
-
-25\. That priest on the river shore then was allowed to practice the path, accepted the full precepts, and thereby became a clansmen. He left home to train on the path and cultivated the unsurpassed religious life. He ended birth and death, established the religious life, and accomplished the task. He truly knew that he was no longer subject to existence. At that point, Venerable Sundarastrī became an arhat.[\[3\]](#n3){:#ref3}
-{:#p25}
-
-26\. When Venerable Sundarastrī heard what the Buddha taught, he rejoiced and approved.
-{:#p26}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is similar to <a href="https://suttacentral.net/mn7" target="_blank">MN 7</a> and a closer parallel to MĀ 93 and Taisho 51. SĀ 21.36 (T99.1185) and T100.100 refer to the priest who appears in them but otherwise aren’t parallels to the other three <em>sūtra</em>s. [\[back\]](#ref1)
-2. {:#n2} <em>twenty-one bonds</em>. This list occurs in different orders and with different translations in the three C. versions, and the terms used are often close synonyms. This makes precise translation difficult in a number of cases. It should be understood that this translation of the list is provisional, and it’s difficult to refine it further without detailed glosses to differentiate synonyms.<br/>
-It’s of interest to note how the list that appears here, in MĀ 93, and in Taisho 51 has twenty-one items, but MN 7’s list is not numbered and only consists of sixteen items. Also, MĀ 93’s list is of twenty-one defilements rather than bonds, which agrees with MN 7 but not the present <em>sūtra</em> or Taisho 51. These three versions (MN 7, MĀ 93, and EĀ 13.5/T51) appear to be disparate variations of some older text.<br/>
-This list of twenty-one bonds is also found in two other C. texts known to have been produced by the same translation team that produced EĀ. The first is a translation of an Abhidharma Vibhāṣa (T1547.28.424b6). It appears to reference a scriptural source similar to this <em>sūtra</em> or Taisho 51, though the quotation isn’t sufficient to identify it precisely. The second is a King Aśoka Avadāna text that contains a reference to the twenty-one bonds (T2045.50.172b29).<br/>
-The same translation team headed by Daoan was also said to have translated a version of MĀ that was later lost. T51 is one of a group of independent C. translations that parallel MĀ and EĀ <em>sūtra</em>s and that may actually be remnants of this lost MĀ.<br/>
-Thus, this particular list of twenty-one bonds might be an indication that these texts all belonged to a single branch of early Buddhism. [\[back\]](#ref2)
-3. {:#n3} <em>Sundarastrī</em>. C. 孫陀羅諦利 (EMC. suən-da-la-tei-lɪi = G. <em>suṃdarastri</em> = S. <em>sundarastrī</em>). This translit. seems straightforward as S. <em>sundara</em> + <em>strī</em>, lit. meaning “beautiful woman.” The 翻梵語 (T2130.54.1019c24) confirms this reading (“譯曰：陀羅者好，諦利者女”). In other sources, however, he is named after the Sundarikā River, which is a feminine noun in S. This makes me wonder what took place to arrive at this situation. Was the priest a woman in this particular telling of the story, or was this name the result of an overly literal translation of S. <em>sundarīka</em> when the text passed from one Prakrit to another?<br/>
-In MN 7, the priest is called instead P. <em>sundarikabhāradvāja</em>, and simply P. <em>bhāradvāja</em> after he becomes a monk. MĀ 93 has still another name for the priest, translated to C. as 妙好首 (“Chief in Beauty” or “Beautiful Head”). 妙好 could certainly translate S. <em>sundara</em>. 首 could be a translation of S. <em>śīrṣa</em>, <em>śiras</em>, or <em>śrī</em>, which are similar in pronunciation to S. <em>strī</em>. [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 24 July 2023
-{: .revised}
-
----
+<hr/>
