--- a/01_agama/ekottarika/13/EA_13_07.md
+++ b/01_agama/ekottarika/13/EA_13_07.md
@@ -1,127 +1,238 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 13. Profit | 7. Śakra the Lord of Gods'
+title: 'The Numerical Discourses | Chapter 13: Profit | 7. Śakra the Lord of Gods'
 type: kramdown
 base: ../../../
 previous: EA_13_06.html
 next: ../14/EA_14_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 13: Profit
-### 7. Śakra the Lord of Gods
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 13: Profit</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a great assembly of five hundred monks. At the time, Venerable Subhūti was also staying on the side of Mount Gṛdhrakūṭa near Rājagṛha. He had built a separate hut where he sat in meditation.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七) 釋提桓因</th>
+  <th class='en'>7. Śakra the Lord of Gods</th>
+  <tr>
+    <td class='ch' title='T125.2.575a29'>聞如是： 一時，佛在羅閲城、耆闍崛山中。 與大比丘五百人倶。 爾時，尊者須菩提亦在王舍城、耆闍崛山側。 別作屋廬而自禪思。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a great assembly of five hundred monks. At the time, Venerable Subhūti was also staying on the side of Mount Gṛdhrakūṭa near Rājagṛha. He had built a separate hut where he sat in meditation.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575b3'>爾時，尊者須菩提身得苦患甚為沈重，便作是念： 「我此苦痛為從何生？ 復從何滅？ 為至何所？」 爾時，尊者須菩提便於露地而敷坐具。 直身、正意、專精一心，結跏趺坐。 思惟諸入，欲害苦痛。</td>
+    <td id='p2'>2. Venerable Subhūti then experienced physical pain that became a serious burden, and he thought, “What is producing these painful feelings of mine? What would cease them? Where would they go?” Venerable Subhūti then prepared a seat out in the open. He sat there cross-legged with upright body, proper mindfulness, and focused mind. He contemplated the senses in order to impede his painful feelings.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575b8'>爾時，釋提桓因知尊者須菩提所念。 便以偈勅波遮旬曰：</td>
+    <td id='p3'>3. Then, Śakra the Lord of Gods knew what Venerable Subhūti was thinking. He gave Pañcaśikha<sup id="ref2"><a href="#n2">2</a></sup> this order using verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.575b10'><ul class='verse'>
+    <li class='ch'>「善業脫諸縛<br/>
+    居在靈鷲山。<br/>
+    今得極重患<br/>
+    樂空諸根定。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Subhūti<sup id="ref3"><a href="#n3">3</a></sup> has been freed from his bondage<br/>
+    And is now living there on Vulture’s Peak.<br/>
+    And he’s been stricken with such suffering<br/>
+    That he’s peacefully enjoying emptiness.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575b12'><ul class='verse'>
+    <li class='ch'>速來往問疾！<br/>
+    覲省尊上顏。<br/>
+    既得獲大福，<br/>
+    種徳莫過是。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Quickly, go inquire about his ailment!<br/>
+    Watch that superior sage’s face closely.<br/>
+    Once one has gained such great merit as he,<br/>
+    The virtue planted cannot be surpassed.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.575b14'>時，波遮旬對曰： 「如是，尊者。」</td>
+    <td>Pañcaśikha replied, “Yes, sir!”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575b14'>爾時，釋提桓因將五百天人及波遮旬，譬如士夫屈伸臂頃，便從三十三天沒，來至靈鷲山中。 離尊者須菩提不遠。 復，以此偈語波遮旬曰</td>
+    <td id='p4'>4. Śakra the Lord of Gods then led five hundred gods and Pañcaśikha as they disappeared from the Trāyastriṃśa Heaven and arrived on Vulture’s Peak in the time it takes for a strong man to flex his arm. They were not very far from Venerable Subhūti. Again, he addressed Pañcaśikha in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.575b18'><ul class='verse'>
+    <li class='ch'>「汝今覺善業，<br/>
+    樂禪三昧定？<br/>
+    柔和清淨音<br/>
+    今使從禪坐。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Do you see Subhūti sitting there,<br/>
+    Enjoying his dhyāna meditation?<br/>
+    Use that gentle and pure voice of yours<br/>
+    To wake him up from his meditation.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.575b20'>波遮旬對曰：「如是。」 爾時，波遮旬從釋提桓因聞語已，便調琉璃之琴，前至須菩提所。 便以此偈歎須菩提曰：</td>
+    <td id='p5'>5. Pañcaśikha said, “Okay.” After hearing what Śakra had said, he took his beryl lute and stood in front of Subhūti. Then, he extolled Subhūti with these verses:</td>
+  </tr>
+<tr>
+  <td title='T125.2.575b23'><ul class='verse'>
+    <li class='ch'>「結盡永無餘，<br/>
+    諸念不錯亂，<br/>
+    諸塵垢悉盡：<br/>
+    願速從禪覺！</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“His bonds are ended without remainder,<br/>
+    Your thinking is not confused or disturbed,<br/>
+    And your defilements are now completely gone:<br/>
+    I hope you’ll wake from meditation soon!</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575b25'><ul class='verse'>
+    <li class='ch'>心息渡有河；<br/>
+    降魔度諸結；<br/>
+    功徳如大海：<br/>
+    願速從定起！</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>His calm heart crossed the river of being;<br/>
+    Māra defeated, he’s freed from bondage;<br/>
+    His virtue is also like the ocean:<br/>
+    I hope you’ll wake from meditation soon!</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575b27'><ul class='verse'>
+    <li class='ch'>眼淨如蓮花，<br/>
+    諸穢永不著，<br/>
+    無歸與作歸：<br/>
+    空定速時起？</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>With vision clean like a lotus flower,<br/>
+    The pollutants never sticking to him,<br/>
+     People without refuge find one in him:<br/>
+    When will you rouse from your emptiness samādhi?</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575b29'><ul class='verse'>
+    <li class='ch'>渡四流無為，<br/>
+    善解無老病，<br/>
+    以脫有為災：<br/>
+    唯尊時定覺！</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Crossing the four floods to the unconditioned,<br/>
+    He’s been well freed from old age and sickness<br/>
+    And freed from the disaster of being conditioned:<br/>
+    Please, sage, it’s time to wake from samādhi!</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575c2'><ul class='verse'>
+    <li class='ch'>五百天在上<br/>
+    釋種躬自來。<br/>
+    欲覲聖尊顏：<br/>
+    解空速時起！」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Five hundred gods from the Heavens above<br/>
+    Have come in person to the Śākya tribe.<br/>
+    They want to see the noble sage’s face:<br/>
+    Rise from the liberation of emptiness soon!”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.575c4'>爾時，尊者須菩提即從坐起。復，歎波遮旬曰： 「善哉，波旬！汝今音與琴合，琴與音合，而無有異。 然，琴音不離歌音，歌音不離琴音。 二事共合乃成妙聲。」</td>
+    <td id='p6'>6. Then, Venerable Subhūti rose from his seat and praised Pañcaśikha, “Good, Pañcaśikha! Your voice combines with your lute and your lute combines with your voice, so that there’s no difference between them. Indeed, the sound of your lute isn’t separate from the sound of your song, and the sound of your song isn’t separate from the sound of your lute. The two things merge together to become a sublime sound.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575c7'>爾時，釋提桓因便往至尊者須菩提所，頭面禮足，在一面坐。 爾時，釋提桓因白須菩提言： 「云何善業所抱患苦有増損乎？ 今此身病為從何生？ 身生耶？意生乎？」</td>
+    <td id='p7'>7. Śakra the Lord of Gods then went up to Venerable Subhūti, bowed his head at his feet, and sat to one side. Śakra then said to Subhūti, “How does the pain that Subhūti is suffering increase or decrease? What has given rise to this physical ailement now? Is it born from the body, or is it from the mind?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575c11'>爾時，尊者須菩提語釋提桓因言： 「善哉，拘翼！法法自生，法法自滅。 法法相動，法法自息。 猶如，拘翼，有毒藥復有害毒藥。 天帝釋，此亦如是。 法法相亂，法法自息。 法能生法。 黒法用白法治，白法用黒法治。 天帝釋，貪欲病者用不淨治。 瞋恚病者用慈心治。 愚癡病者用智慧治。</td>
+    <td id='p8'>8. Venerable Subhūti then said to Śakra the Lord of Gods, “Good, Kauśika! One thing arises from another, and one thing ceases from another.<sup id="ref4"><a href="#n4">4</a></sup> One thing disturbs another, and one thing stills another. Kausika, it’s like one bitter medicine that also harms another bitter medicine. Lord of the Gods, this is likewise. One thing agitates another, and one thing is stilled by another. One thing can give rise to another, and one thing can cease another.<sup id="ref5"><a href="#n5">5</a></sup> Something black counteracts something white, and something white counteracts something black. Lord of Gods, the sickness of greed is counteracted by impurity. The sickness of anger is counteracted by kindness. The sickness of delusion is counteracted by wisdom.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575c17'>「如是，釋提桓因，一切所有皆歸於空、無我、無人、無壽、無命、無士、無夫、無形、無像、無男、無女。 猶如，釋提桓因，風壞大樹，枝葉彫落。 雷雹壞苗華菓。 初茂無水自萎。 天降時，雨生苗得存。</td>
+    <td id='p9'>9. “In this way, Śakra the Lord of Gods, all that exists returns to emptiness, selflessness, impersonality, absence of a life span, absence of life, absence of a worthy, absence of a man, shapelessness, imagelessness, and absence of male or female. Śakra, it’s like the wind destroying a large tree by stripping off its leaves and limbs. It’s like a hail storm destroying crops, flowers, and fruit. It’s like new sprouts dying without water. When the heavens open, the rain allows those new crops to survive.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575c22'>「如是，天帝釋，法法相亂，法法自定。 我本所患疼、痛苦、惱今日已除，無復患苦。」</td>
+    <td id='p10'>10. “In this way, Lord of Gods, one thing agitates another, and one thing is settled by another. The source of my suffering, pain, and misery today has been removed, so I’ll not suffer from it again.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575c24'>是時，釋提桓因白須菩提言： 「我亦有愁、憂、苦、惱。 今聞此法，無復有愁憂。 眾事猥多，欲還天上。 已亦有事及諸天事，皆悉猥多。」</td>
+    <td id='p11'>11. Śakra the Lord of Gods then said to Subhūti, “I also have sorrow, lamentation, pain, and trouble. Now that I’ve heard this Dharma, I won’t have any more sorrow and lamentation. The problems of my assembly are many, so I’m going to go back up to Heaven. My own personal duties and the problems among the gods are all quite numerous.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575c26'>時，須菩提言： 「今正是時。宜可時去。」 是時，釋提桓因即從＊坐起，前禮須菩提足，遶三匝，而去。</td>
+    <td id='p12'>12. Subhūti then said, “Now is a good time. Now is the right time to go.” Śakra the Lord of Gods then rose from his seat, bowed in front of Subhūti’s feet, circled him three times, and departed.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c29'>是時，尊者須菩提便説此偈：</td>
+    <td id='p13'>13. Venerable Subhūti then spoke this verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.576a1'><ul class='verse'>
+    <li class='ch'>「能仁説此語；<br/>
+    根本悉具足。<br/>
+    智者獲安隱<br/>
+    聞法息諸病。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Śākyamuni himself spoke these words;<br/>
+    The source of them all is full and complete.<br/>
+    The wise person obtains their safe haven<br/>
+    By hearing Dharma and ending their illnesses.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.576a3'>爾時，釋提桓因聞尊者須菩提所説歡喜，奉行。</td>
+    <td id='p14'>14. When Śakra the Lord of Gods heard what Venerable Subhūti taught, he rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.576a5'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.576a5'><ul class='verse'>
+    <li class='ch'>調達及二經，<br/>
+    皮及利師羅，<br/>
+    竹膞･孫陀利，<br/>
+    善業･釋提桓。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Two Devadatta <em>sūtra</em>s [12.7-8],<br/>
+    Skin [12.9] and Śrīla [12.10],<br/>
+    Nāḷijaṅgha [13.3] and Sundarī [13.5],<br/>
+    Good deeds [13.6] and Śakra the Lord of Gods [13.7].</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. Venerable Subhūti then experienced physical pain that became a serious burden, and he thought, “What is producing these painful feelings of mine? What would cease them? Where would they go?” Venerable Subhūti then prepared a seat out in the open. He sat there cross-legged with upright body, proper mindfulness, and focused mind. He contemplated the senses in order to impede his painful feelings.
-{:#p2}
+<hr/>
 
-3\. Then, Śakra the Lord of Gods knew what Venerable Subhūti was thinking. He gave Pañcaśikha[\[1\]](#n1){:#ref1} this order using verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“Subhūti[\[2\]](#n2){:#ref2} has been freed from his bondage\\
-And is now living there on Vulture’s Peak.\\
-And he’s been stricken with such suffering\\
-That he’s peacefully enjoying emptiness.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0575a29" target="_blank">T125.2.575a29-6a6</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Pañcaśikha</em>. C. 波遮旬 (EMC. pua-tʃɪă-ziuĕn = G. *<em>pacasun[-?]</em> = S. <em>pañcaśikha</em>?). My best guess, given the context, is that this was a name equivalent to S. Pañcaśikha. The pronunciation of the C. translit. doesn’t match it very well, so it may have been an unknown Prakrit variant. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Subhūti</em>. C. 善業. Here and in a couple passages below, S. <em>subhūti</em> has been translated to “Good Deed” or “Good Work.” In S., the name generally means “well-being” or “welfare.” It’s of interest to note that the G. pronunciation of Subhūti would’ve been <em>suhuti</em> at times because the language weakened consonants like <em>-bh-</em>. S. <em>-hūti</em> means “invocation” or “calling.” If 業 were read as “profession” this might align with “calling,” but it seems like a stretch. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>One thing arises from another, and one thing ceases from another.</em> C. 法法自生，法法自滅. Or perhaps: “One thing and another arise of themselves, and one thing and another cease of themselves.” I favor reading 自 as a preposition meaning “from,” which accords better with the traditional dependent origination description (“this arises and then that arises”). [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>One thing can give rise to another, and one thing can cease another.</em> C. 法能生法. I’ve adopted the alternate reading which adds 法能滅法 after 法能生法 in the Taisho since the rest of the passage uses pairs of opposites throughout. [<a href="#ref5">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}Quickly, go inquire about his ailment!\\
-Watch that superior sage’s face closely.\\
-Once one has gained such great merit as he,\\
-The virtue planted cannot be surpassed.”
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 25 July 2023</p>
 
-Pañcaśikha replied, “Yes, sir!”
-
-
-4\. Śakra the Lord of Gods then led five hundred gods and Pañcaśikha as they disappeared from the Trāyastriṃśa Heaven and arrived on Vulture’s Peak in the time it takes for a strong man to flex his arm. They were not very far from Venerable Subhūti. Again, he addressed Pañcaśikha in verse:
-{:#p4}
-
-* {:.verse}“Do you see Subhūti sitting there,\\
-Enjoying his dhyāna meditation?\\
-Use that gentle and pure voice of yours\\
-To wake him up from his meditation.”
-
-5\. Pañcaśikha said, “Okay.” After hearing what Śakra had said, he took his beryl lute and stood in front of Subhūti. Then, he extolled Subhūti with these verses:
-{:#p5}
-
-* {:.verse}“His bonds are ended without remainder,\\
-Your thinking is not confused or disturbed,\\
-And your defilements are now completely gone:\\
-I hope you’ll wake from meditation soon!
-
-* {:.verse}His calm heart crossed the river of being;\\
-Māra defeated, he’s freed from bondage;\\
-His virtue is also like the ocean:\\
-I hope you’ll wake from meditation soon!
-
-* {:.verse}With vision clean like a lotus flower,\\
-The pollutants never sticking to him,\\
-People without refuge find one in him:\\
-When will you rouse from your emptiness samādhi?
-
-* {:.verse}Crossing the four floods to the unconditioned,\\
-He’s been well freed from old age and sickness\\
-And freed from the disaster of being conditioned:\\
-Please, sage, it’s time to wake from samādhi!
-
-* {:.verse}Five hundred gods from the Heavens above\\
-Have come in person to the Śākya tribe.\\
-They want to see the noble sage’s face:\\
-Rise from the liberation of emptiness soon!”
-
-6\. Then, Venerable Subhūti rose from his seat and praised Pañcaśikha, “Good, Pañcaśikha! Your voice combines with your lute and your lute combines with your voice, so that there’s no difference between them. Indeed, the sound of your lute isn’t separate from the sound of your song, and the sound of your song isn’t separate from the sound of your lute. The two things merge together to become a sublime sound.”
-{:#p6}
-
-7\. Śakra the Lord of Gods then went up to Venerable Subhūti, bowed his head at his feet, and sat to one side. Śakra then said to Subhūti, “How does the pain that Subhūti is suffering increase or decrease? What has given rise to this physical ailement now? Is it born from the body, or is it from the mind?”
-{:#p7}
-
-8\. Venerable Subhūti then said to Śakra the Lord of Gods, “Good, Kauśika! One thing arises from another, and one thing ceases from another.[\[3\]](#n3){:#ref3} One thing disturbs another, and one thing stills another. Kausika, it’s like one bitter medicine that also harms another bitter medicine. Lord of the Gods, this is likewise. One thing agitates another, and one thing is stilled by another. One thing can give rise to another, and one thing can cease another.[\[4\]](#n4){:#ref4} Something black counteracts something white, and something white counteracts something black. Lord of Gods, the sickness of greed is counteracted by impurity. The sickness of anger is counteracted by kindness. The sickness of delusion is counteracted by wisdom.
-{:#p8}
-
-9\. “In this way, Śakra the Lord of Gods, all that exists returns to emptiness, selflessness, impersonality, absence of a life span, absence of life, absence of a worthy, absence of a man, shapelessness, imagelessness, and absence of male or female. Śakra, it’s like the wind destroying a large tree by stripping off its leaves and limbs. It’s like a hail storm destroying crops, flowers, and fruit. It’s like new sprouts dying without water. When the heavens open, the rain allows those new crops to survive.
-{:#p9}
-
-10\. “In this way, Lord of Gods, one thing agitates another, and one thing is settled by another. The source of my suffering, pain, and misery today has been removed, so I’ll not suffer from it again.”
-{:#p10}
-
-11\. Śakra the Lord of Gods then said to Subhūti, “I also have sorrow, lamentation, pain, and trouble. Now that I’ve heard this Dharma, I won’t have any more sorrow and lamentation. The problems of my assembly are many, so I’m going to go back up to Heaven. My own personal duties and the problems among the gods are all quite numerous.”
-{:#p11}
-
-12\. Subhūti then said, “Now is a good time. Now is the right time to go.” Śakra the Lord of Gods then rose from his seat, bowed in front of Subhūti’s feet, circled him three times, and departed.
-{:#p12}
-
-13\. Venerable Subhūti then spoke this verse:
-{:#p13}
-
-* {:.verse}“Śākyamuni himself spoke these words;\\
-The source of them all is full and complete.\\
-The wise person obtains their safe haven\\
-By hearing Dharma and ending their illnesses.”
-
-14\. When Śakra the Lord of Gods heard what Venerable Subhūti taught, he rejoiced and approved.
-{:#p14}
-
-##### Summary Verse
-
-* {:.verse}Two Devadatta <em>sūtra</em>s (12.7-8),\\
-Skin (12.9) and Śrīla (12.10),\\
-Nāḷijaṅgha (13.3) and Sundarī (13.5),\\
-Good deeds (13.6) and Śakra the Lord of Gods (13.7).
-
----
-
-### Notes
-
-1. {:#n1} <em>Pañcaśikha</em>. C. 波遮旬 (EMC. pua-tʃɪă-ziuĕn = G. \*<em>pacasun[-?]</em> = S. <em>pañcaśikha</em>?). My best guess, given the context, is that this was a name equivalent to S. Pañcaśikha. The pronunciation of the C. translit. doesn’t match it very well, so it may have been an unknown Prakrit variant. [\[back\]](#ref1)
-2. {:#n2} <em>Subhūti</em>. C. 善業. Here and in a couple passages below, S. <em>subhūti</em> has been translated to “Good Deed” or “Good Work.” In S., the name generally means “well-being” or “welfare.” It’s of interest to note that the G. pronunciation of Subhūti would’ve been <em>suhuti</em> at times because the language weakened consonants like <em>-bh-</em>. S. <em>-hūti</em> means “invocation” or “calling.” If 業 were read as “profession” this might align with “calling,” but it seems like a stretch. [\[back\]](#ref2)
-3. {:#n3} <em>One thing arises from another, and one thing ceases from another.</em> C. 法法自生，法法自滅. Or perhaps: “One thing and another arise of themselves, and one thing and another cease of themselves.” I favor reading 自 as a preposition meaning “from,” which accords better with the traditional dependent origination description (“this arises and then that arises”). [\[back\]](#ref3)
-4. {:#n4} <em>One thing can give rise to another, and one thing can cease another.</em> C. 法能生法. I’ve adopted the alternate reading which adds 法能滅法 after 法能生法 in the Taisho since the rest of the passage uses pairs of opposites throughout. [\[back\]](#ref4)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 25 July 2023
-{: .revised}
-
----
+<hr/>
