--- a/01_agama/ekottarika/14/EA_14_01.md
+++ b/01_agama/ekottarika/14/EA_14_01.md
@@ -1,48 +1,56 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 1. Killing Beings'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 1. Killing Beings'
 type: kramdown
 base: ../../../
 previous: ../13/EA_13_07.html
 next: EA_14_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 1. Killing Beings
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一) 殺生</th>
+  <th class='en'>1. Killing Beings</th>
+  <tr>
+    <td class='ch' title='T125.2.576a14'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a15'>爾時，世尊告諸比丘： 「於是眾中，我不見一法修已、多修已，成地獄行，成畜生行，成餓鬼行。 若生人中，受命極短。 所謂殺生者也。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing<sup id="ref2"><a href="#n2">2</a></sup> that accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals<sup id="ref3"><a href="#n3">3</a></sup> when cultivated and cultivated often. If they were born among humans, a person’s life will be made quite short by it. What is that one thing? It’s the killing of beings.”<sup id="ref4"><a href="#n4">4</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a18'>「諸比丘，若有人意好殺生，便墮地獄、餓鬼、畜生。 若生人中，受命極短。 所以然者？ 以斷他命故。</td>
+    <td id='p3'>3. The Buddha told the monks,<sup id="ref5"><a href="#n5">5</a></sup> “If a person likes killing beings, then they’ll fall into Hell, among hungry ghosts, or among animals. If they are born among humans, their life will be made quite short by it. Why is that? Because they ended the lives of others.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a20'>「是故，當學莫殺生。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should always be merciful and not capable of killing beings.<sup id="ref6"><a href="#n6">6</a></sup> Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a21'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing[\[2\]](#n2){:#ref2} that accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals[\[3\]](#n3){:#ref3} when cultivated and cultivated often. If they were born among humans, a person’s life will be made quite short by it. What is that one thing? It’s the killing of beings.[\[4\]](#n4){:#ref4}”
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks,[\[5\]](#n5){:#ref5} “If a person likes killing beings, then they’ll fall into Hell, among hungry ghosts, or among animals. If they are born among humans, their life will be made quite short by it. Why is that? Because they ended the lives of others.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you should always be merciful and not capable of killing beings.[\[6\]](#n6){:#ref6} Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576a14" target="_blank">T125.2.576a14-22</a>. I’m not aware of direct parallels for the <em>sūtra</em>s found in this chapter, but it is of interest that <a href="https://suttacentral.net/an1.312" target="_blank">AN 1.312-313</a> have the same template as these ten <em>sūtra</em>s. It would seem that it was a type of early <em>sūtra</em> reminescent of those who find in the <em>Itivuttaka</em> collections. Here in EĀ, the template has been applied to the five precepts. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>actions of Hell, actions of hungry ghosts, and actions of animals</em> C. 於是眾中，我不見一法. I’ve added “anything … like” so that this line makes better sense, as the C. translation doesn’t quite capture the intended meaning. Lit., the Taisho reads: “I don’t see in this assembly one thing,” which strictly speaking means there’s nothing that does what the rest of the paragraph says. But clearly something does: the thing named at the end. This situation is the same with the rest of the chapter, and I’ve translated accordingly. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>actions of Hell, actions of hungry ghosts, and actions of animals</em> C. 地獄行，成畜生行，成餓鬼行. I’ve changed the order of these three items to match the order found in the next paragraph as well as elsewhere in this chapter. The Taisho here lists them as Hell, animals, and hungry ghosts, which is likely a copyist error.</p>
+<p>It should also be noted that 行 might translate S. <em>saṃskāra</em>, which would change the passage’s meaning to “the conditioned states of hell, hungry ghosts, and animals.” [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>What is that one thing? It’s the killing of beings.</em> C. 所謂殺生者也. The Taisho often omits the question (“What is that one thing?”) that introduces the one thing that the Buddha is discussing, but it does occur in EĀ 14.5, 14.8, and 14.10. In the other <em>sūtra</em>s, there are alternate readings that include the question. I’ve adopted these alternate readings since it seems a typical case of copyist omission or lazy abbreviation. Uncorrected, the Taisho reading of EĀ 14.1-4, 6-7, and 9 all lack this question. [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>The Buddha told the monks</em>. C. 諸比丘. The Taisho omits the Buddha addressing the monks in six out of ten of this chapter’s <em>sūtra</em>s, but those six all have alternate readings that include it. I’ve adopted those alternate readings. Uncorrected, the Taisho reading of EĀ 14.1, 3, and 7-10 would be: “Monks, if a person …” [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p><em>Therefore, monks, you should always be merciful and not capable of killing beings</em>. C. 是故，當學莫殺生. I’ve adoped the alternate reading that reconstructs the sentence as “是故，諸比丘，常當慈心，莫得殺生.” The Taisho appears to have suffered annother copyist omission here. Uncorrected, it reads: “Therefore, you should train in not killing beings.” [<a href="#ref6">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 27 July 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} I’m not aware of direct parallels for the <em>sūtra</em>s found in this chapter, but it is of interest that <a href="https://suttacentral.net/an1.312" target="_blank">AN 1.312-313</a> have the same template as these ten <em>sūtra</em>s. It would seem that it was a type of early <em>sūtra</em> reminescent of those we find in the <em>Itivuttaka</em> collections. Here in EĀ, the template has been applied to the five precepts. [\[back\]](#ref1)
-2. {:#n2} <em>actions of Hell, actions of hungry ghosts, and actions of animals</em> C. 於是衆中，我不見一法. I’ve added “anything … like” so that this line makes better sense, as the C. translation doesn’t quite capture the intended meaning. Lit., the Taisho reads: “I don’t see in this assembly one thing,” which strictly speaking means there’s nothing that does what the rest of the paragraph says. But clearly something does: the thing named at the end. This situation is the same with the rest of the chapter, and I’ve translated accordingly. [\[back\]](#ref2)
-3. {:#n3} <em>actions of Hell, actions of hungry ghosts, and actions of animals</em> C. 地獄行，成畜生行，成餓鬼行. I’ve changed the order of these three items to match the order found in the next paragraph as well as elsewhere in this chapter. The Taisho here lists them as Hell, animals, and hungry ghosts, which is likely a copyist error.<br/>
-It should also be noted that 行 might translate S. <em>saṃskāra</em>, which would change the passage’s meaning to “the conditioned states of hell, hungry ghosts, and animals.” [\[back\]](#ref3)
-4. {:#n4} <em>What is that one thing? It’s the killing of beings.</em> C. 所謂殺生者也. The Taisho often omits the question (“What is that one thing?”) that introduces the one thing that the Buddha is discussing, but it does occur in EĀ 14.5, 14.8, and 14.10. In the other <em>sūtra</em>s, there are alternate readings that include the question. I’ve adopted these alternate readings since it seems a typical case of copyist omission or lazy abbreviation. Uncorrected, the Taisho reading of EĀ 14.1-4, 6-7, and 9 all lack this question. [\[back\]](#ref4)
-5. {:#n5} <em>The Buddha told the monks</em>. C. 諸比丘. The Taisho omits the Buddha addressing the monks in six out of ten of this chapter’s <em>sūtra</em>s, but those six all have alternate readings that include it. I’ve adopted those alternate readings. Uncorrected, the Taisho reading of EĀ 14.1, 3, and 7-10 would be: “Monks, if a person …”  [\[back\]](#ref5)
-6. {:#n6} <em>Therefore, monks, you should always be merciful and not capable of killing beings</em>. C. 是故，當學莫殺生. I’ve adoped the alternate reading that reconstructs the sentence as “是故，諸比丘，常當慈心，莫得殺生.” The Taisho appears to have suffered annother copyist omission here. Uncorrected, it reads: “Therefore, you should train in not killing beings.” [\[back\]](#ref6)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 27 July 2023
-{: .revised}
-
----
+<hr/>
