--- a/01_agama/ekottarika/14/EA_14_03.md
+++ b/01_agama/ekottarika/14/EA_14_03.md
@@ -1,42 +1,51 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 3. Stealing'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 3. Stealing'
 type: kramdown
 base: ../../../
 previous: EA_14_02.html
 next: EA_14_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 3. Stealing
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(三) 劫盜</th>
+  <th class='en'>3. Stealing</th>
+  <tr>
+    <td class='ch' title='T125.2.576b2'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b3'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，成地獄行、餓鬼、畜生行。 若生人中，極為貧匱。 衣不蓋形，食不充口。 所謂劫盜也。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, actions of hungry ghosts, and actions of animal births. If they were born among humans, a person will be made impoverished by it. They won’t have clothes to cover themselves or enough food to eat. What is that one thing? It’s stealing.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b6'>「諸比丘，若有人意好劫盜，取他財物，便墮餓鬼、畜生中。 若生人中、極為貧匱。 所以然者？ 以斷他生業故。</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person likes thinking about stealing and taking valuable possessions from others, then they’ll fall into Hell, among hungry ghosts, or among animals.<sup id="ref2"><a href="#n2">2</a></sup> If they are born among humans, they’ll be made impoverished by it. Why is that? Because they ended the livelihood of others.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b9'>「是故，諸比丘，當學遠離不與取。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should always stay far away from taking what’s not given. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b10'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, actions of hungry ghosts, and actions of animal births. If they were born among humans, a person will be made impoverished by it. They won’t have clothes to cover themselves or enough food to eat. What is that one thing? It’s stealing.”
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person likes thinking about stealing and taking valuable possessions from others, then they’ll fall into Hell, among hungry ghosts, or among animals.[\[1\]](#n1){:#ref1} If they are born among humans, they’ll be made impoverished by it. Why is that? Because they ended the livelihood of others.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you should always stay far away from taking what’s not given. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576b02" target="_blank">T125.2.576b2-11</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>they’ll fall into Hell, among hungry ghosts, or among animals.</em>. C. 墮餓鬼、畜生中. The Taisho omits mention of Hell here, but an alternate reading includes it. I’ve adopted it as this is another obvious copyist omission. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 27 July 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} <em>they’ll fall into Hell, among hungry ghosts, or among animals.</em>. C. 墮餓鬼、畜生中. The Taisho omits mention of Hell here, but an alternate reading includes it. I’ve adopted it as this is another obvious copyist omission. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 27 July 2023
-{: .revised}
-
----
+<hr/>
