--- a/01_agama/ekottarika/14/EA_14_07.md
+++ b/01_agama/ekottarika/14/EA_14_07.md
@@ -1,43 +1,52 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 7. False Speech'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 7. False Speech'
 type: kramdown
 base: ../../../
 previous: EA_14_06.html
 next: EA_14_08.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 7. False Speech
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七) 妄語</th>
+  <th class='en'>7. False Speech</th>
+  <tr>
+    <td class='ch' title='T125.2.576c9'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c10'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，成地獄行、餓鬼、畜生行。 若生人中，口氣臭惡，為人所憎。 所謂妄語。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, the actions of hungry ghosts, and the actions of animals. If they were born among humans, a person will have foul breath, and people will dislike them. What is that one thing? It’s false speech.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c13'>「諸比丘，若有人妄言，綺語，鬪亂是非，便墮畜生、餓鬼中。 所以者何？ 以其妄語故也。</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person speaks falsely, uses flattery, and instigates conflicts between one group and another, they will fall into Hell, among the hungry ghosts, or among animals.<sup id="ref2"><a href="#n2">2</a></sup> Why is that? It’s because they spoke falsely.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c15'>「是故，當至誠莫得妄語。 是故，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should always train in being honest and not speak falsely. Thus, monks, you should train yourselves.”<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c16'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, the actions of hungry ghosts, and the actions of animals. If they were born among humans, a person will have foul breath, and people will dislike them. What is that one thing? It’s false speech.
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person speaks falsely, uses flattery, and instigates conflicts between one group and another, they will fall into Hell, among the hungry ghosts, or among animals.[\[1\]](#n1){:#ref1} Why is that? It’s because they spoke falsely.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you should always train in being honest and not speak falsely. Thus, monks, you should train yourselves.”[\[2\]](#n2){:#ref2}
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576c09" target="_blank">T125.2.576c9-17</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>instigates conflicts between one group and another, they will fall into Hell, among the hungry ghosts, and among animals</em>. C. 鬪亂是非，便墮畜生、餓鬼中。 I’ve adopted alternate readings that change this passage to “鬪亂<strong>彼此</strong>，便墮<strong>地獄</strong>、畜生、餓鬼中.” I’ve also corrected the order of the bad destinies in my translation to place animals last, which follows the pattern in this chapter. Uncorrected, the Taisho reads: “instigates conflicts, right or wrong, they will fall among animals and hungry ghosts.” [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Therefore, monks, one should always … Thus, monks …</em>. C. 是故，當至誠莫得妄語。是故，諸比丘，當作是學. I’ve adopted alternate readings that correct obvious corruptions to this standard conclusion. The Taisho omits “monks” in the first sentence, and then changes “thus” to “therefore.” Uncorrected, the Taisho reads: “Therefore, you should be honest and not speak falsely.^Therefore, monks, you should train yourselves.” [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 31 July 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} <em>instigates conflicts between one group and another, they will fall into Hell, among the hungry ghosts, and among animals</em>. C. 鬪亂是非，便墮畜生、餓鬼中。 I’ve adopted alternate readings that change this passage to “鬪亂<strong>彼此</strong>，便墮<strong>地獄</strong>、畜生、餓鬼中.” I’ve also corrected the order of the bad destinies in my translation to place animals last, which follows the pattern in this chapter. Uncorrected, the Taisho reads: “instigates conflicts, right or wrong, they will fall among animals and hungry ghosts.” [\[back\]](#ref1)
-2. {:#n2} <em>Therefore, monks, one should always … Thus, monks …</em>. C. 是故，當至誠莫得妄語。是故，諸比丘，當作是學. I’ve adopted alternate readings that correct obvious corruptions to this standard conclusion. The Taisho omits “monks” in the first sentence, and then changes “thus” to “therefore.” Uncorrected, the Taisho reads: “Therefore, you should be honest and not speak falsely.^Therefore, monks, you should train yourselves.” [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 31 July 2023
-{: .revised}
-
----
+<hr/>
