--- a/01_agama/ekottarika/14/EA_14_09.md
+++ b/01_agama/ekottarika/14/EA_14_09.md
@@ -1,43 +1,52 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 9. Drinking Alcohol'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 9. Drinking Alcohol'
 type: kramdown
 base: ../../../
 previous: EA_14_08.html
 next: EA_14_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 9. Drinking Alcohol
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九) 飮酒</th>
+  <th class='en'>9. Drinking Alcohol</th>
+  <tr>
+    <td class='ch' title='T125.2.576c25'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c26'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受畜生、餓鬼、地獄罪。 若生人中，狂愚、癡惑，不識真僞。 所謂飮酒也。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the misdeeds of animals, hungry ghosts, and Hell.<sup id="ref2"><a href="#n2">2</a></sup> If they were born among humans, a person will be made mentally ill, deluded, and unaware of what’s true or false. What is that one thing? It’s drinking alcohol.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c29'>「諸比丘，若有人心好飮酒，所生之處無有智慧，常懷愚癡⋯</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person likes drinking alcohol, they’ll be born where there’s no wisdom, and they’ll always harbor delusions there …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a1'>「如是，諸比丘，愼莫飮酒。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should take care not to drink alcohol.<sup id="ref3"><a href="#n3">3</a></sup> Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a2'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the misdeeds of animals, hungry ghosts, and Hell.[\[1\]](#n1){:#ref1} If they were born among humans, a person will be made mentally ill, deluded, and unaware of what’s true or false. What is that one thing? It’s drinking alcohol.
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person likes drinking alcohol, they’ll be born where there’s no wisdom, and they’ll always harbor delusions there …
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you should take care not to drink alcohol.[\[2\]](#n2){:#ref2} Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576c25" target="_blank">T125.2.576c25-7a3</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>misdeeds of animals, hungry ghosts, and Hell</em>. C. 畜生、餓鬼、地獄罪. Here, this phrase is in reverse order compared to how it occurs in the other <em>sūtra</em>s of this chapter. It’s also more specific about the actions involved being misdeeds. There’s no alternate reading to indicate that this was a later change, so I’ve left it as-is. In the other <em>sūtra</em>s, the same phrase reads: “actions of Hell, hungry ghosts, and animals.” [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Therefore, monks</em>. C. 如是，諸比丘⋯. Here, I’ve adopted an alternate reading that corrects “thus” to “therefore” to match the usual conclusion. [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 31 July 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} <em>misdeeds of animals, hungry ghosts, and Hell</em>. C. 畜生、餓鬼、地獄罪. Here, this phrase is in reverse order compared to how it occurs in the other <em>sūtra</em>s of this chapter. It’s also more specific about the actions involved being misdeeds. There’s no alternate reading to indicate that this was a later change, so I’ve left it as-is. In the other <em>sūtra</em>s, the same phrase reads: “actions of Hell, hungry ghosts, and animals.” [\[back\]](#ref1)
-2. {:#n2} <em>Therefore, monks</em>. C. 如是，諸比丘⋯. Here, I’ve adopted an alternate reading that corrects “thus” to “therefore” to match the usual conclusion. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 31 July 2023
-{: .revised}
-
----
+<hr/>
