--- a/01_agama/ekottarika/15/EA_15_01.md
+++ b/01_agama/ekottarika/15/EA_15_01.md
@@ -1,44 +1,53 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 1. Two Kinds of Views'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 1. Two Kinds of Views'
 type: kramdown
 base: ../../../
 previous: ../14/EA_14_10.html
 next: EA_15_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 1. Two Kinds of Views
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一) 二見</th>
+  <th class='en'>1. Two Kinds of Views</th>
+  <tr>
+    <td class='ch' title='T125.2.577a15'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a16'>爾時，世尊告諸比丘： 「當知有此二見。 云何為二？ 所謂有見、無見。 諸有沙門、婆羅門，於此二見習已誦已，終不從其法如實而不知。 此則非沙門、婆羅門，於沙門則犯沙門法，於婆羅門則犯婆羅門法。 此沙門終不以身作證而自遊戲。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “You should know that there are two kinds of views. What are the two? They are the views of existence and views of inexistence.<sup id="ref2"><a href="#n2">2</a></sup> There are ascetics and priests who, having developed and recited these two kinds of views, never follow their Dharmas and don’t truly understand them. They therefore aren’t ascetics or priests, for those ascetics violate the way of ascetics, and those priests violate the way of priests. Those ascetics and priests<sup id="ref3"><a href="#n3">3</a></sup> entertain themselves with things they never realize for themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a21'>「諸有沙門、婆羅門於此二見誦讀、諷念，知捨如實而知。 此則沙門持沙門行，婆羅門知婆羅門行。 自身取證而自遊戲。 生死已盡，梵行已立。 更不復受有如真知之。</td>
+    <td id='p3'>3. “There are ascetics and priests who recite and memorize these two kinds of views, but they know to discard them when they truly understand them. These therefore are ascetics who keep to the ascetic practice and priests who know the priestly practice. They entertain themselves with things they’ve realized for themselves. Birth and death is ended, the religious practice is established, and the task is accomplished.<sup id="ref4"><a href="#n4">4</a></sup> They truly know that they won’t be subject to another existence.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a25'>「是故，諸比丘，於此二見不應習行，不應諷誦。 盡當捨離。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you shouldn’t cultivate these two kinds of views, nor should you recite them. You should abandoned all of them. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a27'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “You should know that there are two kinds of views. What are the two? They are the views of existence and views of inexistence.[\[1\]](#n1){:#ref1} There are ascetics and priests who, having developed and recited these two kinds of views, never follow their Dharmas and don’t truly understand them. They therefore aren’t ascetics or priests, for those ascetics violate the way of ascetics, and those priests violate the way of priests. Those ascetics and priests[\[2\]](#n2){:#ref2} entertain themselves with things they never realize for themselves.
-{:#p2}
+<hr/>
 
-3\. “There are ascetics and priests who recite and memorize these two kinds of views, but they know to discard them when they truly understand them. These therefore are ascetics who keep to the ascetic practice and priests who know the priestly practice. They entertain themselves with things they’ve realized for themselves. Birth and death is ended, the religious practice is established, and the task is accomplished.[\[3\]](#n3){:#ref3} They truly know that they won’t be subject to another existence.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you shouldn’t cultivate these two kinds of views, nor should you recite them. You should abandoned all of them. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577a15" target="_blank">T125.2.577a15-28</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>views of existence and views of inexistence</em>. C. 有見、無見. The next <em>sūtra</em> gives these two categories some definition. The views of existence involve views about the three realms of existence: desire, form, and formlessness. The views of inexistence refer to the various views about the past and future that are listed in detail in sources like the <em>Brahmajāla Sūtra</em> (cf. <a href="https://suttacentral.net/dn1" target="_blank">DN 1</a> and <a href="https://canon.dharmapearls.net/01_agama/dirgha/DA_21.html" target="">DĀ 21</a>). It may seem counterintuitive to call them views of inexistence, but most Buddhist schools besides the Sarvāstivādins considered the past and future to not exist. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Those ascetics and priests</em>. C. 此沙門. I’ve adopted an older reading here that mentions priests too, since the passage lumps both together. The Taisho reading is likely a later omission. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>the task has been accomplished</em>. The Taisho reading omits this phrase, but an older reading includes it. I’ve restored it in my translation. [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} <em>views of existence and views of inexistence</em>. C. 有見、無見. The next <em>sūtra</em> gives these two categories some definition. The views of existence involve views about the three realms of existence: desire, form, and formlessness. The views of inexistence refer to the various views about the past and future that are listed in detail in sources like the <em>Brahmajāla Sūtra</em> (cf. <a href="https://suttacentral.net/dn1" target="_blank">DN 1</a> and <a href="https://canon.dharmapearls.net/01_agama/dirgha/DA_21.html" target="">DĀ 21</a>). It may seem counterintuitive to call them views of inexistence, but most Buddhist schools besides the Sarvāstivādins considered the past and future to not exist. [\[back\]](#ref1)
-2. {:#n2} <em>Those ascetics and priests</em>. C. 此沙門. I’ve adopted an older reading here that mentions priests too, since the passage lumps both together. The Taisho reading is likely a later omission. [\[back\]](#ref2)
-3. {:#n3} <em>the task has been accomplished</em>. The Taisho reading omits this phrase, but an older reading includes it. I’ve restored it in my translation. [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
