--- a/01_agama/ekottarika/15/EA_15_02.md
+++ b/01_agama/ekottarika/15/EA_15_02.md
@@ -1,47 +1,57 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 2. Two Kinds of Views (2)'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 2. Two Kinds of Views (2)'
 type: kramdown
 base: ../../../
 previous: EA_15_01.html
 next: EA_15_03.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 2. Two Kinds of Views (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(二) 二見</th>
+  <th class='en'>2. Two Kinds of Views (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.577a29'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b1'>爾時，世尊告諸比丘： 「有此二見。 云何為二見？ 所謂有見、無見。 彼云何為有見？ 所謂欲有見、色有見、無色有見。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two kinds of views. What are the two? They are the views of existence and the views of inexistence. Of those, which are the views of existence? They are the view of desire existence, view of form existence, and view of formless existence.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b3'>「彼云何為欲有見？ 所謂五欲是也。 云何為五欲？ 所謂眼見色甚愛、敬、念。 未曾捨離，世人宗奉。 若耳聞聲⋯鼻嗅香⋯口知味⋯身知細滑⋯意了諸法⋯ 是謂有見。</td>
+    <td id='p3'>3. “What is the view of desire existence? This refers to the five desires. What are the five desires? They are forms seen by the eye that are extremely desirable, esteemed, and thought about. Having never abandoned forms, worldly people revere them. When the ear hears sounds … nose smells odors … tongue tastes flavors … body feels tender touches … mind cognizes notions … These are said to be the views of existence.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b7'>「彼云何名為無見？ 所謂有常見、無常見、有斷滅見、無斷滅見、有邊見、無邊見、有身見、無身見、有命見、無命見、異身見、異命見⋯ 此六十二見名曰無見亦非真見。 是謂名為無見。</td>
+    <td id='p4'>4. “What are the views of inexistence? They are the view of permanence, view of impermanence, view of something being destroyed, view of nothing being destroyed, view of being limited, view of being limitless, view of having a self, view of no self, view of having life, view of no life, view of other selves, view of other lives … These sixty-two views are called views of inexistence and unreal views. These are said to be the views of inexistence.<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b11'>「是故，諸比丘，當捨此二見。 如是，諸比丘，當作是學。」</td>
+    <td id='p5'>5. “Therefore, monks, you should abandon these two kinds of views. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b12'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p6'>6. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are two kinds of views. What are the two? They are the views of existence and the views of inexistence. Of those, which are the views of existence? They are the view of desire existence, view of form existence, and view of formless existence.
-{:#p2}
+<hr/>
 
-3\. “What is the view of desire existence? This refers to the five desires. What are the five desires? They are forms seen by the eye that are extremely desirable, esteemed, and thought about. Having never abandoned forms, worldly people revere them. When the ear hears sounds … nose smells odors … tongue tastes flavors … body feels tender touches … mind cognizes notions … These are said to be the views of existence.[\[1\]](#n1){:#ref1}
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “What are the views of inexistence? They are the view of permanence, view of impermanence, view of something being destroyed, view of nothing being destroyed, view of being limited, view of being limitless, view of having a self, view of no self, view of having life, view of no life, view of other selves, view of other lives … These sixty-two views are called views of inexistence and unreal views. These are said to be the views of inexistence.[\[2\]](#n2){:#ref2}
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577a29" target="_blank">T125.2.577a29-b13</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>These are said to be the views of existence</em>. Unfortunately, the definitions of the next two views of form and formless existence have been abbreviated away or lost. Presumably, they would have been related to the form and formless realm heavens. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>These are said to be views of inexistence</em>. This definition may at first seem strange until we remember that the sixty-two views as found in the <em>Brahmajāla Sūtra</em> (<a href="https://suttacentral.net/dn1" target="_blank">DN 2</a> and <a href="https://canon.dharmapearls.net/01_agama/dirgha/DA_21.html" target="_blank">DĀ 21</a>) are broadly speculative views about the past and future. Outside of the Sarvāstivādins, Buddhists didn’t consider the past and future existent. Thus, this particular definition of existence and inexistence is based on the three times: The present world is existence and the past and future are inexistence.</p>
+<p>I’ve not yet found another source that defines these two views in this way, but this passage would be a point against the possibility that this EĀ belonged to a Sarvāstivāda canon. [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Therefore, monks, you should abandon these two kinds of views. Thus, monks, you should train yourselves.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
-6\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p6}
-
----
-
-### Notes
-
-1. {:#n1} <em>These are said to be the views of existence</em>. Unfortunately, the definitions of the next two views of form and formless existence have been abbreviated away or lost. Presumably, they would have been related to the form and formless realm heavens. [\[back\]](#ref1)
-2. {:#n2} <em>These are said to be views of inexistence</em>. This definition may at first seem strange until we remember that the sixty-two views as found in the <em>Brahmajāla Sūtra</em> (<a href="https://suttacentral.net/dn1" target="_blank">DN 2</a> and <a href="https://canon.dharmapearls.net/01_agama/dirgha/DA_21.html" target="_blank">DĀ 21</a>) are broadly speculative views about the past and future. Outside of the Sarvāstivādins, Buddhists didn’t consider the past and future existent. Thus, this particular definition of existence and inexistence is based on the three times: The present world is existence and the past and future are inexistence.<br/>
-I’ve not yet found another source that defines these two views in this way, but this passage would be a point against the possibility that this EĀ belonged to a Sarvāstivāda canon. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
