--- a/01_agama/ekottarika/15/EA_15_03.md
+++ b/01_agama/ekottarika/15/EA_15_03.md
@@ -1,40 +1,47 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 3. Two Kinds of Gifts'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 3. Two Kinds of Gifts'
 type: kramdown
 base: ../../../
 previous: EA_15_02.html
 next: EA_15_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 3. Two Kinds of Gifts
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(三) 二施</th>
+  <th class='en'>3. Two Kinds of Gifts</th>
+  <tr>
+    <td class='ch' title='T125.2.577b14'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b15'>爾時，世尊告諸比丘： 「有此二施。 云何為二？ 所謂法施、財施。 諸比丘，施中之上者不過法施。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two kinds of gifts. What are the two? They are Dharma gifts and material gifts.<sup id="ref2"><a href="#n2">2</a></sup> Monks, the best of gifts doesn’t go beyond Dharma gifts.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b17'>「是故，諸比丘，常當學法施。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. Therefore, monks, you should always train in making Dharma gifts. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b18'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are two kinds of gifts. What are the two? They are Dharma gifts and material gifts.[\[2\]](#n2){:#ref2} Monks, the best of gifts doesn’t go beyond Dharma gifts.
-{:#p2}
+<hr/>
 
-3\. Therefore, monks, you should always train in making Dharma gifts. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577b14" target="_blank">T125.2.577b14-9</a>. This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/an2.141" target="_blank">AN 2.141</a>. The next two also appear to be generally parallel to AN 2.141-150. This would appear to be another case of the curators of AN expanding a couple older <em>sūtra</em>s into a full chapter of ten. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>material gifts</em>. C. 財施. The Pali parallel has <em>āmisadāna</em>. <em>Āmisa</em> generally means physical things. Sometimes it means specifically food or bodily concerns, but it can also been worldly possessions and wealth. It seems likely the same underlying term was translated here, but it was interpreted as possessions (presumably those typical of alms giving). [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/an2.141" target="_blank">AN 2.141</a>. The next two also appear to be generally parallel to AN 2.141-150. This would appear to be another case of the curators of AN expanding a couple older <em>sūtra</em>s into a full chapter of ten. [\[back\]](#ref1)
-2. {:#n2} <em>material gifts</em>. C. 財施. The Pali parallel has <em>āmisadāna</em>. <em>Āmisa</em> generally means physical things. Sometimes it means specifically food or bodily concerns, but it can also been worldly possessions and wealth. It seems likely the same underlying term was translated here, but it was interpreted as possessions (presumably those typical of alms giving). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
