--- a/01_agama/ekottarika/15/EA_15_04.md
+++ b/01_agama/ekottarika/15/EA_15_04.md
@@ -1,39 +1,47 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 4. Two Kinds of Work'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 4. Two Kinds of Work'
 type: kramdown
 base: ../../../
 previous: EA_15_03.html
 next: EA_15_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 4. Two Kinds of Work
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 二業</th>
+  <th class='en'>4. Two Kinds of Work</th>
+  <tr>
+    <td class='ch' title='T125.2.577b20'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b21'>爾時，世尊告諸比丘： 「有此二業。 云何為二業？ 有法業、有財業。 業中之上者不過法業。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two kinds of work.<sup id="ref2"><a href="#n2">2</a></sup> What are the two? They are Dharma work and material work. Monks, the best kind of work doesn’t go beyond the Dharma work.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b23'>「是故，諸比丘，當學法業不學財業。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. Therefore, monks, you should always train in Dharma work and not in material work. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b24'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are two kinds of work.[\[1\]](#n1){:#ref1} What are the two? They are Dharma work and material work. Monks, the best kind of work doesn’t go beyond the Dharma work.
-{:#p2}
+<hr/>
 
-3\. Therefore, monks, you should always train in Dharma work and not in material work. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577b20" target="_blank">T125.2.577b20-5</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>two kinds of work</em>. C. 二業. C. 業 could be read as “deeds,” but it seems awkward in this context. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
-### Notes
-
-1. {:#n1} <em>two kinds of work</em>. C. 二業. C. 業 could be read as “deeds,” but it seems awkward in this context. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
