--- a/01_agama/ekottarika/15/EA_15_05.md
+++ b/01_agama/ekottarika/15/EA_15_05.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 5. Two Kinds of Favors'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 5. Two Kinds of Favors'
 type: kramdown
 base: ../../../
 previous: EA_15_04.html
 next: EA_15_06.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 5. Two Kinds of Favors
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五) 二恩</th>
+  <th class='en'>5. Two Kinds of Favors</th>
+  <tr>
+    <td class='ch' title='T125.2.577b26'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b27'>爾時世尊告諸比丘： 「有此二恩。 云何為二？ 所謂法恩、財恩。 恩中之上者所謂不過法恩也。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are these two favors. What are the two? They are Dharma favors and material favors. The best of favors doesn’t go beyond Dharma favors.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577b29'>「是故，諸比丘，當修行法恩。 如是，諸比丘，當作是學。</td>
+    <td id='p3'>3. “Therefore, monks, you should cultivate Dharma favors. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c1'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are these two favors. What are the two? They are Dharma favors and material favors. The best of favors doesn’t go beyond Dharma favors.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, you should cultivate Dharma favors. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577b26" target="_blank">T125.2.577b26-c2</a>. This <em>sūtra</em> appears to have had a parallel in another Indic <em>Ekottarika Āgama</em> preserved only in a few fragments. Yusen Okubo documented the fragment of a <em>sūtra</em> on “two favors” (S. <em>dve bhakti</em>) in his paper <em>Ekottara-āgama Fragments in the Gilgit Manuscript</em> (p. 27), which was part of a chapter on gifts parallel with <a href="https://suttacentral.net/an2.141-150" target="_blank">AN 2.141-150</a>. On the other hand, it may be a parallel of AN 2.149 where P. <em>anuggaha</em> can also be interpreted as “favors, assistance.” [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
-### Notes
-
-1. {:#n1} This <em>sūtra</em> appears to have had a parallel in another Indic <em>Ekottarika Āgama</em> preserved only in a few fragments. Yusen Okubo documented the fragment of a <em>sūtra</em> on “two favors” (S. <em>dve bhakti</em>) in his paper <em>Ekottara-āgama Fragments in the Gilgit Manuscript</em> (p. 27), which was part of a chapter on gifts parallel with <a href="https://suttacentral.net/an2.141-150" target="_blank">AN 2.141-150</a>. On the other hand, it may be a parallel of AN 2.149 where P. <em>anuggaha</em> can also be interpreted as “favors, assistance.” [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
