--- a/01_agama/ekottarika/15/EA_15_06.md
+++ b/01_agama/ekottarika/15/EA_15_06.md
@@ -1,42 +1,50 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 6. Two Signs of a Fool'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 6. Two Signs of a Fool'
 type: kramdown
 base: ../../../
 previous: EA_15_05.html
 next: EA_15_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 6. Two Signs of a Fool
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六) 愚者二相</th>
+  <th class='en'>6. Two Signs of a Fool</th>
+  <tr>
+    <td class='ch' title='T125.2.577c3'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c4'>爾時，世尊告諸比丘： 「愚者有此二相、像貎。 云何為二？ 於是，愚者所不能辦者而辦之，垂辦之事厭而捨之。 是謂，諸比丘，愚者有此二相、像貎。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “A fool has these two signs and appearances. What are the two? Here, a fool who is incapable of accomplishing something still undertakes it, or they grow tired and abandon something they’re close to accomplishing. These, monks, are said to be two signs and appearances of a fool.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c7'>「復次，比丘，智者有二相、像貎。 云何為二？ 於是，智者所不能辦事亦不成辦，垂辦之事亦不厭捨⋯</td>
+    <td id='p3'>3. “Furthermore, monks, a wise person has two signs and appearances. What are the two? Here, a wise person doesn’t undertake something that they can’t accomplish, and they don’t abandon something that they’re close to accomplishing …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c9'>「是故，諸比丘，愚者二相、像貎當捨離之，當念修行智者二相。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, these two signs and appearances of a fool should be abandoned, and you should remember and cultivate these two signs and appearances of a wise person. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c11'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “A fool has these two signs and appearances. What are the two? Here, a fool who is incapable of accomplishing something still undertakes it, or they grow tired and abandon something they’re close to accomplishing. These, monks, are said to be two signs and appearances of a fool.
-{:#p2}
+<hr/>
 
-3\. “Furthermore, monks, a wise person has two signs and appearances. What are the two? Here, a wise person doesn’t undertake something that they can’t accomplish, and they don’t abandon something that they’re close to accomplishing …
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, these two signs and appearances of a fool should be abandoned, and you should remember and cultivate these two signs and appearances of a wise person. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577c03" target="_blank">T125.2.577c3-12</a>. This <em>sūtra</em> is of the same type as <a href="https://suttacentral.net/an2.134" target="_blank">AN 2.134-137</a>, but it presents a different version of the two signs of a fool and a wise person. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is of the same type as <a href="https://suttacentral.net/an2.134" target="_blank">AN 2.134-137</a>, but it presents a different version of the two signs of a fool and a wise person. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
