--- a/01_agama/ekottarika/15/EA_15_08.md
+++ b/01_agama/ekottarika/15/EA_15_08.md
@@ -1,36 +1,43 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 8. Honoring the Dharma'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 8. Honoring the Dharma'
 type: kramdown
 base: ../../../
 previous: EA_15_07.html
 next: EA_15_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 8. Honoring the Dharma
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八) 禮法</th>
+  <th class='en'>8. Honoring the Dharma</th>
+  <tr>
+    <td class='ch' title='T125.2.577c19'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c20'>爾時，世尊告諸比丘： 「有此二法，内自思惟、專精、一意，當禮法寶，亦禮如來神廟。 云何二法？ 有力、有無畏。 是謂比丘有此二法，内自思惟、專精、一意，當禮法寶，及如來神廟。 如是，諸比丘，當作是學。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two things that honor the Dharma jewel as well as the shrines of the Tathāgata and gods when one contemplates and focuses of them single-mindedly. What are the two things? Possessing the powers and kinds of fearlessness.<sup id="ref2"><a href="#n2">2</a></sup> Monks, these are two things that honor the Dharma jewel and the shrines of the Tathāgata and gods when one contemplates and focuses on them single-mindedly. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c24'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p3'>3. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are two things that honor the Dharma jewel as well as the shrines of the Tathāgata and gods when one contemplates and focuses of them single-mindedly. What are the two things? Possessing the powers and kinds of fearlessness.[\[1\]](#n1){:#ref1} Monks, these are two things that honor the Dharma jewel and the shrines of the Tathāgata and gods when one contemplates and focuses on them single-mindedly. Thus, monks, you should train yourselves.”
-{:#p2}
+<hr/>
 
-3\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
----
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577c19" target="_blank">T125.2.577c19-25</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>possessing powers and kinds of fearlessness</em>. C. 有力、有無畏. The C. doesn’t explicitly make these two things plural, but I take them to refer to the ten powers and four kinds of fearlessness, which are commonly ascribed to <em>buddha</em>s rather than disciples. It may be a reference to lesser rubrics like the five powers and confidence in teaching. If the former was the case, then this <em>sūtra</em> would be encouraging a <em>bodhisattva</em> practice. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-### Notes
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
-1. {:#n1} <em>possessing powers and kinds of fearlessness</em>. C. 有力、有無畏. The C. doesn’t explicitly make these two things plural, but I take them to refer to the ten powers and four kinds of fearlessness, which are commonly ascribed to <em>buddha</em>s rather than disciples. It may be a reference to lesser rubrics like the five powers and confidence in teaching. If the former was the case, then this <em>sūtra</em> would be encouraging a <em>bodhisattva</em> practice. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
