--- a/01_agama/ekottarika/15/EA_15_09.md
+++ b/01_agama/ekottarika/15/EA_15_09.md
@@ -1,30 +1,42 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 9. Honoring the Tathāgata’s Shrine'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 9. Honoring the Tathāgata’s Shrine'
 type: kramdown
 base: ../../../
 previous: EA_15_08.html
 next: EA_15_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 9. Honoring the Tathāgata’s Shrine
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九) 禮如來廟</th>
+  <th class='en'>9. Honoring the Tathāgata’s Shrine</th>
+  <tr>
+    <td class='ch' title='T125.2.577c26'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c27'>爾時，世尊告諸比丘： 「有此二法，内自思惟、專精、一意，禮如來寺。 云何為二法？ 如來與世間人民無與等者，如來有大慈大悲，矜念十方。 是謂，比丘，有此二法，内自思惟、專精、一意，禮如來寺。 如是，諸比丘，當作是學。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two things that honor the Tathāgata’s shrine when one contemplates and focuses on them single-mindedly. What are the two things? The Tathāgata has no equals among worldly people, and the Tathāgata possesses great kindness and great compassion, being mindful of every direction. Monks, these are two things that honor the Tathāgata’s shrine when one contemplates and focuses on them single-mindedly. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.578a3'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p3'>3. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are two things that honor the Tathāgata’s shrine when one contemplates and focuses on them single-mindedly. What are the two things? The Tathāgata has no equals among worldly people, and the Tathāgata possesses great kindness and great compassion, being mindful of every direction. Monks, these are two things that honor the Tathāgata’s shrine when one contemplates and focuses on them single-mindedly. Thus, monks, you should train yourselves.”
-{:#p2}
+<hr/>
 
-3\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
----
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577c26" target="_blank">T125.2.577c26-8a3</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
----
+<hr/>
