--- a/01_agama/ekottarika/16/EA_16_01.md
+++ b/01_agama/ekottarika/16/EA_16_01.md
@@ -1,125 +1,191 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 16. Putting Out the Fire | 1. Nanda'
+title: 'The Numerical Discourses | Chapter 16: The Fire Extinguished | 1. Nanda'
 type: kramdown
 base: ../../../
 previous: ../15/EA_15_10.html
 next: EA_16_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 16: The Fire Extinguished
-### 1. Nanda
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 16: The Fire Extinguished</h2>
 
-1\. “Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一） 難陀</th>
+  <th class='en'>1. Nanda</th>
+  <tr>
+    <td class='ch' title='t125.2.578a13'>聞如是： 一時，佛在舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. “Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578a14'>爾時，尊者難陀在舍衛城象華園中。 是時，尊者難陀在閑靜處，便生是念： 「如來出世甚為難遇。 億劫乃出，實不可見。 如來久遠長夜時乃出耳。 猶如優曇鉢花時乃出現，此亦如是。 如來出世甚為難遇。 億劫乃出，實不可見。 此處亦難遇： 一切諸行悉休息止，愛盡無餘，亦無染污，滅盡泥洹。」</td>
+    <td id='p2'>2. At the time, Venerable Nanda was staying in Nāgapuṣpa Park<sup id="ref2"><a href="#n2">2</a></sup> near the city of Śrāvastī. While residing in a secluded place, Venerable Nanda had this thought: “It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. It’s just a very long night until he appears. It’s like the time it takes for the <em>udumbara</em> flower to appear. It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. And there are other things that are hard to encounter: All actions coming to a stop, the end of craving without remainder, the lack of defilement, and the complete cessation of <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578a20'>爾時，有一魔行天子，知尊者難陀心中所念，便往至孫陀利釋種女所。 飛在虛空，以頌而嗟歎曰：</td>
+    <td id='p3'>3. Knowing this thought in Venerable Nanda’s mind, Māra acting as a god went to the Śakyan woman Sundarī.<sup id="ref3"><a href="#n3">3</a></sup> He hovered in the sky as he called to her in verse:</td>
+  </tr>
+<tr>
+  <td title='t125.2.578a24'><ul class='verse'>
+    <li class='ch'>「汝今發歡喜，<br/>
+    嚴服作五樂！<br/>
+    難陀今捨服；<br/>
+    當來相娛樂！」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Today is a day for you to rejoice,<br/>
+    And put on the dress of the five pleasures!<br/>
+    Nanda has discarded the Dharma robes;<br/>
+    He’s coming to enjoy himself with you!”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='t125.2.578a26'>爾時，孫陀利釋種女聞天語已，歡喜，踊躍，不能自勝。 便自莊嚴，修飾房舍，敷好坐具，作倡妓樂，如難陀在家無異。</td>
+    <td id='p4'>4. The Śakyan woman Sundarī rejoiced and celebrated when she heard what that god said, and she was unable to control herself. She dressed herself up, decorated the rooms of her house, prepared fine seats, and danced to music, just as she had when Nanda lived at home.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578a28'>爾時，王波斯匿集在普會講堂，聞難陀比丘還捨法服，習于家業。 所以然者，有天在空中告其妻曰。</td>
+    <td id='p5'>5. Then, King Prasenajit was attending a meeting in his discussion hall when he heard that the monk Nanda had renounced the Dharma robes and would return to working for his family. The reason for this was that a god in the sky had told this to Nanda’s wife.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b1'>是時，王波斯匿聞是語已，便懷愁憂。 即乘駕白象，往至彼園。 到已，便入華象池中。 遙見尊者難陀，便前至難陀所，頭面禮足，在一面坐。</td>
+    <td id='p6'>6. When he heard this said, King Presenajit felt aggrieved. He rode his white elephant to that park. Arriving there, he waded into Lake Nāgapuṣpa. Seeing him from afar, he walked up to Venerable Nanda, bowed his head at his feet, and then sat to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b4'>爾時，尊者難陀告波斯匿曰： 「大王，何故來至此間，顏色變異？ 復有何事來至吾所？」</td>
+    <td id='p7'>7. Venerable Nanda then asked Prasenajit, “Great King, why have you come here looking so affected? Is there some reason you have come here to me?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b6'>波斯匿報曰： 「尊者當知，向在普集講堂，聞尊者捨法服，還作白衣。 聞此語已，故來至此，不審尊者。 何所勅告？」</td>
+    <td id='p8'>8. King Prasenajit replied, “Venerable, you ought to know that while I was attending a meeting in my discussion hall, I heard that the Venerable had discarded the Dharma robes and returned to wearing white clothes. Having heard that, I came here because I was worried about the Venerable. What instruction might he have?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b9'>是時，難陀含笑徐告王曰： 「不見、不聞，大王何故作此語耶？ 大王豈不從如來邊聞：我諸結已除，生死已盡，梵行已立，所作已辦？ 更不復受胞胎，如實而知？ 今成阿羅漢，心得解脫。」</td>
+    <td id='p9'>9. With an easy smile, Nanda then told the King, “Why does the King say this without seeing or hearing it himself? Hasn’t the King heard it from the Tathāgata that I’ve removed the bonds, that for me birth and death is ended, that I’ve established the religious life, and that I’ve accomplished the task? That I truly know that I won’t return to a womb again? I’ve become an <em>arhat</em>, and now my mind is liberated.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b13'>波斯匿曰： 「我不從如來聞：難陀比丘⋯生死已盡⋯得阿羅漢，心得解脫。 所以然者，有天來告孫陀利釋種女曰。 是時，孫陀利夫人聞此語已，便作倡妓樂，修治服飾，敷諸坐具。 我聞此語已，便來至尊者所。」</td>
+    <td id='p10'>10. The King replied, “I haven’t heard from the Tathāgata that the monk Nanda … has ended birth and death … has become an <em>arhat</em>, and his mind is liberated. The reason I said this was that a god came to the Śakyan woman Sundarī and told it to her. When she heard about it, your wife Sundarī danced, played music, mended her clothes and ornaments, and prepared seats. When I heard about it, I came here to the Venerable.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b17'>難陀告曰： 「王不知不聞，何故大王而作是語？ 諸有沙門、婆羅門無不樂此休息樂、善逝樂、沙門樂、涅槃樂。 而不自觀此婬火之坑。 復當就者此事不然。</td>
+    <td id='p11'>11. Venerable Nanda told the King, “Why does the Great King say this without witnessing or hearing it himself? There aren’t any ascetics or priests who don’t enjoy the happiness of respite, the happiness of being well gone, the happiness of the ascetic, and the happiness of <em>nirvāṇa</em>. They don’t contemplate the firepit of lustful desire. It wouldn’t be the case that they would go back to that.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b21'>「骨猶如鎖，肉如聚石。 猶蜜塗刀，坐貪小利，不慮後患。 亦如菓繁折枝、亦如假借不久當還、猶如劍樹之藪、亦如毒害藥、亦如毒藥、如毒華菓，觀此婬欲亦復如是。</td>
+    <td id='p12'>12. “Bones are like a chain, and flesh is like a pile of stones. Like a sword coated in honey, greed brings a little profit, but the trouble later can’t be foreseen. Like a branch broken by an abundance of fruit, like a loan that must be repaid soon, like a jungle of sword trees, like poisonous herbs, or like bitter leaves, flowers, and fruit, lustful desire should be contemplated as being likewise.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b25'>「意染著者此事不然。 從火坑之欲⋯乃至⋯毒菓，不觀此事，欲得度欲流、有流、見流、無明流者，此事不然。 以不度欲流、有流、見流、無明流，而欲得入無餘泥洹界而般泥洹者，此事不然。</td>
+    <td id='p13'>13. “It wouldn’t be the case that their minds would be addicted to that. If someone doesn’t contemplate that desire as a firepit … bitter fruit, but they want to cross the flood of desire, the flood of existence, the flood of views, and the flood of ignorance, they won’t be able to do it. If someone hasn’t crossed the flood of desire, the flood of existence, the flood of views, and the flood of ignorance, but they want to gain entry to the realm of remainderless <em>nirvāṇa</em>, to <em>parinirvāṇa</em>, they won’t be able to do it.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578b29'>「大王，當知諸有沙門、婆羅門觀察此休息樂、善逝樂、沙門樂、涅槃樂，此事不然。 彼以作是觀察，解了婬坑之火，猶如骨鎖、肉聚、蜜塗利刀、菓繁折枝、假借不久，亦如劍樹、毒樹，如毒害藥。 悉觀了知，此則有處。 已解了知婬火所興，便能得渡欲流、有流、見流、無明流，此事必然。 彼已渡欲流、有流、見流、無明流，此事必然。</td>
+    <td id='p14'>14. “Great King, you should know that this is surely the case for ascetics and priests who investigate the happiness of respite, the happiness of being well gone, the happiness of the ascetic, and the happiness of <em>nirvāṇa</em>. They understand from their investigations that the firepit of lustful desire is like a chain of bones, a pile of flesh, a sword coated in honey, a branch broken by an abundance of fruit, a loan that’s due, a sword tree, a poisonous tree, or a poisonous herb. They all investigate and comprehend that this is the case. Having fully understood it, they know what produces the fire of desire, and then they surely can cross the flood of desire, the flood of existence, the flood of views, and the flood of ignorance. They will surely have crossed the flood of desire, the flood of existence, the flood of views, and the flood of ignorance.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578c8'>「云何，大王？以何見何知而作是說？ 今我，大王，已成羅漢。 生死已盡，梵行已立，所作已辦。 更不復受母胞胎，心得解脫。」</td>
+    <td id='p15'>15. “How is it, Great King? What did you see and what did you know when you said that about me? Great King, I’ve now become an <em>arhat</em>. For me, birth and death has ended, the religious life has been established, and the task has been accomplished. I won’t again experience a mother’s womb, and my mind has been liberated.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578c11'>爾時，王波斯匿心懷歡喜，善心生焉，白尊者難陀曰： 「我今無狐疑如毛髮許。 方知尊者成阿羅漢，今請辭還，國事眾多。」</td>
+    <td id='p16'>16. Feeling joy in his heart, a good thought arose in King Prasenajit, and he said to Venerable Nanda, “I have not even a hair’s breadth of doubt about it. Now that I know the Venerable has become an <em>arhat</em>, I must take my leave and return to the many affairs of state.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578c13'>難陀對曰： 「宜知是時。」</td>
+    <td>Nanda replied, “You may go whenever it’s convenient.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.578c14'>爾時，王波斯匿即從坐起，頭面禮足，便退而去。 波斯匿王去未幾時，時彼魔天來至尊者難陀所。 住虛空中，復以此偈向難陀曰：</td>
+    <td id='p17'>17. King Prasenajit rose from his seat, bowed at Nanda’s feet, and departed. A moment after he had left, the Māra King came to Venerable Nanda.  Hovering in the sky, he addressed Nanda in verse:</td>
+  </tr>
+<tr>
+  <td title='t125.2.578c18'><ul class='verse'>
+    <li class='ch'>「夫人面如月；<br/>
+    金銀瓔珞身。<br/>
+    憶彼姿容顏<br/>
+    五樂恒自娛。<br/>
+    彈琴鼓絃歌；<br/>
+    音響甚柔軟。<br/>
+    能除諸愁憂<br/>
+    樂此林間為。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Your wife’s face is shaped like the moon;<br/>
+    She’s wearing gold and silver jewelry.<br/>
+    Recall how her shape and her countenance<br/>
+    Had always pleased you with the five pleasures.<br/>
+    She sings while strumming lutes and playing drums;<br/>
+    The sound of her voice is soft and gentle.<br/>
+    She’d be able to dispel all sadness<br/>
+    And spread happiness throughout this forest.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='t125.2.578c22'>是時，尊者難陀便作是念： 「此是魔行天人。」 覺知此已，復以偈報曰：</td>
+    <td id='p18'>18. Venerable Nanda then thought, “This is Māra acting as a god.” Having realized this, he replied in verse:</td>
+  </tr>
+<tr>
+  <td title='t125.2.578c24'><ul class='verse'>
+    <li class='ch'>「我昔有此心，<br/>
+    婬泆無厭足。<br/>
+    為欲所纏裹，<br/>
+    不覺老病死。<br/>
+    我度愛欲淵，<br/>
+    無污無所染。<br/>
+    榮位悉是苦；<br/>
+    獨樂真如法。<br/>
+    我今無諸結；<br/>
+    婬怒癡悉盡。<br/>
+    更不習此法，<br/>
+    愚者當覺知。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“I did have such thoughts as that in the past,<br/>
+    And my debauchery was tireless back then.<br/>
+    I was indeed tied up by my desires,<br/>
+    Not noticing old age, illness, and death.<br/>
+    Now, I’ve crossed over the flood of desire,<br/>
+    Without defilement and stained by nothing.<br/>
+    Honors and status are suffering, too;<br/>
+    The only real happiness is in Dharma.<br/>
+    Now, I don’t have any more of these bonds,<br/>
+    Lust, hatred, and delusion are all gone.<br/>
+    Those people who don’t train in this Dharma<br/>
+    Should be recognized and known as foolish.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='t125.2.579a1'>爾時，彼魔行天人聞此語便懷愁憂，即於彼沒不現。</td>
+    <td id='p19'>19. When he heard these words, Māra who was acting as a god felt aggrieved and disappeared from that place.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.579a2'>爾時，眾多比丘以此因緣具白世尊。 爾時，世尊告諸比丘： 「端正比丘者，無有勝難陀比丘。 諸根澹泊，亦難陀比丘是。 無有欲心，亦是難陀比丘。 無有瞋恚，亦是難陀比丘。 無有愚癡，亦是難陀比丘。 成阿羅漢，亦是難陀比丘。 所以然者，難陀比丘端正，諸根寂靜。」</td>
+    <td id='p20'>20. A group of monks related all these events to the Bhagavān. The Bhagavān told the monks, “There’s no monk who is more upright than that monk Nanda. In having an indifferent man4er,<sup id="ref4"><a href="#n4">4</a></sup> it’s also the monk Nanda. In having no thoughts of desire, it’s also the monk Nanda. In having no anger, it’s also the monk Nanda. In having no delusions, it’s also the monk Nanda. In becoming an <em>arhat</em>, it’s also the monk Nanda. For this reason, the monk Nanda is upright and peaceful in his manner.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.579a8'>爾時，世尊告諸比丘： 「我聲聞中弟子端正者，難陀比丘是。 諸根寂靜，是亦難陀比丘。」</td>
+    <td id='p21'>21. The Bhagavān then told the monks, “Among my disciples, the most upright is the monk Nanda. In having a peaceful manner, it’s also the monk Nanda who is best.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.579a10'>爾時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p22'>22. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. At the time, Venerable Nanda was staying in Nāgapuṣpa Park[\[1\]](#n1){:#ref1} near the city of Śrāvastī. While residing in a secluded place, Venerable Nanda had this thought: “It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. It’s just a very long night until he appears. It’s like the time it takes for the <em>udumbara</em> flower to appear. It’s so difficult to meet a Tathāgata when he appears in the world. It takes a million eons for him to appear, during which time he truly cannot be seen. And there are other things that are hard to encounter: All actions coming to a stop, the end of craving without remainder, the lack of defilement, and the complete cessation of <em>nirvāṇa</em>.
-{:#p2}
+<hr/>
 
-3\. Knowing this thought in Venerable Nanda’s mind, Māra acting as a god went to the Śakyan woman Sundarī.[\[2\]](#n2){:#ref2} He hovered in the sky as he called to her in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“Today is a day for you to rejoice,\\
-And put on the dress of the five pleasures!\\
-Nanda has discarded the Dharma robes;\\
-He’s coming to enjoy himself with you!”
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0578a13" target="_blank">T125.2.578a13-9a11</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Nāgapuṣpa Park</em>. C. 象華園. Presumably, C. 象華 (lit. “elephant flower”) is a lit. translation of S. <em>nāgapuṣpa</em> (G. <em>nagapuṣpa</em>). This was probably an ancient name of the Indian Ironwood tree (<a href="https://en.wikipedia.org/wiki/Mesua_ferrea" target="_blank"><em>Mesua ferrea</em></a>), the flowers of which figured as gifts in past life stories about previous <em>buddha</em>s in Pali commentaries. S. <em>nāgapuṣpikā</em> was also the name of a kind of yellow jasmine, but a park was more likely to be named after a tree. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Śakyan woman Sundarī</em>. C. 孫陀利釋種女, S. <em>sundarī śākyakanyā</em>. Nanda was the Buddha’s half-brother (by a different mother). Most Buddhist stories about his becoming a monk claim that he was engaged to be married when the Buddha convinced him to leave the lay life. These sources disagree as to this woman’s name, however. The Theravāda tradition says she was Janapadakalyānī Nandā. A Sanskrit tradition says she was named Yaśodharā. In the present tradition, she was apparently named Sundarī. It isn’t clear whether Nanda had actually married her in this version of events. It would seem so since she had remained single while he was a monk in this story, as is often the case in stories of monks having encounters with former romantic interests. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>an indifferent manner</em>. C. 諸根澹泊. I’m reading 諸根 to mean one’s face and limbs rather than the sense faculties (sight, hearing, etc.). This is a less common meaning of the word, which is most often used when someone sees the Buddha and notices how serene he appears. That reading fits this passage better to me. If we read 諸根 with its more common meaning, the passage would mean “senses that are indifferent,” and at the end of the paragraph “senses that are indifferent.” [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-4\. The Śakyan woman Sundarī rejoiced and celebrated when she heard what that god said, and she was unable to control herself. She dressed herself up, decorated the rooms of her house, prepared fine seats, and danced to music, just as she had when Nanda lived at home.
-{:#p4}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 31 August 2023</p>
 
-5\. Then, King Prasenajit was attending a meeting in his discussion hall when he heard that the monk Nanda had renounced the Dharma robes and would return to working for his family. The reason for this was that a god in the sky had told this to Nanda’s wife.
-{:#p5}
-
-6\. When he heard this said, King Presenajit felt aggrieved. He rode his white elephant to that park. Arriving there, he waded into Lake Nāgapuṣpa. Seeing him from afar, he walked up to Venerable Nanda, bowed his head at his feet, and then sat to one side.
-{:#p6}
-
-7\. Venerable Nanda then asked Prasenajit, “Great King, why have you come here looking so affected? Is there some reason you have come here to me?”
-{:#p7}
-
-8\. King Prasenajit replied, “Venerable, you ought to know that while I was attending a meeting in my discussion hall, I heard that the Venerable had discarded the Dharma robes and returned to wearing white clothes. Having heard that, I came here because I was worried about the Venerable. What instruction might he have?”
-{:#p8}
-
-9\. With an easy smile, Nanda then told the King, “Why does the King say this without seeing or hearing it himself? Hasn’t the King heard it from the Tathāgata that I’ve removed the bonds, that for me birth and death is ended, that I’ve established the religious life, and that I’ve accomplished the task? That I truly know that I won’t return to a womb again? I’ve become an <em>arhat</em>, and now my mind is liberated.”
-{:#p9}
-
-10\. The King replied, “I haven’t heard from the Tathāgata that the monk Nanda … has ended birth and death … has become an <em>arhat</em>, and his mind is liberated. The reason I said this was that a god came to the Śakyan woman Sundarī and told it to her. When she heard about it, your wife Sundarī danced, played music, mended her clothes and ornaments, and prepared seats. When I heard about it, I came here to the Venerable.”
-{:#p10}
-
-11\. Venerable Nanda told the King, “Why does the Great King say this without witnessing or hearing it himself? There aren’t any ascetics or priests who don’t enjoy the happiness of respite, the happiness of being well gone, the happiness of the ascetic, and the happiness of <em>nirvāṇa</em>. They don’t contemplate the firepit of lustful desire. It wouldn’t be the case that they would go back to that.
-{:#p11}
-
-12\. “Bones are like a chain, and flesh is like a pile of stones. Like a sword coated in honey, greed brings a little profit, but the trouble later can’t be foreseen. Like a branch broken by an abundance of fruit, like a loan that must be repaid soon, like a jungle of sword trees, like poisonous herbs, or like bitter leaves, flowers, and fruit, lustful desire should be contemplated as being likewise.
-{:#p12}
-
-13\. “It wouldn’t be the case that their minds would be addicted to that. If someone doesn’t contemplate that desire as a firepit … bitter fruit, but they want to cross the flood of desire, the flood of existence, the flood of views, and the flood of ignorance, they won’t be able to do it. If someone hasn’t crossed the flood of desire, the flood of existence, the flood of views, and the flood of ignorance, but they want to gain entry to the realm of remainderless <em>nirvāṇa</em>, to <em>parinirvāṇa</em>, they won’t be able to do it.
-{:#p13}
-
-14\. “Great King, you should know that this is surely the case for ascetics and priests who investigate the happiness of respite, the happiness of being well gone, the happiness of the ascetic, and the happiness of <em>nirvāṇa</em>. They understand from their investigations that the firepit of lustful desire is like a chain of bones, a pile of flesh, a sword coated in honey, a branch broken by an abundance of fruit, a loan that’s due, a sword tree, a poisonous tree, or a poisonous herb. They all investigate and comprehend that this is the case. Having fully understood it, they know what produces the fire of desire, and then they surely can cross the flood of desire, the flood of existence, the flood of views, and the flood of ignorance. They will surely have crossed the flood of desire, the flood of existence, the flood of views, and the flood of ignorance.
-{:#p14}
-
-15\. “How is it, Great King? What did you see and what did you know when you said that about me? Great King, I’ve now become an <em>arhat</em>. For me, birth and death has ended, the religious life has been established, and the task has been accomplished. I won’t again experience a mother’s womb, and my mind has been liberated.”
-{:#p15}
-
-16\. Feeling joy in his heart, a good thought arose in King Prasenajit, and he said to Venerable Nanda, “I have not even a hair’s breadth of doubt about it. Now that I know the Venerable has become an <em>arhat</em>, I must take my leave and return to the many affairs of state.”
-{:#p16}
-
-Nanda replied, “You may go whenever it’s convenient.”
-
-
-17\. King Prasenajit rose from his seat, bowed at Nanda’s feet, and departed. A moment after he had left, the Māra King came to Venerable Nanda.  Hovering in the sky, he addressed Nanda in verse:
-{:#p17}
-
-* {:.verse}“Your wife’s face is shaped like the moon;\\
-She’s wearing gold and silver jewelry.\\
-Recall how her shape and her countenance\\
-Had always pleased you with the five pleasures.\\
-She sings while strumming lutes and playing drums;\\
-The sound of her voice is soft and gentle.\\
-She’d be able to dispel all sadness\\
-And spread happiness throughout this forest.”
-
-18\. Venerable Nanda then thought, “This is Māra acting as a god.” Having realized this, he replied in verse:
-{:#p18}
-
-* {:.verse}“I did have such thoughts as that in the past,\\
-And my debauchery was tireless back then.\\
-I was indeed tied up by my desires,\\
-Not noticing old age, illness, and death.\\
-Now, I’ve crossed over the flood of desire,\\
-Without defilement and stained by nothing.\\
-Honors and status are suffering, too;\\
-The only real happiness is in Dharma.\\
-Now, I don’t have any more of these bonds,\\
-Lust, hatred, and delusion are all gone.\\
-Those people who don’t train in this Dharma\\
-Should be recognized and known as foolish.”
-
-19\. When he heard these words, Māra who was acting as a god felt aggrieved and disappeared from that place.
-{:#p19}
-
-20\. A group of monks related all these events to the Bhagavān. The Bhagavān told the monks, “There’s no monk who is more upright than that monk Nanda. In having an indifferent manner,[\[3\]](#n3){:#ref3} it’s also the monk Nanda. In having no thoughts of desire, it’s also the monk Nanda. In having no anger, it’s also the monk Nanda. In having no delusions, it’s also the monk Nanda. In becoming an <em>arhat</em>, it’s also the monk Nanda. For this reason, the monk Nanda is upright and peaceful in his manner.”
-{:#p20}
-
-21\. The Bhagavān then told the monks, “Among my disciples, the most upright is the monk Nanda. In having a peaceful manner, it’s also the monk Nanda who is best.”
-{:#p21}
-
-22\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p22}
-
----
-
-### Notes
-
-1. {:#n1} <em>Nāgapuṣpa Park</em>. C. 象華園. Presumably, C. 象華 (lit. “elephant flower”) is a lit. translation of S. <em>nāgapuṣpa</em> (G. <em>nagapuṣpa</em>). This was probably an ancient name of the Indian Ironwood tree (<a href="https://en.wikipedia.org/wiki/Mesua_ferrea" target="_blank"><em>Mesua ferrea</em></a>), the flowers of which figured as gifts in past life stories about previous <em>buddha</em>s in Pali commentaries. S. <em>nāgapuṣpikā</em> was also the name of a kind of yellow jasmine, but a park was more likely to be named after a tree. [\[back\]](#ref1)
-2. {:#n2} <em>Śakyan woman Sundarī</em>. C. 孫陀利釋種女, S. <em>sundarī śākyakanyā</em>. Nanda was the Buddha’s half-brother (by a different mother). Most Buddhist stories about his becoming a monk claim that he was engaged to be married when the Buddha convinced him to leave the lay life. These sources disagree as to this woman’s name, however. The Theravāda tradition says she was Janapadakalyānī Nandā. A Sanskrit tradition says she was named Yaśodharā. In the present tradition, she was apparently named Sundarī. It isn’t clear whether Nanda had actually married her in this version of events. It would seem so since she had remained single while he was a monk in this story, as is often the case in stories of monks having encounters with former romantic interests. [\[back\]](#ref2)
-3. {:#n3} <em>an indifferent manner</em>. C. 諸根澹泊. I’m reading 諸根 to mean one’s face and limbs rather than the sense faculties (sight, hearing, etc.). This is a less common meaning of the word, which is most often used when someone sees the Buddha and notices how serene he appears. That reading fits this passage better to me. If we read 諸根 with its more common meaning, the passage would mean “senses that are indifferent,” and at the end of the paragraph “senses that are indifferent.” [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 31 August 2023
-{: .revised}
-
----
+<hr/>
