--- a/01_agama/ekottarika/13/EA_13_01.md
+++ b/01_agama/ekottarika/13/EA_13_01.md
@@ -1,42 +1,51 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 13. Profit | 1. Surādha'
+title: 'The Numerical Discourses | Chapter 13: Profit | 1. Surādha'
 type: kramdown
 base: ../../../
 previous: ../12/EA_12_10.html
 next: ../13/EA_13_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 13: Profit
-### 1. Surādha
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 13: Profit</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一) 修羅陀</th>
+  <th class='en'>1. Surādha</th>
+  <tr>
+    <td class='ch' title='T125.2.571a27'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a28'>爾時，世尊告諸比丘： 「受人利養甚為不易，令人不得至無為之處。 所以然者？ 若修羅陀比丘不貪利養者，終不於法中捨三法衣，而作居家。 修羅陀比丘大作阿練若行，到時乞食。 一處一坐，或正中食。 樹下、露坐，樂閑居之處。 著五納衣，或持三衣。 或樂塚間。 懃身苦行，行此頭陀。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing, for it prevents a person from reaching the unconditioned state. Why is that? If that monk Surādha<sup id="ref2"><a href="#n2">2</a></sup> hadn’t been greedy for profit, he never would have renounced the three Dharma robes and returned to being a householder. The monk Surādha had been a great forest-dweller who solicited alms when the time arrived. He would dwell in one place for one sitting, and he sometimes ate at midday. He would sit under a tree or on open ground, and he was happy living in a secluded placed. He wore the five-piece robe, and sometimes he kept three garments. Sometimes, he enjoyed being in a charnel ground. He applied himself to such hardship as he performed these ascetic practices.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571b5'>「是時，修羅陀比丘常受蒲呼國王供養，以百味之食日來給與。 爾時，彼比丘意染此食，漸捨阿練若行、到時乞食、一處一坐、正中食、樹下露坐、閑居之處、著五納衣、或持三衣、或樂塚間、懃身苦體。 盡捨此已，去三法衣，還為白衣。 屠牛，殺生不可稱計。 身壞、命終，生地獄中。</td>
+    <td id='p3'>3. “But then, the monk Surādha always accepted gifts when the King summoned him, who provided meals of a hundred flavors on the days that he came. That monk’s mind became attached to these meals, and he eventually abandoned the forest-dwelling life, soliciting alms when the time arrived, dwelling in one place for one sitting, eating at midday, sitting under a tree or on open ground, living in a secluded place, wearing the five-piece robe, sometimes keeping three garments, sometimes enjoying being in a charnel ground, and applying oneself to these hardships. Once he had abandoned these things completely, he left behind the three Dharma garments and returned to wearing white clothes. He became a butcher of cattle, killing an inestimable number of beings. He was born in Hell when his body broke up and his life ended.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571b12'>「諸比丘，以此方便知利養甚重，令人不得至無上、正真之道。 若未生利養，制令不生。 已生，求方便使滅。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should know from this that profit is a serious thing, for it prevents a person from reaching the unsurpassed and true awakening. If thoughts of profit have yet to arise, they should be controlled and prevented from arising. If they’ve already arisen, work to make them cease. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571b15'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing, for it prevents a person from reaching the unconditioned state. Why is that? If that monk Surādha[\[1\]](#n1){:#ref1} hadn’t been greedy for profit, he never would have renounced the three Dharma robes and returned to being a householder. The monk Surādha had been a great forest-dweller who solicited alms when the time arrived. He would dwell in one place for one sitting, and he sometimes ate at midday. He would sit under a tree or on open ground, and he was happy living in a secluded placed. He wore the five-piece robe, and sometimes he kept three garments. Sometimes, he enjoyed being in a charnel ground. He applied himself to such hardship as he performed these ascetic practices.
-{:#p2}
+<hr/>
 
-3\. “But then, the monk Surādha always accepted gifts when the King summoned him, who provided meals of a hundred flavors on the days that he came. That monk’s mind became attached to these meals, and he eventually abandoned the forest-dwelling life, soliciting alms when the time arrived, dwelling in one place for one sitting, eating at midday, sitting under a tree or on open ground, living in a secluded place, wearing the five-piece robe, sometimes keeping three garments, sometimes enjoying being in a charnel ground, and applying oneself to these hardships. Once he had abandoned these things completely, he left behind the three Dharma garments and returned to wearing white clothes. He became a butcher of cattle, killing an inestimable number of beings. He was born in Hell when his body broke up and his life ended.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you should know from this that profit is a serious thing, for it prevents a person from reaching the unsurpassed and true awakening. If thoughts of profit have yet to arise, they should be controlled and prevented from arising. If they’ve already arisen, work to make them cease. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0571a27" target="_blank">T125.2.571a27-b16</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Surādha</em>. C. 修羅陀 (EMC. siəu-la-da = G. <em>surada</em>?), P. <em>surādha</em>?. A monk by this name is briefly mentioned in EĀ 49.9 as Devadatta’s first teacher, but there’s no indication that he was corrupted like Devadatta. There is also a monk named Surādha in P. sources who was a relative of Rādha and became an <em>arhat</em>. It’s a bit of a mystery who exactly this <em>sūtra</em> is discussing. Perhaps there was a tradition in which Devadatta’s teacher later returned to the lay life. Here, he is depicted as being an exemplar of the ascetic practice who lost his way. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 12 July 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} <em>Surādha</em>. C. 修羅陀 (EMC. siəu-la-da = G. <em>surada</em>?), P. <em>surādha</em>?. A monk by this name is briefly mentioned in EĀ 49.9 as Devadatta’s first teacher, but there’s no indication that he was corrupted like Devadatta. There is also a monk named Surādha in P. sources who was a relative of Rādha and became an <em>arhat</em>. It’s a bit of a mystery who exactly this <em>sūtra</em> is discussing. Perhaps there was a tradition in which Devadatta’s teacher later returned to the lay life. Here, he is depicted as being an exemplar of the ascetic practice who lost his way. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 12 July 2023
-{: .revised}
-
----
+<hr/>
