--- a/01_agama/ekottarika/13/EA_13_02.md
+++ b/01_agama/ekottarika/13/EA_13_02.md
@@ -1,41 +1,64 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 13. Profit | 2. Enjoyment of Desires'
+title: 'The Numerical Discourses | Chapter 13: Profit | 2. Enjoyment of Desires'
 type: kramdown
 base: ../../../
 previous: EA_13_01.html
 next: EA_13_03.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 13: Profit
-### 2. Enjoyment of Desires
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 13: Profit</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(二) 味欲</th>
+  <th class='en'>2. Enjoyment of Desires</th>
+  <tr>
+    <td class='ch' title='T125.2.571b17'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571b18'>爾時，世尊告諸比丘： 「當滅一法，我證汝等成果神通，諸漏得盡。 云何為一法？ 所謂味欲。 是故，諸比丘，當滅此味欲，我證汝等成神通果，諸漏得盡。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Should you cease one thing, I’ll bear witness that you’ve achieved the fruit of spiritual knowledge and the end of the contaminants. What is that one thing? It’s enjoyment of desires. Therefore, monks, should you cease the enjoyment of desires, I’ll bear witness that you’ve achieved the fruit of spiritual knowledge and the end of the contaminants.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571b21'>爾時，世尊便説此偈：</td>
+    <td id='p3'>3. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.571b23'><ul class='verse'>
+    <li class='ch'>眾生著此味<br/>
+    死墮惡趣中。<br/>
+    今當捨此欲，<br/>
+    便成阿羅漢。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Sentient beings attached to enjoyments<br/>
+    Fall to bad destinations when they die.<br/>
+    If you should abandon these desires now,<br/>
+    You’ll achieve the fruit of the arhats.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.571b25'>是故，諸比丘，常當捨此味著之想。 如是，諸比丘當作是學。</td>
+    <td id='p4'>4. “Therefore, monks, you must always abandon notions that are attached to enjoyment [of desires]. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571b26'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Should you cease one thing, I’ll bear witness that you’ve achieved the fruit of spiritual knowledge and the end of the contaminants. What is that one thing? It’s enjoyment of desires. Therefore, monks, should you cease the enjoyment of desires, I’ll bear witness that you’ve achieved the fruit of spiritual knowledge and the end of the contaminants.”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then spoke in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“Sentient beings attached to enjoyments\\
-Fall to bad destinations when they die.\\
-If you should abandon these desires now,\\
-You’ll achieve the fruit of the arhats.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0571b17" target="_blank">T125.2.571b17-27</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-4\. “Therefore, monks, you must always abandon notions that are attached to enjoyment [of desires]. Thus, monks, you should train yourselves.”
-{:#p4}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 12 July 2023</p>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 12 July 2023
-{: .revised}
-
----
+<hr/>
