--- a/01_agama/ekottarika/13/EA_13_06.md
+++ b/01_agama/ekottarika/13/EA_13_06.md
@@ -1,80 +1,158 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 13. Profit | 6. Good Deeds'
+title: 'The Numerical Discourses | Chapter 13: Profit | 6. Good Deeds'
 type: kramdown
 base: ../../../
 previous: EA_13_05.html
 next: EA_13_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 13: Profit
-### 6. Good Deeds
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 13: Profit</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a great assembly of five hundred monks.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六) 善業</th>
+  <th class='en'>6. Good Deeds</th>
+  <tr>
+    <td class='ch' title='T125.2.575a5'>聞如是： 一時，佛在羅閲城、耆闍崛山中。 與大比丘五百人倶。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by a great assembly of five hundred monks.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.575a6'>爾時，釋提桓因，日時已過向暮，便往至世尊所。 頭面禮足，在一面坐。 爾時，釋提桓因即以偈頌問如來義：</td>
+    <td id='p2'>2. One day, Śakra the Lord of Gods<sup id="ref2"><a href="#n2">2</a></sup> visited the Bhagavān after nightfall. He bowed his head at the Buddha’s feet and then stood to one side. Śakra then asked about the Tathāgata’s teaching in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.575a10'><ul class='verse'>
+    <li class='ch'>「能説能宣布，<br/>
+    渡流成無漏<br/>
+    以渡生死淵？<br/>
+    今問瞿曇義。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Could you say, could you explain in detail,<br/>
+    How to cross the flood and be uncontaminated,<br/>
+    How to cross the sea of mortality?<br/>
+    I now ask Gautama about this subject.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575a12'><ul class='verse'>
+    <li class='ch'>我觀此眾生<br/>
+    所作福祐業。<br/>
+    造行若干種<br/>
+    施誰福最尊？</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>I’ve observed these sentient beings here<br/>
+    And their performance of blessed deeds.<br/>
+    Of the many kinds of practitioners,<br/>
+    A gift to whom is a blessing most honored?</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575a14'><ul class='verse'>
+    <li class='ch'>尊今靈鷲山：<br/>
+    唯願演此義，<br/>
+    知釋意所趣<br/>
+    亦為施者宣。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>To the sage who’s here now on Vulture’s Peak:<br/>
+    Please give me a teaching on this subject,<br/>
+    So I’ll know the gist of the Śākyan’s thought<br/>
+    And get an explanation on giving.”</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575a16'><ul class='verse'>
+    <li class='ch'>「四趣造福無，<br/>
+    四果具足成。<br/>
+    諸學得跡人<br/>
+    宜信奉其法。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“The four who make merit for cessation,<sup id="ref3"><a href="#n3">3</a></sup><br/>
+    And the four who’ve fully achieved the fruits.<br/>
+    It’s the trainees and realizers of the path<br/>
+    Who ought to be believed, their Dharma served.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575a18'><ul class='verse'>
+    <li class='ch'>無欲亦無恚，<br/>
+    愚盡成無漏。<br/>
+    盡度一切淵，<br/>
+    施彼成大果。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>When someone lacks any desire or anger,<br/>
+    Their foolishness and contamination ends.<br/>
+    Those who completely cross the whole ocean,<br/>
+    Giving to them achieves a great reward.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575a20'><ul class='verse'>
+    <li class='ch'>諸此眾生類<br/>
+    所作福徳業。<br/>
+    造行若干種，<br/>
+    施僧獲福多。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>These are the classes of sentient beings<br/>
+    Who do virtuous deeds that make merit.<br/>
+    Of the many kinds of practitioners,<br/>
+    Giving to the Saṅgha obtains much merit.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575a22'><ul class='verse'>
+    <li class='ch'>此眾度無量<br/>
+    猶海出珍寶。<br/>
+    聖眾亦如是，<br/>
+    演慧光明法。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>The assemblies are broad and measureless<br/>
+    Like the treasures that come from the ocean.<br/>
+    The noble assemblies are just the same,<br/>
+    For they explain the wise Dharma of light.”</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.575a24'><ul class='verse'>
+    <li class='ch'>「瞿曇彼善處<br/>
+    能施眾僧者。<br/>
+    獲福不可計，<br/>
+    最勝之所説。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Kauśika,<sup id="ref4"><a href="#n4">4</a></sup> a good place is<br/>
+    Where one can give to the Saṅgha.<br/>
+    They’ll obtain merits inestimable,<br/>
+    For their teaching is the Supreme Victor’s.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.574a26'>爾時，釋提桓因聞佛所説已，即禮佛足，便於彼退而去。 爾時，釋提桓因聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. Once Śakra the Lord of Gods heard what the Buddha taught, he bowed at the Buddha’s feet, withdrew from him, and departed. When Śakra the Lord of Gods heard what the Buddha taught, he rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. One day, Śakra the Lord of Gods[\[2\]](#n2){:#ref2} visited the Bhagavān after nightfall. He bowed his head at the Buddha’s feet and then stood to one side. Śakra then asked about the Tathāgata’s teaching in verse:
-{:#p2}
+<hr/>
 
-* {:.verse}“Could you say, could you explain in detail,\\
-How to cross the flood and be uncontaminated,\\
-How to cross the sea of mortality?\\
-I now ask Gautama about this subject.
+<h3 id="notes">Notes</h3>
 
-* {:.verse}I’ve observed these sentient beings here\\
-And their performance of blessed deeds.\\
-Of the many kinds of practitioners,\\
-A gift to whom is a blessing most honored?
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0575a05" target="_blank">T125.2.575a5-28</a>. This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn11.16" target="_blank">SN 11.16</a>, SĀ 19.21-22, and T100.52. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Śakra the Lord of Gods</em>. C. 釋提桓因 (EMC. ʃɪɛk-dei-ɦuan-•iĕn = G. <em>śak[ra]-devan[aṃ]-iṃ[dra]</em> = S. <em>śakro-devānām-indrah</em>). This was a well-known abbreviated translit. for Śakra’s full title as the Lord of Gods. The <em>-v-</em> in <em>deva</em> was pronounced as a <em>-w-</em>. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>cessation</em>. Here, 無 appears to be a verb meaning “to become inexistent,” which I take to refer to <em>nirvāṇa</em>. I’ve translated it more literally as “cessation.” [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>Kauśika</em>. C. 拘翼 (EMC. kɪu-yiək). G. <em>koyig[a]</em> > G. <em>kośiga</em>? > S. <em>kauśika</em>. The derivation of what the C. transliterates is unclear to me since it’s not typical that <em>-ś-</em> becomes <em>-y-</em> in G. sources, but it appears to be the case here.</p>
+<p>I’ve followed the alternate reading, which makes this last stanza the Buddha’s conclusion. The Taisho reads 瞿曇 (“Gautama”) instead, which would make it Śakra addressing the Buddha. [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}To the sage who’s here now on Vulture’s Peak:\\
-Please give me a teaching on this subject,\\
-So I’ll know the gist of the Śākyan’s thought\\
-And get an explanation on giving.”
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 25 July 2023</p>
 
-* {:.verse}“The four who make merit for cessation,[\[3\]](#n3){:#ref3}\\
-And the four who’ve fully achieved the fruits.\\
-It’s the trainees and realizers of the path\\
-Who ought to be believed, their Dharma served.
-
-* {:.verse}When someone lacks any desire or anger,\\
-Their foolishness and contamination ends.\\
-Those who completely cross the whole ocean,\\
-Giving to them achieves a great reward.
-
-* {:.verse}These are the classes of sentient beings\\
-Who do virtuous deeds that make merit.\\
-Of the many kinds of practitioners,\\
-Giving to the Saṅgha obtains much merit.
-
-* {:.verse}The assemblies are broad and measureless\\
-Like the treasures that come from the ocean.\\
-The noble assemblies are just the same,\\
-For they explain the wise Dharma of light.”
-
-* {:.verse}Kauśika,[\[4\]](#n4){:#ref4} a good place is\\
-Where one can give to the Saṅgha.\\
-They’ll obtain merits inestimable,\\
-For their teaching is the Supreme Victor’s.”
-
-4\. Once Śakra the Lord of Gods heard what the Buddha taught, he bowed at the Buddha’s feet, withdrew from him, and departed. When Śakra the Lord of Gods heard what the Buddha taught, he rejoiced and approved.
-{:#p4}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn11.16" target="_blank">SN 11.16</a>, SĀ 19.21-22, and T100.52. [\[back\]](#ref1)
-2. {:#n2} <em>Śakra the Lord of Gods</em>. C. 釋提桓因 (EMC. ʃɪɛk-dei-ɦuan-•iĕn = G. <em>śak[ra]-devan[aṃ]-iṃ[dra]</em> = S. <em>śakro-devānām-indrah</em>). This was a well-known abbreviated translit. for Śakra’s full title as the Lord of Gods. The <em>-v-</em> in <em>deva</em> was pronounced as a <em>-w-</em>. [\[back\]](#ref2)
-3. {:#n3} <em>cessation</em>. Here, 無 appears to be a verb meaning “to become inexistent,” which I take to refer to <em>nirvāṇa</em>. I’ve translated it more literally as “cessation.” [\[back\]](#ref3)
-4. {:#n4} <em>Kauśika</em>. C. 拘翼 (EMC. kɪu-yiək). G. <em>koyig[a]</em> > G. <em>kośiga</em>? > S. <em>kauśika</em>. The derivation of what the C. transliterates is unclear to me since it’s not typical that <em>-ś-</em> becomes <em>-y-</em> in G. sources, but it appears to be the case here.<br/>
-I’ve followed the alternate reading, which makes this last stanza the Buddha’s conclusion. The Taisho reads 瞿曇 (“Gautama”) instead, which would make it Śakra addressing the Buddha. [\[back\]](#ref4)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 25 July 2023
-{: .revised}
-
----
+<hr/>
