--- a/01_agama/ekottarika/14/EA_14_02.md
+++ b/01_agama/ekottarika/14/EA_14_02.md
@@ -1,36 +1,50 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 2. Not Killing Beings'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 2. Not Killing Beings'
 type: kramdown
 base: ../../../
 previous: EA_14_01.html
 next: EA_14_03.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 2. Not Killing Beings
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(二) 不殺生</th>
+  <th class='en'>2. Not Killing Beings</th>
+  <tr>
+    <td class='ch' title='T125.2.576a23'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a24'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福，受天上福，得泥洹證。 所謂不殺生也。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not killing beings.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a26'>佛告諸比丘： 「若有人不行殺生亦不念殺，受命極長。 所以然者？ 以彼不嬈亂故。</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person doesn’t kill beings and doesn’t think about killing, they’ll have a very long life. Why is that? Because they don’t hurt others.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a28'>「是故，諸比丘，當學不殺生。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should train in not killing beings. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576a29'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not killing beings.”
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person doesn’t kill beings and doesn’t think about killing, they’ll have a very long life. Why is that? Because they don’t hurt others.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you should train in not killing beings. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576a23" target="_blank">T125.2.576a23-b1</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 27 July 2023</p>
 
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 27 July 2023
-{: .revised}
-
----
+<hr/>
