--- a/01_agama/ekottarika/14/EA_14_04.md
+++ b/01_agama/ekottarika/14/EA_14_04.md
@@ -1,43 +1,52 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 4. Generosity'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 4. Generosity'
 type: kramdown
 base: ../../../
 previous: EA_14_03.html
 next: EA_14_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 4. Generosity
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 廣施</th>
+  <th class='en'>4. Generosity</th>
+  <tr>
+    <td class='ch' title='T125.2.576b12'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b13'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福，受天上福，得泥洹證。 所謂廣施也。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s generosity.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b15'>佛告諸比丘： 「若有人廣行布施，於現世中，得色，得力，眾得具足。 天上人中食福，無量⋯</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person widely practices generosity, they’ll attain the forms and powers that are perfected by many virtues.<sup id="ref2"><a href="#n2">2</a></sup> They’ll enjoy the food and merits that are up in Heaven and among humans, which are measureless …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b17'>「是故，諸比丘，當行布施勿有慳心。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should practice generosity and not be stingy. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b19'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s generosity.”
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person widely practices generosity, they’ll attain the forms and powers that are perfected by many virtues.[\[1\]](#n1){:#ref1} They’ll enjoy the food and merits that are up in Heaven and among humans, which are measureless …
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, you should practice generosity and not be stingy. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576b12" target="_blank">T125.2.576b12-9</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>they’ll attain the forms and powers that are perfected by many virtues</em>. C. 得色，得力，眾得具足. I’ve adopted an alternate that changes the end of this sentence to 眾<strong>德</strong>具足 (change bolded). Uncorrected, the Taisho reads: “their attainment of form, attainment of powers, and many attainments will be perfected.” Either way, this is a reference to being reborn as a wheel-turning king or a god like Śakra or Brahmā due to one’s past good deeds.</p>
+<p>It should be noted, too, that the conclusion at the end of this paragraph has been lost. This is the case for most (EĀ 14.4-6 and 8-10) of the <em>sūtra</em>s in this chapter. It’s not possible to reconstruct these conclusions precisely, but they are statements about the consequences of doing the good or bad action in question (cf. EĀ 14.1-3 and 7). [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 27 July 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} <em>they’ll attain the forms and powers that are perfected by many virtues</em>. C. 得色，得力，衆得具足. I’ve adopted an alternate that changes the end of this sentence to 衆<strong>德</strong>具足 (change bolded). Uncorrected, the Taisho reads: “their attainment of form, attainment of powers, and many attainments will be perfected.” Either way, this is a reference to being reborn as a wheel-turning king or a god like Śakra or Brahmā due to one’s past good deeds.<br/>
-It should be noted, too, that the conclusion at the end of this paragraph has been lost. This is the case for most (EĀ 14.4-6 and 8-10) of the <em>sūtra</em>s in this chapter. It’s not possible to reconstruct these conclusions precisely, but they are statements about the consequences of doing the good or bad action in question (cf. EĀ 14.1-3 and 7). [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 27 July 2023
-{: .revised}
-
----
+<hr/>
