--- a/01_agama/ekottarika/14/EA_14_05.md
+++ b/01_agama/ekottarika/14/EA_14_05.md
@@ -1,36 +1,50 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 5. Wrong Sex'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 5. Wrong Sex'
 type: kramdown
 base: ../../../
 previous: EA_14_04.html
 next: EA_14_06.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 5. Wrong Sex
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五) 邪婬</th>
+  <th class='en'>5. Wrong Sex</th>
+  <tr>
+    <td class='ch' title='T125.2.576b20'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b21'>爾時世尊告諸比丘： 「於此眾中，不見一法修行已、多修行已，成地獄、餓鬼、畜生行。 若生人中，居家姦婬，無有淨行。 為人所譏，常被誹謗。 云何一法？ 所謂邪婬也。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals. If they were born among humans, a person will be made to live in a household where adultery is practiced, that lacks pure living. People will gossip and constantly slander them. What is that one thing? It’s wrong sex.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b24'>佛告諸比丘： 「若有人婬泆無度，好犯他妻，便墮地獄、餓鬼、畜生中。 若生人中，閨門婬亂⋯</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person is wanton without limit and likes violating others’ wives, they will readily fall into Hell, among hungry ghosts, or among animals. If they are born among humans, there will be debauchery in their household …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b27'>「是故，諸比丘，常當正意。 莫興婬想，愼莫他婬。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, one should always be right minded. Don’t produce notions of lust, and take care not to have such relations with others. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576b28'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals. If they were born among humans, a person will be made to live in a household where adultery is practiced, that lacks pure living. People will gossip and constantly slander them. What is that one thing? It’s wrong sex.
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person is wanton without limit and likes violating others’ wives, they will readily fall into Hell, among hungry ghosts, or among animals. If they are born among humans, there will be debauchery in their household …
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, one should always be right minded. Don’t produce notions of lust, and take care not to have such relations with others. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576b20" target="_blank">T125.2.576b20-9</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 31 July 2023</p>
 
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 31 July 2023
-{: .revised}
-
----
+<hr/>
