--- a/01_agama/ekottarika/14/EA_14_06.md
+++ b/01_agama/ekottarika/14/EA_14_06.md
@@ -1,42 +1,51 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 6. No Wrong Sex'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 6. No Wrong Sex'
 type: kramdown
 base: ../../../
 previous: EA_14_05.html
 next: EA_14_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 6. No Wrong Sex
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六) 無邪想</th>
+  <th class='en'>6. No Wrong Sex</th>
+  <tr>
+    <td class='ch' title='T125.2.576c1'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c2'>爾時，佛告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福，受天上福，得泥洹證。 所謂不他婬，身體香潔，亦無邪想。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not engaging in wrong sex.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c5'>佛告諸比丘： 「若有人貞潔、不婬，便受天上、人中之福。</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person is chaste and not lustful, keeps themselves fragrant, and doesn’t have wrong notions, then they’ll receive the merits that are up in Heaven or among humans …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c6'>「是故，諸比丘，莫行邪婬以興婬意。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, don’t practice wrong sex or produce lustful thinking. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c7'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not engaging in wrong sex.”[\[1\]](#n1){:#ref1}
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person is chaste and not lustful, keeps themselves fragrant, and doesn’t have wrong notions, then they’ll receive the merits that are up in Heaven or among humans …
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, don’t practice wrong sex or produce lustful thinking. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576c01" target="_blank">T125.2.576c1-8</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>It’s not engaging in wrong sex</em>. C. 所謂不他婬，身體香潔，亦無邪想. In older alternate readings, the phrase “身體香潔，亦無邪想” appears in the next paragraph. Given that the other <em>sūtra</em>s in this chapter lack such elaborations here, I’ve adopted the alternate reading. Uncorrected, the Taisho reads: “It’s not engaging in wrong sex, keeping oneself fragrant, and not having wrong notions.” [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 31 July 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} <em>It’s not engaging in wrong sex</em>. C. 所謂不他婬，身體香潔，亦無邪想. In older alternate readings, the phrase “身體香潔，亦無邪想” appears in the next paragraph. Given that the other <em>sūtra</em>s in this chapter lack such elaborations here, I’ve adopted the alternate reading. Uncorrected, the Taisho reads: “It’s not engaging in wrong sex, keeping oneself fragrant, and not having wrong notions.” [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 31 July 2023
-{: .revised}
-
----
+<hr/>
