--- a/01_agama/ekottarika/14/EA_14_08.md
+++ b/01_agama/ekottarika/14/EA_14_08.md
@@ -1,36 +1,50 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 8. Not Speaking Falsely'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 8. Not Speaking Falsely'
 type: kramdown
 base: ../../../
 previous: EA_14_07.html
 next: EA_14_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 8. Not Speaking Falsely
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八) 不妄語</th>
+  <th class='en'>8. Not Speaking Falsely</th>
+  <tr>
+    <td class='ch' title='T125.2.576c18'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c19'>爾時世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福、受天上福、得泥洹證。 云何為一法？ 所謂不妄語也。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not speaking falsely.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c22'>「諸比丘，其不妄語者，口氣香芬，名徳遠聞。</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person doesn’t speak falsely, their breath will be fragrant, and their famous virtue will be heard about far away …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c23'>「是故，諸比丘，當行莫妄語。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks you should train in not speaking falsely. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.576c24'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not speaking falsely.
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person doesn’t speak falsely, their breath will be fragrant, and their famous virtue will be heard about far away …
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks you should train in not speaking falsely. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576c18" target="_blank">T125.2.576c18-24</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 31 July 2023</p>
 
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 31 July 2023
-{: .revised}
-
----
+<hr/>
