--- a/01_agama/ekottarika/14/EA_14_10.md
+++ b/01_agama/ekottarika/14/EA_14_10.md
@@ -1,48 +1,70 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 14. Five Precepts | 10. Not Drinking Alcohol'
+title: 'The Numerical Discourses | Chapter 14: The Five Precepts | 10. Not Drinking Alcohol'
 type: kramdown
 base: ../../../
 previous: EA_14_09.html
 next: ../15/EA_15_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 14: The Five Precepts
-### 10. Not Drinking Alcohol
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 14: The Five Precepts</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇) 不飮酒</th>
+  <th class='en'>10. Not Drinking Alcohol</th>
+  <tr>
+    <td class='ch' title='T125.2.577a4'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a5'>爾時，世尊告諸比丘： 「於此眾中，無有一法勝此法者，若修行已、多修行已，受人中福、受天上福、得泥洹證。 云何為一法？ 所謂不飮酒也。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There isn’t anything in this assembly greater than this one thing<sup id="ref2"><a href="#n2">2</a></sup> that when cultivated and cultivated often brings the merits that are among humans, merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not drinking alcohol.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a8'>「諸比丘，若有人不飮酒，生便聰明，無有愚惑，博知經籍。 意不錯亂⋯</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person doesn’t drink alcohol and doesn’t think about drinking alcohol, they’ll be born intelligent, have no foolish delusions, and widely know the <em>sūtra</em>s. Their mind won’t be in disarray … </td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a9'>「如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Thus, monks, you should train yourselves.”<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577a10'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.577a12'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.577a12'><ul class='verse'>
+    <li class='ch'>第五地獄經，<br/>
+    此名不善行，<br/>
+    五者天及人<br/>
+    令知次第數。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Five <em>sūtra</em>s about Hell,<br/>
+    Named for unskillful practices,<br/>
+    And five on Heaven and humans<br/>
+    Made know in their order.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There isn’t anything in this assembly greater than this one thing[\[1\]](#n1){:#ref1} that when cultivated and cultivated often brings the merits that are among humans, merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not drinking alcohol.”
-{:#p2}
+<hr/>
 
-3\. The Buddha told the monks, “If a person doesn’t drink alcohol and doesn’t think about drinking alcohol, they’ll be born intelligent, have no foolish delusions, and widely know the <em>sūtra</em>s. Their mind won’t be in disarray … 
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Thus, monks, you should train yourselves.”[\[2\]](#n2){:#ref2}
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0577a04" target="_blank">T125.2.577a4-11</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>There isn’t anything in this assembly greater than this one thing</em>. C. 於此眾中無有一法勝此法者. This final <em>sūtra</em> of the chapter has a different translation of the opening line that makes better sense than the rest. Lit., it reads: “There isn’t a single thing greater than this thing …” This does at least confirm that it is what was intended. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p>The first statement beginning these conclusions has been lost. Since these pithy statements were unique to each text, I’ve not tried to reconstruct it. Presumably, it was along the lines of “Therefore, monks, you should train in not drinking alcohol.” [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 31 July 2023</p>
 
-* {:.verse}Five <em>sūtra</em>s about Hell,\\
-Named for unskillful practices,\\
-And five on Heaven and humans\\
-Made know in their order.
-
----
-
-### Notes
-
-1. {:#n1} <em>There isn’t anything in this assembly greater than this one thing</em>. C. 於此衆中無有一法勝此法者. This final <em>sūtra</em> of the chapter has a different translation of the opening line that makes better sense than the rest. Lit., it reads: “There isn’t a single thing greater than this thing …” This does at least confirm that it is what was intended. [\[back\]](#ref1)
-2. {:#n2} The first statement beginning these conclusions has been lost. Since these pithy statements were unique to each text, I’ve not tried to reconstruct it. Presumably, it was along the lines of “Therefore, monks, you should train in not drinking alcohol.” [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 31 July 2023
-{: .revised}
-
----
+<hr/>
