--- a/01_agama/ekottarika/15/EA_15_10.md
+++ b/01_agama/ekottarika/15/EA_15_10.md
@@ -1,44 +1,61 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 15. Existence and Inexistence | 10. Right View'
+title: 'The Numerical Discourses | Chapter 15: Existence and Inexistence | 10. Right View'
 type: kramdown
 base: ../../../
 previous: EA_15_09.html
 next: ../16/EA_16_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 15: Existence and Inexistence
-### 10. Right View
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 15: Existence and Inexistence</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇) 正見</th>
+  <th class='en'>10. Right View</th>
+  <tr>
+    <td class='ch' title='T125.2.578a4'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.578a5'>爾時，世尊告諸比丘： 「有二因、二縁起於正見。 云何為二？ 受法教化，内思止、觀。 是謂，比丘，有此二因、二縁起於正見。 如是，諸比丘，當作是學。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two causes and two conditions that produce right view. What are the two? Accepting the Dharma teaching and inner thought that’s calming and contemplative.<sup id="ref2"><a href="#n2">2</a></sup> Monks, these are two causes and two conditions that produce right view. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.578a8'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p3'>3. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.578a10'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.578a10'><ul class='verse'>
+    <li class='ch'>二見及二施，<br/>
+    愚者有二相，<br/>
+    禮法、如來廟，<br/>
+    正見最在後。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[1-2] Two views and [3-5] two gifts,<br/>
+    [6] Two signs of a fool,<br/>
+    [7-9] Honoring the Dharma and the Tathāgata’s shrine,<br/>
+    And the last is [10] right view.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are two causes and two conditions that produce right view. What are the two? Accepting the Dharma teaching and inner thought that’s calming and contemplative.[\[2\]](#n2){:#ref2} Monks, these are two causes and two conditions that produce right view. Thus, monks, you should train yourselves.”
-{:#p2}
+<hr/>
 
-3\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-#### Summary Verse
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0578a04" target="_blank">T125.2.578a4-11</a>. Thus <em>sūtra</em> is parallel with <a href="https://suttacentral.net/an2.126" target="_blank">AN 2.126</a>, and it shares the same basic template that we find in <a href="https://suttacentral.net/an2.118" target="_blank">AN 2.118-129</a>. There is also a parallel implied by the two causes and conditions of right view found in the Dharmaguptaka <a href="https://canon.dharmapearls.net/01_agama/dirgha/DA_9.html#p19" target="_blank">DĀ 9 Gathered Saṅgha Sūtra</a> (S. <em>saṅgīti</em>), which was apparently identical to the Theravāda version in content. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>calm and contemplative</em>. C. 止、觀. I.e., S. <em>śamatha</em> and <em>vipāśyana</em>. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}[1-2] Two views and [3-5] two gifts,\\
-[6] Two signs of a fool,\\
-[7-9] Honoring the Dharma and the Tathāgata’s shrine,\\
-And the last is [10] right view.
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 August 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} Thus <em>sūtra</em> is parallel with <a href="https://suttacentral.net/an2.126" target="_blank">AN 2.126</a>, and it shares the same basic template that we find in <a href="https://suttacentral.net/an2.118" target="_blank">AN 2.118-129</a>. There is also a parallel implied by the two causes and conditions of right view found in the Dharmaguptaka <a href="https://canon.dharmapearls.net/01_agama/dirgha/DA_9.html#p19" target="_blank">DĀ 9 Gathered Saṅgha Sūtra</a> (S. <em>saṅgīti</em>), which was apparently identical to the Theravāda version in content. [\[back\]](#ref1)
-2. {:#n2} <em>calm and contemplative</em>. C. 止、觀. I.e., S. <em>śamatha</em> and <em>vipāśyana</em>. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 August 2023
-{: .revised}
-
----
+<hr/>
